commit translated contents

--- a/learn-certs-pr/TOC.yml
+++ b/learn-certs-pr/TOC.yml
@@ -69,6 +69,8 @@
       items:
         - name: Studierendenrabatte
           href: student-discounts.md
+        - name: Schulungen und Zertifizierungen für Studierende
+          href: student-training-and-certification.md
         - name: Leistungspunkte für Zertifizierungsexamen
           href: college-credit.md
     - name: Richtlinien und Vereinbarungen
