--- a/learn-certs-pr/azure-solutions-architect/index.yml
+++ b/learn-certs-pr/azure-solutions-architect/index.yml
@@ -2,76 +2,68 @@
 title: 'Microsoft Certified: Azure Solutions Architect Expert'
 metadata:
   title: 'Microsoft Certified: Azure Solutions Architect Expert'
-  description: 'Azure Solution-Architects entwerfen und implementieren Lösungen, die unter Microsoft Azure ausgeführt werden, einschließlich Aspekten wie Computer, Netzwerk, Speicher und Sicherheit.'
+  description: Benutzer*innen mit der Zertifizierung „Azure Solution Architect Expert“ verfügen über Fachkenntnisse im Entwerfen von Cloud- und Hybridlösungen, die in Microsoft Azure ausgeführt werden, einschließlich von Compute-, Netzwerk-, Speicher-, Überwachungs- und Sicherheitslösungen.
+  ms.openlocfilehash: c85f99d44f62c9eafc292767f7315361b0ba7d22
+  ms.sourcegitcommit: 3a53de64ec81bf478275e0a13a80f3a69bc1e586
+  ms.translationtype: MT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 12/10/2021
+  ms.locfileid: "134680616"
 uid: certification.azure-solutions-architect
 certificationRenewalUid: renewal.azure-solutions-architect
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
-summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 24. September 2021 aktualisiert. Bitte laden Sie die Dokumente zur Kompetenzmessung auf den  <a href="/learn/certifications/exams/az-303">AZ-303</a> und <a href="/learn/certifications/exams/az-304">AZ-304</a> Prüfungsseiten, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
-  
-  Kandidaten für Azure Solutions Architect Expert certification sollten über Fachkenntnisse beim Entwerfen und Implementieren von Lösungen verfügen, die unter Microsoft Azure ausgeführt werden, einschließlich Aspekten wie Computer, Netzwerk, Speicher und Sicherheit. Kandidaten sollten über fortgeschrittene Kenntnisse zur Verwaltung von Azure verfügen.Kandidaten sollten über Azure-Entwicklungs- und DevOps-Prozesse Bescheid wissen.
-  
-  Zu den Aufgabenin dieser Position gehören die Beratung von Stakeholdern und die Umsetzung von Geschäftsanforderungen in sichere, skalierbare und zuverlässige Cloud-Lösungen.
-  
-  Ein Azure Solution Architect arbeitet mit Cloud-Administratoren, Cloud-Datenbankadministratoren und Clients zusammen, um Lösungen zu implementieren.
-  
-  Ein Kandidat für diese Zertifizierung sollte über umfassende Erfahrung und Kenntnisse in verschiedenen Aspekten des IT-Betriebs verfügen, einschließlich Netzwerk, Virtualisierung, Identität, Sicherheit, Geschäftskontinuität, Notfallwiederherstellung, Datenmanagement, Budgetierung und Governance. Jemand in dieser Position sollte Entscheidungen in den einzelnen Bereichen steuern, die eine Gesamtlösung beeinflussen. Darüber hinaus sollte diese Rolle über Expertenkenntnisse in der Azure-Verwaltung verfügen und Erfahrung mit der Azure-Entwicklung und den DevOps-Prozessen haben.
-subTitle: Azure Solution-Architects entwerfen und implementieren Lösungen, die unter Microsoft Azure ausgeführt werden, einschließlich Aspekten wie Computer, Netzwerk, Speicher und Sicherheit.
+summary: >-
+  <div><div><strong>WICHTIG: </strong>EXAM AZ-303 UND EXAM AZ-304 LAUFEN AM 31. MÄRZ 2022 AUS. Eine Ersatzprüfung (<a href="/learn/certifications/exams/az-305">Exam AZ-305</a>) ist verfügbar.<br/><br/><strong>Um diese Zertifizierung zu erhalten, müssen Sie die folgenden Anforderungen erfüllen:</strong><ul>
+
+  <li>Erwerben der Zertifizierung <a href="/learn/certifications/azure-administrator/">Microsoft Certified: Azure Administrator Associate</a> und Bestehen von <a href="/learn/certifications/exams/az-305">Exam AZ-305</a> <strong>oder</strong></li>
+
+  <li>Bestehen Sie das <a href="/learn/certifications/exams/az-303">Examen AZ-303</a> und das <a href="/learn/certifications/exams/az-304">Examen AZ-304</a> <em>(bevor sie am 31. März 2022 auslaufen)</em>, <strong>oder</strong></li>
+
+  <li>Bestehen der <a href="/learn/certifications/exams/az-303">Prüfung AZ-303</a> <em>(vor deren Auslaufen am 31. März 2022)</em> und der <a href="/learn/certifications/exams/az-305">Prüfung AZ-305</a></li>
+
+  </ul>In <a href="https://aka.ms/AzureSlnsArchBlog">diesem Blogbeitrag</a> finden Sie weitere Informationen zu Zertifizierungsmöglichkeiten.<br/><br/></div>
+
+  <div><strong>Der Inhalt dieser Zertifizierung wurde am 23. November 2021 aktualisiert. Laden Sie das Dokument mit den bewerteten Qualifikationen auf den Seiten <a href="/learn/certifications/exams/az-303">Exam AZ-303</a> und <a href="/learn/certifications/exams/az-304">Exam AZ-304</a> herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div></div>
+
+
+  Kandidat*innen für die Zertifizierung „Azure Solutions Architect Expert“ sollten über Fachkenntnisse im Entwerfen von Cloud- und Hybridlösungen verfügen, die in Microsoft Azure ausgeführt werden, einschließlich von Compute-, Netzwerk-, Speicher-, Überwachungs- und Sicherheitslösungen.
+
+
+  Zu den Aufgaben dieser Rolle gehören das Beraten von Projektbeteiligten und Übertragen von Geschäftsanforderungen in Entwürfe für sichere, skalierbare und zuverlässige Azure-Lösungen.
+
+
+  Benutzer*innen mit der Rolle „Azure Solutions Architect Expert“ arbeiten mit Entwickler*innen, Administrator*innen und anderen Rollen zusammen, die für die Implementierung von Lösungen in Azure verantwortlich sind.
+
+
+  Kandidat*innen für diese Zertifizierung sollten über fortgeschrittene Erfahrung und Kenntnisse im Zusammenhang mit IT-Vorgängen haben, einschließlich der Bereiche Netzwerk, Virtualisierung, Identität, Sicherheit, Geschäftskontinuität, Notfallwiederherstellung, Datenplattformen und Governance. Ein Fachkraft in dieser Rolle sollte verwalten, wie sich Entscheidungen in den einzelnen Bereichen auf eine Gesamtlösung auswirken. Darüber hinaus sollte sie über Erfahrung mit der Azure-Verwaltung, der Azure-Entwicklung und DevOps-Prozessen verfügen.
+subTitle: Benutzer*innen mit der Zertifizierung „Azure Solution Architect Expert“ verfügen über Fachkenntnisse im Entwerfen von Cloud- und Hybridlösungen, die in Microsoft Azure ausgeführt werden, einschließlich von Compute-, Netzwerk-, Speicher-, Überwachungs- und Sicherheitslösungen.
 levels:
 - advanced
 skills:
-- Implementieren und Überwachen einer Azure-Infrastruktur
-- Implementierung von Management- und Sicherheitslösungen
-- Implementierung und Verwaltung von Datenplattformen
-- Implement and manage data platforms
-- Entwurfsüberwachung
-- Entwurf Identität und Sicherheit
-- Entwerfen eines Datenspeichers
-- Entwicklung von Geschäftskontinuität
-- Infrastruktur entwerfen
+- Design identity, governance, and monitoring solutions
+- Design data storage solutions
+- Design business continuity solutions
+- Design infrastructure solutions
 roles:
 - solution-architect
 type: role-based
 products:
 - azure
-- azure-active-directory
-- azure-application-gateway
-- azure-virtual-machines
-- azure-virtual-network
-- azure-storage
-- azure-resource-manager
-- azure-site-recovery
-- azure-policy
-- azure-logic-apps
-- azure-functions
-- azure-event-grid
-- azure-service-bus
-- azure-app-service
-- azure-expressroute
-- azure-vpn-gateway
-- azure-kubernetes-service
-- azure-container-instances
-- azure-cosmos-db
-- azure-sql-database
-- azure-event-hubs
-courses:
-- uid: course.az-303t00
-- uid: course.az-304t00
-- uid: course.az-030t00
 paths:
-- uid: learn.architect-network-infrastructure
-- uid: learn.architect-storage-infrastructure
-- uid: learn.architect-compute-infrastructure
-- uid: learn.architect-infrastructure-operations
-- uid: learn.architect-data-platform
-- uid: learn.architect-messaging-serverless
-- uid: learn.architect-modern-apps
-- uid: learn.architect-api-integration
-- uid: learn.architect-migration-bcdr
+- uid: learn.wwl.design-identity-governance-monitor-solutions
+- uid: learn.wwl.design-business-continuity-solutions
+- uid: learn.wwl.design-data-storage-solutions
+- uid: learn.wwl.design-infranstructure-solutions
+- uid: learn.azure-well-architected-framework
+- uid: learn.accelerate-cloud-adoption
+courses:
+- uid: course.az-305t00
+prerequisites:
+- uid: certification.azure-administrator
+  isOptional: false
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VJUW
 exams:
-- uid: exam.az-303
-- uid: exam.az-304
+- uid: exam.az-305
 resources:
 - title: Azure-Zertifizierungsplakat
   description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Azure an.
@@ -79,13 +71,13 @@ resources:
 - title: Reise zur Zertifizierung
   description: Informieren Sie sich über die Schritte zur Zertifizierung als Azure Solutions Architect Expert und über die verfügbaren Ressourcen, die Ihnen bei der Vorbereitung helfen können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4AJyF
-- title: Informieren Sie sich über die Zertifizierungen
+- title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+  href: https://aka.ms/TrainingCertDeck
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Prüfungswiederholung
+  href: https://aka.ms/traincertposter
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Unterstützung von Zertifizierungen
@@ -94,7 +86,6 @@ resources:
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Teilen Sie Ihre Zertifizierungsabzeichen
-  description: Feiern Sie Ihre Leistung mit Ihrem Netzwerk. Fordern Sie Ihr  Microsoft-Certification an und fügen Sie es LinkedIn, Ihrem Lebenslauf und anderem hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
-
