--- a/learn-certs-pr/courses/ms-720t00.yml
+++ b/learn-certs-pr/courses/ms-720t00.yml
@@ -3,19 +3,19 @@ title: Microsoft Teams Voice Engineer
 metadata:
   title: 'Kurs MS-720T00--A: Microsoft Teams Voice Engineer'
   description: 'Kurs MS-720T00--A: Microsoft Teams Voice Engineer'
-  ms.openlocfilehash: 8e7c2c9e5221d8750a6608f9a2032390def5a63f
-  ms.sourcegitcommit: 9ce6bfd5b440f21921db0832e2a560c814478dcb
-  ms.translationtype: HT
+  ms.openlocfilehash: 8154ba7d639f71c9221c754d90a7baf87f256c27
+  ms.sourcegitcommit: c14c3a1e24239ac3e56e978ed347f6d7d24e48d3
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 11/02/2021
-  ms.locfileid: "132113096"
+  ms.lasthandoff: 12/20/2021
+  ms.locfileid: "135417182"
 uid: course.ms-720t00
 courseNumber: MS-720T00
 hoursToComplete: 72
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
 - skill: Planen und Konfigurieren von Microsoft Teams Telefon
-- skill: Planen und Optimieren der Netzwerkleistung für Teams Telefon
+- skill: Die Netzwerkleistung für Teams Telefon zu planen und zu optimieren
 - skill: Konfigurieren und Bereitstellen von Direct Routing
 - skill: Konfigurieren, Bereitstellen und Verwalten von Teams-Geräten
 - skill: Überwachen und Behandeln von Problemen von Teams Telefon
@@ -104,6 +104,13 @@ outlineSection: >-
      *   Vorbereiten von Benutzern für Anrufe
      *   Konfigurieren von Audiokonferenzeinstellungen
      *   Konfigurieren von Anrufwarteschlangen und automatischen Telefonzentralen
+
+  #### <a name="lab--expand-your-teams-voice-environment-to-use-direct-routing"></a>Lab: Erweitern Ihrer Teams Voice-Umgebung zur Verwendung von Direct Routing
+
+
+  ####
+     *   Konfigurieren des Sitzungsrahmencontrollers
+     *   Konfigurieren von Einstellungen für direktes Routing
 
   Nach Abschluss dieses Moduls werden die Teilnehmer in der Lage sein:
 
