--- a/learn-certs-pr/customer-data-platform-specialty/index.yml
+++ b/learn-certs-pr/customer-data-platform-specialty/index.yml
@@ -2,13 +2,13 @@
 title: 'Microsoft Certified: Customer Data Platform Specialty'
 metadata:
   title: 'Microsoft Certified: Customer Data Platform Specialty'
-  description: Diese Zertifizierung wird im Dezember 2021 verfügbar sein. Microsoft Customer Data Platform-Spezialisten implementieren Lösungen, die Einblicke in Kundenprofile bieten und mit denen Kundenbindungsaktivitäten nachverfolgt werden können, sodass die Kundenerfahrung verbessert und die Kundenbindung gesteigert werden kann.
-  ms.openlocfilehash: 3504d77d93bea8eb4a26bb4104763850d63cb8dc
-  ms.sourcegitcommit: 9ce6bfd5b440f21921db0832e2a560c814478dcb
-  ms.translationtype: HT
+  description: Diese Zertifizierung wird am oder um den 4. Januar 2022 verfügbar sein. Microsoft Customer Data Platform Specialists implementieren Lösungen, die Einblicke in Kundenprofile bieten und mit denen Kundenbindungsaktivitäten nachverfolgt werden können, sodass das Benutzererlebnis der Kund*innen verbessert und die Kundenbindung gesteigert werden kann.
+  ms.openlocfilehash: 42f27ca697781d3b55dc2bd0fdd4e22e0196a81c
+  ms.sourcegitcommit: d80173e30006986f164a370573cac47d596ddb52
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 11/02/2021
-  ms.locfileid: "132113336"
+  ms.lasthandoff: 12/06/2021
+  ms.locfileid: "133742888"
 uid: certification.customer-data-platform-specialty
 iconUrl: /media/learn/certification/badges/microsoft-certified-specialty-badge.svg
 summary: >-
@@ -32,8 +32,8 @@ summary: >-
   - Melden Sie sich zu einem Präsenzschulungskurs an.
 
 
-  <div><font color='red'><strong>Diese Zertifizierung wird im Dezember 2021 verfügbar sein.</strong></font></div>
-subTitle: Diese Zertifizierung wird im Dezember 2021 verfügbar sein. Microsoft Customer Data Platform-Spezialisten implementieren Lösungen, die Einblicke in Kundenprofile bieten und mit denen Kundenbindungsaktivitäten nachverfolgt werden können, sodass die Kundenerfahrung verbessert und die Kundenbindung gesteigert werden kann.
+  <div><font color='red'><strong>Diese Zertifizierung wird am oder um den 4. Januar 2022 verfügbar sein.</strong></font></div>
+subTitle: Diese Zertifizierung wird am oder um den 4. Januar 2022 verfügbar sein. Microsoft Customer Data Platform Specialists implementieren Lösungen, die Einblicke in Kundenprofile bieten und mit denen Kundenbindungsaktivitäten nachverfolgt werden können, sodass das Benutzererlebnis der Kund*innen verbessert und die Kundenbindung gesteigert werden kann.
 levels:
 - intermediate
 skills:
@@ -64,14 +64,14 @@ pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWO6YH
 exams:
 - uid: exam.mb-260
 resources:
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+- title: Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen für Dynamics 365 und Power Platform.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
@@ -79,6 +79,6 @@ resources:
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
-- title: Freigeben Ihrer Zertifizierungsbadges
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn in LinkedIn oder in Ihrem Lebenslauf und anderem mehr hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
