--- a/learn-certs-pr/d365-functional-consultant-customer-service/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-customer-service/index.yml
@@ -1,37 +1,55 @@
 ### YamlMime:Certification
-title: 'Microsoft Certified: Dynamics 365 Customer Service Functional Consultant Associate'
+title: 'Microsoft Certified: Functional Consultant Associate für Dynamics 365 Customer Service'
 metadata:
-  title: 'Microsoft Certified: Dynamics 365 Customer Service Functional Consultant Associate'
-  description: Microsoft Dynamics 365 Customer Service Functional Consultants schafft CX Lösungen, die schnell und flexibel sind und KI nutzen, um praxisorientierte Einsichten zu liefern, damit Verbraucheranforderungen vorausgesehen werden können.
+  title: 'Microsoft Certified: Functional Consultant Associate für Dynamics 365 Customer Service'
+  description: Microsoft Dynamics 365 Customer Service Functional Consultants sind für das Implementieren von Omnichannellösungen verantwortlich, die sich auf Service, Qualität, Zuverlässigkeit, Effizienz und Kundenzufriedenheit konzentrieren.
+  ms.openlocfilehash: c18a9bb7c1df7f014fe81831b48e95389c48695d
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.translationtype: MT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133079161"
 uid: certification.d365-functional-consultant-customer-service
 certificationRenewalUid: renewal.d365-functional-consultant-customer-service
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wird demnächst aktualisiert. <a href="/learn/certifications/exams/pl-200">PL-200</a> wird am 1. Oktober 2021 aktualisiert. <a href="/learn/certifications/exams/pl-230">MB-230</a> wird am  15. Oktober 2021 aktualisiert. Bitte laden Sie die Dokumente zur Messung der Fähigkeiten auf den entsprechenden Prüfungsseiten herunter, um die Änderungen zu sehen.</strong></font><br/><br/></div>
-  
-  Wenn Sie ein Fachberater sind, der für die Konfiguration und Implementierung von Dynamics 365-Lösungen für Kunden verantwortlich ist, können Sie diese Zertifizierung verwenden, um Ihre Fähigkeiten ins rechte Licht zu rücken und Ihre Karriere voranzutreiben. Ein Fachberater für Dynamics 365 Customer Service implementiert Omnichannel-Lösungen, die sich auf Service, Qualität, Zuverlässigkeit, Effizienz und Kundenzufriedenheit konzentrieren.Als Fachberater wissen Sie, wie man mit Projektmanagern, Entwicklern und Lösungsarchitekten zusammenarbeitet. Sie sollten mindestens ein bis drei Jahre Erfahrung als Fachberater bei der Implementierung von Dynamics 365 haben.
-  
-  Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erhalten, finden Sie hier einige Vorschläge&#58; 
-  - Arbeiten Sie als Dynamics 365-Fachberater an einigen Projekten mit.
-  - Arbeiten Sie an einer Dynamics 365-Kundendienstimplementierung.
-  - Treten Sie der Community unter [community.dynamics.com](https://community.dynamics.com/)bei.
-  - Nehmen Sie verfügbare Lernpfade auf [Microsoft Learn](/learn/browse/?expanded=dynamics-365&products=dynamics-customer-service&roles=functional-consultant&resource_type=learning%20path)wahr.
+summary: >-
+  <div><font color='red'><strong>Der Inhalt dieser Zertifizierung wurde kürzlich aktualisiert. Das <a href="/learn/certifications/exams/pl-200">Examen PL-200</a> wurde am 1. Oktober 2021 und das <a href="/learn/certifications/exams/mb-230">Examen MB-230</a> am 15. Oktober 2021 aktualisiert. Laden Sie die Dokumente zu den bewerteten Qualifikation auf den zugehörigen Examensseiten herunter, um die Änderung zu sehen.</strong></font><br/><br/></div>
+
+
+  Als Functional Consultant, der*die für das Konfigurieren und Implementieren von Dynamics 365-Lösungen für Kund*innen verantwortlich ist, können Sie diese Zertifizierung verwenden, um Ihre Qualifikationen hervorzuheben und Ihre Karriere voranzubringen. Functional Consultants für Dynamics 365 Customer Service implementieren Omnichannel-Lösungen, bei denen der Fokus auf Service, Qualität, Zuverlässigkeit, Effizienz und Kundenzufriedenheit liegt. Als Functional Consultant wissen Sie, wie Sie mit Projektmanager*innen, Entwickler*innen und Lösungsarchitekt*innen zusammenarbeiten. Sie benötigen mindestens ein bis drei Jahre Erfahrung als Functional Consultant bei der Implementierung von Dynamics 365.
+
+
+  Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erlangen, finden Sie nachstehend einige Vorschläge&#58;
+
+  - Arbeiten Sie in mindestens einem Projekt als Functional Consultant für Dynamics 365.
+
+  - Arbeiten Sie an einer Dynamics 365 Customer Service-Implementierung.
+
+  - Treten Sie der Community auf [community.dynamics.com](https://community.dynamics.com/) bei.
+
+  - Nutzen Sie verfügbare Lernpfade auf [Microsoft Learn](/learn/browse/?expanded=dynamics-365&products=dynamics-customer-service&roles=functional-consultant&resource_type=learning%20path).
+
   - Führen Sie weitere praktische Übungen durch.
-  - Melden Sie sich für einen von einem Dozenten geleiteten Schulungskurs an.
-subTitle: Microsoft Dynamics 365 Customer Service Functional Consultants schafft CX Lösungen, die schnell und flexibel sind und KI nutzen, um praxisorientierte Einsichten zu liefern, damit Verbraucheranforderungen vorausgesehen werden können.
+
+  - Melden Sie sich zu einem Präsenzschulungskurs an.
+subTitle: Microsoft Dynamics 365 Customer Service Functional Consultants sind für das Implementieren von Omnichannellösungen verantwortlich, die sich auf Service, Qualität, Zuverlässigkeit, Effizienz und Kundenzufriedenheit konzentrieren.
 levels:
 - intermediate
 skills:
-- Verwalten von Fällen und Wissensmanagement
-- Verwalten von Warteschlangen, Berechtigungen und Dienstleistungsvereinbarungen (SLAs)
-- Zeitplanung implementieren
-- Omnichannel für den Kundenservice implementieren
-- Verwalten von Analysen
-- Microsoft Dataverse konfigurieren
-- Erstellen Sie Apps mit Hilfe von Power Apps
-- Erstellen und Verwalten Sie Power Automate
-- Implementieren Sie Power Virtual Agents Chatbots
-- Integrieren Sie Power Apps in andere Apps und Services
+- Manage cases and knowledge management
+- Manage queues, entitlements, and service-level agreements
+- Implement scheduling
+- Implement Omnichannel for Customer Service
+- Manage analytics and insights
+- Implement Customer Service workspaces
+- Implement Microsoft Power Platform
+- Implement Connected Customer Service
+- Configure Microsoft Dataverse
+- Create apps by using Microsoft Power Apps
+- Create and manage Microsoft Power Automate
+- Implement Microsoft Power Virtual Agents chatbots
+- Integrate Microsoft Power Apps with other apps and services
+- Manage solutions
 roles:
 - functional-consultant
 type: role-based
@@ -65,20 +83,20 @@ exams:
 - uid: exam.pl-200
 - uid: exam.mb-230
 resources:
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+- title: Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen für Dynamics 365 und Power Platform.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Reise zur Zertifizierung
-  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
+- title: Der Weg zur Zertifizierung
+  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, mit denen Sie sich vorbereiten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Ci0e
-- title: Informieren Sie sich über die Zertifizierungen
+- title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
 - title: Lernpfad zur Zertifizierung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  description: Empfohlene Schulungsressourcen, mit denen Sie sich auf die erforderlichen Examen vorbereiten und Ihre Zertifizierung erhalten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Cd87
-- title: Prüfungswiederholung
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
@@ -86,6 +104,6 @@ resources:
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
-- title: Teilen Sie Ihre Zertifizierungsabzeichen
-  description: Feiern Sie Ihre Leistung mit Ihrem Netzwerk. Fordern Sie Ihr  Microsoft-Certification an und fügen Sie es LinkedIn, Ihrem Lebenslauf und anderem hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
