--- a/learn-certs-pr/d365-functional-consultant-field-service/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-field-service/index.yml
@@ -1,36 +1,53 @@
 ### YamlMime:Certification
-title: 'Microsoft Certified: Dynamics 365 Field Service Functional Consultant Associate'
+title: 'Microsoft Certified: Dynamics 365 Field Service Functional Consultant Associate'
 metadata:
-  title: 'Microsoft Certified: Dynamics 365 Field Service Functional Consultant Associate'
-  description: 'Microsoft Dynamics 365 Field Service Functional Consultants konfigurieren die Field Service-Anwendung, implementieren Lösungen, die den Lebenszyklus des Außendienstes steuern, und setzen die Connected Field Service (IoT)-Lösung ein.'
+  title: 'Microsoft Certified: Dynamics 365 Field Service Functional Consultant Associate'
+  description: Dynamics 365 Field Service Functional Consultants sind für das Implementieren von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus von Field Service vervollständigen.
+  ms.openlocfilehash: fd02e24116ae7a904cc9da6d764cbbbf556e0e5e
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.translationtype: MT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133078896"
 uid: certification.d365-functional-consultant-field-service
 certificationRenewalUid: renewal.d365-functional-consultant-field-service
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: |-
-  Wenn Sie ein Fachberater sind, der für die Konfiguration und Implementierung von Dynamics 365-Lösungen für Kunden verantwortlich ist, passt diese Zertifizierung gut zu Ihnen, die Ihre Fähigkeiten hervorheben und Ihre Karriere vorantreiben kann. Ein  Fachberater von Dynamics 365 Field Service ist für die Implementierung von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus des Außendienstes vervollständigen.Als Fachberater wissen Sie, wie man mit Projektmanagern, Entwicklern und Lösungsarchitekten zusammenarbeitet. Sie sollten mindestens ein bis drei Jahre Erfahrung als Fachberater bei der Implementierung von Dynamics 365 haben.
-  
-  Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erhalten, finden Sie hier einige Vorschläge&#58;
-  - Arbeiten Sie als Dynamics 365-Fachberater an einigen Projekten mit.
-  - Arbeiten Sie an einer Dynamics 365 Field Service-Implementierung.
-  - Treten Sie der Community unter [community.dynamics.com](https://community.dynamics.com/)bei.
-  - Nehmen Sie verfügbare Lernpfade auf [Microsoft Learn](/learn/browse/?expanded=dynamics-365&roles=functional-consultant&resource_type=learning%20path&products=dynamics-field-service) wahr.
+summary: >-
+  <div><font color='red'><strong>Der Inhalt dieser Zertifizierung wurde kürzlich aktualisiert. Das <a href="/learn/certifications/exams/mb-240">Examen MB-240</a> wurde am 12. November 2021 und das <a href="/learn/certifications/exams/pl-200">Examen PL-200</a> am 1. Oktober 2021 aktualisiert. Laden Sie die Dokumente zu den bewerteten Qualifikation auf den zugehörigen Examensseiten herunter, um die Änderung zu sehen.</strong></font><br/><br/></div>
+
+
+  Mit dieser Zertifizierung können Sie Ihre Qualifikationen hervorheben und Ihre Karriere voranbringen, wenn Sie ein Functional Consultant sind, der für das Konfigurieren und Implementieren von Dynamics 365-Lösungen für Kund*innen verantwortlich ist. Functional Consultants für Dynamics 365 Field Service sind für das Implementieren von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus von Field Service vervollständigen. Als Functional Consultant wissen Sie, wie Sie mit Projektmanager*innen, Entwickler*innen und Lösungsarchitekt*innen zusammenarbeiten. Sie sollten mindestens ein bis drei Jahre Erfahrung als Functional Consultant bei der Implementierung von Dynamics 365 haben.
+
+
+  Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erlangen, finden Sie nachstehend einige Vorschläge&#58;
+
+  - Arbeiten Sie an einigen Projekten als Functional Consultant für Dynamics 365.
+
+  - Arbeiten Sie an einer Dynamics 365 Field Service-Implementierung.
+
+  - Treten Sie der Community auf [community.dynamics.com](https://community.dynamics.com/) bei.
+
+  - Nutzen Sie verfügbare Lernpfade auf [Microsoft Learn](/learn/browse/?expanded=dynamics-365&roles=functional-consultant&resource_type=learning%20path&products=dynamics-field-service).
+
   - Führen Sie weitere praktische Übungen durch.
-  - Melden Sie sich für einen von einem Dozenten geleiteten Schulungskurs an
-subTitle: Microsoft Dynamics 365 Field Service Functional Consultants konfigurieren die Field Service-Anwendung, implementieren Lösungen, die den Lebenszyklus des Außendienstes steuern, und setzen die Connected Field Service (IoT)-Lösung ein.
+
+  - Melden Sie sich zu einem Präsenzschulungskurs an.
+subTitle: Dynamics 365 Field Service Functional Consultants sind für das Implementieren von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus von Field Service vervollständigen.
 levels:
 - intermediate
 skills:
-- Konfigurieren von Außendienstanwendungen
-- Verwaltung von Arbeitsaufträgen
-- Planen und Versenden von Arbeitsaufträgen
-- Verwaltung der Mobilität im Außendienst
-- Verwaltung von Bestand und Einkauf
-- Angeschlossenen Außendienst implementieren
-- Microsoft Dataverse konfigurieren
-- Erstellen Sie Apps mit Hilfe von Power Apps
-- Erstellen und Verwalten Sie Power Automate
-- Implementieren Sie Power Virtual Agents Chatbots
-- Integrieren Sie Power Apps in andere Apps und Services
+- Configure field service applications
+- Manage work orders
+- Schedule and dispatch work orders
+- Manage the Field Service (Dynamics 365) mobile app
+- Manage inventory and purchasing
+- Implement assets and connected devices
+- Configure Microsoft Dataverse
+- Create apps by using Microsoft Power Apps
+- Create and manage Microsoft Power Automate
+- Implement Microsoft Power Virtual Agents chatbots
+- Integrate Microsoft Power Apps with other apps and services
+- Manage solutions
 roles:
 - functional-consultant
 type: role-based
@@ -61,20 +78,20 @@ exams:
 - uid: exam.pl-200
 - uid: exam.mb-240
 resources:
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+- title: Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen für Dynamics 365 und Power Platform.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Reise zur Zertifizierung
-  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
+- title: Der Weg zur Zertifizierung
+  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, mit denen Sie sich vorbereiten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4H12f
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
-- title: Lernpfad zur Zertifizirung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+- title: Lernpfad zur Zertifizierung
+  description: Empfohlene Schulungsressourcen, mit denen Sie sich auf die erforderlichen Examen vorbereiten und Ihre Zertifizierung erhalten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C56X
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
@@ -82,7 +99,6 @@ resources:
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
-- title: Teilen Sie Ihre Zertifizierungsabzeichen
-  description: Feiern Sie Ihre Leistung mit Ihrem Netzwerk. Fordern Sie Ihr  Microsoft-Certification an und fügen Sie es LinkedIn, Ihrem Lebenslauf und anderem hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
-
