--- a/learn-certs-pr/d365-functional-consultant-marketing/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-marketing/index.yml
@@ -1,38 +1,54 @@
 ### YamlMime:Certification
-title: 'Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate'
+title: 'Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate'
 metadata:
-  title: 'Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate'
-  description: 'Microsoft Dynamics 365 Marketing Functional Consultants richten Lösungen ein, die Leads gewinnen und konvertieren, Markenbekanntheit aufbauen, Omni-Channel-Messaging standardisieren und Marketinginformationen liefern.'
+  title: 'Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate'
+  description: Microsoft Dynamics 365 Marketing Functional Consultants implementieren Lösungen, die Leads gewinnen und überzeugen, Markenbekanntheit aufbauen, Omnichannel-Messaging standardisieren und Marketingeinblicke liefern.
+  ms.openlocfilehash: b904a51465d4610bdbee93cc30fd2f00b69d34ce
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.translationtype: MT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133078449"
 uid: certification.d365-functional-consultant-marketing
 certificationRenewalUid: renewal.d365-functional-consultant-marketing
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: |-
-  Wenn Sie ein funktionaler Berater oder ein Fachmann sind, der Microsoft Dynamics 365 Marketing im täglichen Geschäftsbetrieb seines Unternehmens einsetzt, oder ein Entwickler, der seine Beratungsfähigkeiten verbessern möchte, kann diese Zertifizierung Ihrer Karriere förderlich sein und Ihnen ermöglichen, sich effektiver für Projekte und Werbeaktionen zu positionieren.
-  
-  Als Kandidat für diese Zertifizierung kennen Sie die modellgetriebenen Dynamics 365-Anwendungen und Datenmodellierungsprinzipien und können die Microsoft Power Platform konfigurieren. Sie implementieren Marketinginitiativen wie Kampagnen, E-Mails und Kundenreisen. Sie haben Erfahrung in der Zusammenarbeit mit den Interessenvertretern eines Unternehmens, um Anforderungen zu erfassen und Dynamics 365 Marketing-Lösungen zu implementieren. Darüber hinaus konfigurieren Sie Dynamics 365 Marketing und richtenorganisatorische Sicherungsmaßnahmen von Dynamics 365 ein. Sie erweitern sogar Dynamics 365-Lösungen mit Power Platform-Komponenten wie z.B. Power Automate und Power Apps.
-  
-  Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erhalten, finden Sie hier einige Vorschläge&#58;
-  - Arbeiten Sie an einem modellgetriebenen App-Implementierungsprojekt für Dynamics 365.
-  - Schauen Sie einem Funktionsberater oder einem Lösungsarchitekten über die Schulter, der mit  Dynamics 365 Marketing arbeitet.
-  - Nutzen Sie verfügbare Lernpfade in Microsoft Learn.
-  - Melden Sie sich für einen von einem Dozenten geleiteten Schulungskurs an.
-subTitle: Microsoft Dynamics 365 Marketing Functional Consultants richten Lösungen ein, die Leads gewinnen und konvertieren, Markenbekanntheit aufbauen, Omni-Channel-Messaging standardisieren und Marketinginformationen liefern.
+summary: >-
+  <div><font color='red'><strong>Der Inhalt dieser Zertifizierung wurde kürzlich aktualisiert. Das <a href="/learn/certifications/exams/mb-220">Examen MB-220</a> wurde am 9. Juli 2021 und das <a href="/learn/certifications/exams/pl-200">Examen PL-200</a> am 1. Oktober 2021 aktualisiert. Laden Sie die Dokumente zu den bewerteten Qualifikationen auf den zugehörigen Examensseiten herunter, um die Änderungen zu sehen.</strong></font><br/><br/></div>
+
+
+  Diese Zertifizierung kann Ihnen helfen, Ihre Karriere zu fördern und sich effektiver für Projekte und Beförderungen zu positionieren, wenn Sie Functional Consultants, Expert*innen, die Microsoft Dynamics 365 Marketing in den täglichen Geschäftsabläufen des Unternehmens verwenden, oder Entwickler*innen sind, die ihre Beratungskenntnisse verbessern möchten.
+
+
+  Als Kandidat*in für diese Zertifizierung sind Sie mit modellgesteuerten Dynamics 365-Anwendungen und Datenmodellierungsprinzipien vertraut und können Microsoft Power Platform konfigurieren. Sie implementieren Marketinginitiativen wie Kampagnen, E-Mails und Kundenkontaktverläufe. Sie haben Erfahrung darin, mit den Projektbeteiligten einer Organisation zusammenzuarbeiten, um Anforderungen zu erfassen und Dynamics 365 for Marketing-Lösungen zu implementieren. Darüber hinaus konfigurieren Sie Dynamics 365 for Marketing und richten die Sicherheitsfeatures von Dynamics 365-Organisationen ein. Sie erweitern Dynamics 365-Lösungen sogar mithilfe von Power Platform-Komponenten wie Power Automate und Power Apps.
+
+
+  Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erlangen, finden Sie nachstehend einige Vorschläge:
+
+  - Arbeiten Sie an einem Implementierungsprojekt für modellgesteuerte Dynamics 365-Apps.
+
+  - Begleiten Sie zu Ihrer Einarbeitung einen Functional Consultant oder Lösungsarchitekten, der mit Dynamics 365 for Marketing arbeitet.
+
+  - Nutzen Sie verfügbare Lernpfade auf Microsoft Learn.
+
+  - Melden Sie sich zu einem Präsenzschulungskurs an.
+subTitle: Microsoft Dynamics 365 Marketing Functional Consultants implementieren Lösungen, die Leads gewinnen und überzeugen, Markenbekanntheit aufbauen, Omnichannel-Messaging standardisieren und Marketingeinblicke liefern.
 levels:
 - intermediate
 skills:
-- Konfigurieren von Marketinganwendungen
-- Segmente und Listen verwalten
-- Marketingformulare und Seiten erstellen und verwalten
-- Leads, Kontakte und Konten verwalten
-- Erstellen und Verwalten von Marketing-E-Mails
-- Kunden-Journeys verwalten
-- Verwaltung von Veranstaltungen und Webinaren
-- Dynamics 365 Customer Voice konfigurieren
-- Microsoft Dataverse konfigurieren
-- Erstellen Sie Apps mit Hilfe von Power Apps
-- Erstellen und Verwalten Sie Power Automate
-- Implementieren Sie Power Virtual Agents Chatbots
-- Integrieren Sie Power Apps in andere Apps und Services
+- Configure marketing applications
+- Manage segments and lists
+- Create and manage marketing forms and pages
+- Manage leads, contacts, and accounts
+- Create and manage marketing emails
+- Manage customer journeys
+- Manage events and webinars
+- Configure Dynamics 365 Customer Voice
+- Configure Microsoft Dataverse
+- Create apps by using Microsoft Power Apps
+- Create and manage Microsoft Power Automate
+- Implement Microsoft Power Virtual Agents chatbots
+- Integrate Microsoft Power Apps with other apps and services
+- Manage solutions
 roles:
 - functional-consultant
 type: role-based
@@ -65,20 +81,20 @@ exams:
 - uid: exam.pl-200
 - uid: exam.mb-220
 resources:
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+- title: Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen für Dynamics 365 und Power Platform.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Reise zur Zertifizierung
-  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
+- title: Der Weg zur Zertifizierung
+  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, mit denen Sie sich vorbereiten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C55m
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
-- title: Lernpfad zur Zertifizirung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+- title: Lernpfad zur Zertifizierung
+  description: Empfohlene Schulungsressourcen, mit denen Sie sich auf die erforderlichen Examen vorbereiten und Ihre Zertifizierung erhalten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CfjW
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
@@ -86,7 +102,6 @@ resources:
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
-- title: Teilen Sie Ihre Zertifizierungsabzeichen
-  description: Feiern Sie Ihre Leistung mit Ihrem Netzwerk. Fordern Sie Ihr  Microsoft-Certification an und fügen Sie es LinkedIn, Ihrem Lebenslauf und anderem hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
-
