--- a/learn-certs-pr/d365-functional-consultant-sales/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-sales/index.yml
@@ -1,33 +1,31 @@
 ### YamlMime:Certification
-title: 'Microsoft Certified: Dynamics 365 Sales Functional Consultant Associate'
+title: 'Microsoft Certified: Dynamics 365 Sales Functional Consultant Associate'
 metadata:
-  title: 'Microsoft Certified: Dynamics 365 Sales Functional Consultant Associate'
-  description: 'Microsoft Dynamics 365 Sales Functional Consultants implementieren Lösungen, die Kundenverbindungen antizipieren und planen, Geschäfte durch Verarbeitung und Abschluss verwalten und die Leistung des Vertriebsteams mithilfe von Datenanalysen beschleunigen.'
+  title: 'Microsoft Certified: Dynamics 365 Sales Functional Consultant Associate'
+  description: Microsoft Dynamics 365 Sales Functional Consultants implementieren Lösungen, die Kundenverbindungen antizipieren und planen, Geschäfte durch Verarbeitung und Abschluss verwalten und die Leistung des Vertriebsteams mithilfe von Datenanalysen beschleunigen.
+  ms.openlocfilehash: 6574312b89106402932acda7b22670ecdd879697
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.translationtype: MT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133078851"
 uid: certification.d365-functional-consultant-sales
 certificationRenewalUid: renewal.d365-functional-consultant-sales
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: |-
-  Wenn Sie ein funktionaler Berater, ein Fachmann, der mit Microsoft Dynamics 365 Sales arbeitet, oder ein Entwickler sind, der seine Beratungsfähigkeiten verbessern möchte, kann diese Zertifizierung Ihrer Karriere förderlich sein. Sie können sich effektiver für Projekte vermarkten und Ihrem Unternehmen zeigen, dass Sie Dynamics 365 Sales anwenden können, um das Vertriebsteam zu stärken.
-  
-  Als Kandidat für diese Zertifizierung verfügen Sie über Erfahrung in der Konfiguration von Microsoft Power Platform und kennen die modellgetriebenen Dynamics 365-Anwendungen und Datenmodellierungsprinzipien. Sie arbeiten mit den Interessenvertretern eines Unternehmens zusammen, um Anforderungen zu erfassen und Dynamics 365 Sales-Lösungen zu implementieren. Sie verwalten Leads, Chancen, Angebote und Bestellungen und konfigurieren Produktkataloge und Preislisten. Darüber hinaus konfigurieren Sie Dynamics 365 Sales so, dass es dem einzigartigen Geschäftsprozess Ihres Unternehmens entspricht, und Sie modellieren Dynamics 365 Sales Verkaufsdaten. Sie erweitern sogar Dynamics 365-Lösungen mit Power Platform-Komponenten wie z.B. Power Automate und Power Apps.
-  
-  Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erhalten, finden Sie hier einige Vorschläge&#58;
-  - Arbeiten Sie an einem modellgetriebenen App-Implementierungsprojekt für Dynamics 365.
-  - Schauen Sie einem Funktionsberater oder einem Lösungsarchitekten über die Schulter, der mit Dynamics 365 Sales arbeitet.
-  - Nutzen Sie verfügbare Lernpfade in Microsoft Learn.
-  - Melden Sie sich für einen von einem Dozenten geleiteten Schulungskurs an.
-subTitle: Microsoft Dynamics 365 Sales Functional Consultants implementieren Lösungen, die Kundenverbindungen antizipieren und planen, Geschäfte durch Verarbeitung und Abschluss verwalten und die Leistung des Vertriebsteams mithilfe von Datenanalysen beschleunigen.
+summary: "<div><font color='red'><strong>Der Inhalt dieser Zertifizierung wurde kürzlich aktualisiert. Das <a href=\"/learn/certifications/exams/mb-210\">Examen MB-210</a> wurde am 23. Juli 2021 und das <a href=\"/learn/certifications/exams/pl-200\">Examen PL-200</a> am 1. Oktober 2021 aktualisiert. Laden Sie die Dokumente zu den bewerteten Qualifikation auf den zugehörigen Examensseiten herunter, um die Änderung zu sehen.</strong></font><br/><br/></div>\n\nWenn Sie ein*e Functional Consultant, ein*e Microsoft Dynamics 365 Sales-Expert*in oder ein*e Entwickler*in sind, der*die seine*ihre Beratungsqualifikationen verbessern möchte, kann diese Zertifizierung Ihre Karriere voranbringen. Mit ihr können Sie sich effektiver für Projekte vermarkten und Ihrer Organisation zeigen, dass Sie Dynamics 365 Sales verwenden können, um die Vertriebsmitarbeiter*innen zu unterstützen. \n\nAls Kandidat*in für diese Zertifizierung verfügen Sie über Erfahrung beim Konfigurieren von Microsoft Power Platform und sind mit modellgesteuerten Dynamics 365-Anwendungen und Datenmodellierungsprinzipien vertraut. Sie arbeiten mit den Projektbeteiligten einer Organisation zusammen, um Anforderungen zu erarbeiten und Dynamics 365 Sales-Lösungen zu implementieren. Sie verwalten Leads, Verkaufschancen, Angebote und Bestellungen und konfigurieren Produktkataloge und Preislisten. Darüber hinaus konfigurieren Sie Dynamics 365 Sales entsprechend dem einzigartigen Geschäftsprozess Ihrer Organisation und modellieren Dynamics 365 Sales-Daten. Außerdem erweitern Sie Dynamics 365-Lösungen mithilfe von Power Platform-Komponenten wie Power Automate und Power Apps.\n\nWenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erlangen, finden Sie nachstehend einige Vorschläge:\n- Arbeiten Sie an einem Implementierungsprojekt für modellgesteuerte Dynamics 365-Apps.\n- Begleiten Sie Functional Consultants oder Lösungsarchitekt*innen, die mit Dynamics 365 Sales arbeiten.\n- Arbeiten Sie die auf Microsoft Learn verfügbaren Lernpfade durch.\n- Melden Sie sich zu einem Präsenzschulungskurs an. "
+subTitle: Microsoft Dynamics 365 Sales Functional Consultants implementieren Lösungen, die Kundenverbindungen antizipieren und planen, Geschäfte durch Verarbeitung und Abschluss verwalten und die Leistung des Vertriebsteams mithilfe von Datenanalysen beschleunigen.
 levels:
 - intermediate
 skills:
-- Konfiguration durchführen
-- Die wichtigsten Vertriebseinheiten verwalten
-- Zusätzliche Tools und Services konfigurieren
-- Microsoft Dataverse konfigurieren
-- Erstellen Sie Apps mit Hilfe von Power Apps
-- Erstellen und Verwalten Sie Power Automate
-- Implementieren Sie Power Virtual Agents Chatbots
-- Integrieren Sie Power Apps in andere Apps und Services
+- Perform configuration
+- Manage core sales tables
+- Configure additional tools and services
+- Configure Microsoft Dataverse
+- Create apps by using Microsoft Power Apps
+- Create and manage Microsoft Power Automate
+- Implement Microsoft Power Virtual Agents chatbots
+- Integrate Microsoft Power Apps with other apps and services
+- Manage solutions
 roles:
 - functional-consultant
 type: role-based
@@ -58,20 +56,20 @@ exams:
 - uid: exam.pl-200
 - uid: exam.mb-210
 resources:
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+- title: Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen für Dynamics 365 und Power Platform.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Reise zur Zertifizierung
-  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
+- title: Der Weg zur Zertifizierung
+  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, mit denen Sie sich vorbereiten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C54X
-- title: Informieren Sie sich über die Zertifizierungen
+- title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
 - title: Lernpfad zur Zertifizierung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  description: Empfohlene Schulungsressourcen, mit denen Sie sich auf die erforderlichen Examen vorbereiten und Ihre Zertifizierung erhalten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Ci0T
-- title: Prüfungswiederholung
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
@@ -79,7 +77,6 @@ resources:
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
-- title: Teilen Sie Ihre Zertifizierungsabzeichen
-  description: Feiern Sie Ihre Leistung mit Ihrem Netzwerk. Fordern Sie Ihr  Microsoft-Certification an und fügen Sie es LinkedIn, Ihrem Lebenslauf und anderem hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
-
