--- a/learn-certs-pr/d365-functional-consultant-supply-chain-management/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-supply-chain-management/index.yml
@@ -2,25 +2,40 @@
 title: 'Microsoft Certified: Dynamics 365 Supply Chain Management Functional Consultant Associate'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Supply Chain Management Functional Consultant Associate'
-  description: Dynamics 365 Supply Chain Management Functional Consultants rationalisieren die Kostenrechnung, Bestandsführung, Masterplanung und Lagerverwaltung für ihre Kunden.
-  ms.openlocfilehash: 77a8e2cd27c90464988fc97b93f74fc996890b83
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  description: Kandidat*innen für die Zertifizierung „Dynamics 365 Supply Chain Management Functional Consultant Associate“ analysieren die Geschäftsanforderungen und setzen diese Anforderungen in vollständig realisierte Geschäftsprozesse und Lösungen um, die die bewährten Methoden der Branche implementieren.
+  ms.openlocfilehash: 775b1e90ddd26433471037859502c5a0de3e3d0e
+  ms.sourcegitcommit: 3a53de64ec81bf478275e0a13a80f3a69bc1e586
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132106715"
+  ms.lasthandoff: 12/10/2021
+  ms.locfileid: "134680682"
 uid: certification.d365-functional-consultant-supply-chain-management
 certificationRenewalUid: renewal.d365-functional-consultant-supply-chain-management
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: >-
-  Kandidaten für diese Zertifizierung analysieren Geschäftsanforderungen und setzen diese Anforderungen in vollständig realisierte Geschäftsprozesse und Lösungen um, die die besten Praktiken der Branche umsetzen. Die Kandidaten fungieren als wichtige Ressource bei der Implementierung und Konfiguration von Anwendungen zur Erfüllung von Geschäftsanforderungen.
+  <div><font color='red'><strong>Der Inhalt dieser Zertifizierung wurde kürzlich aktualisiert. <a href="/learn/certifications/exams/mb-330">Exam MB-330</a> wurde am 10. Dezember 2021 und <a href="/learn/certifications/exams/mb-300">Exam MB-300</a> am 9. August 2021 aktualisiert. Laden Sie die Dokumente zu den bewerteten Qualifikation auf den zugehörigen Examensseiten herunter, um die Änderungen anzuzeigen.</strong></font><br/><br/></div>
 
 
-  Kandidaten für diese Zertifizierung verfügen über ein grundlegendes Verständnis von Buchhaltungsprinzipien und Finanzoperationen von Unternehmen, Kundendienst, Außendienst, Fertigung, Einzelhandel und Konzepten des Lieferkettenmanagements. Sie spezialisieren sich in der Regel auf eine oder mehrere Funktionsgruppen von Finanz- und Betriebsanwendungen, einschließlich Finanzen, Fertigung und Lieferkettenmanagement.
+  Als Kandidatin oder Kandidat für die Zertifizierung „Microsoft Dynamics 365 Supply Chain Management Functional Consultant Associate“ sind Sie ein/e funktionale/r Berater*in oder Geschäftskund*in mit grundlegenden Kenntnissen der Branchenstandards für das Supply Chain Management. Sie verfügen über Erfahrung im Konfigurieren und Implementieren von Dynamics 365 Supply Chain Management, um die Anforderungen Ihrer Organisation zu erfüllen. Sie sind eine wichtige Ressource, die mit Entwickler*innen, Lösungsarchitekt*innen, Projektmanager*innen und funktionalen Berater*innen in den Bereichen Finanzen, Handel und Fertigung zusammenarbeiten.
 
 
-  Kandidaten müssen über Grundkenntnisse in den Praktiken des Lieferantenmanagements verfügen, einschließlich Beschaffung, Handel, Logistik, Lagerverwaltung und Transportmanagement.
-subTitle: Dynamics 365 Supply Chain Management Functional Consultants rationalisieren die Kostenrechnung, Bestandsführung, Masterplanung und Lagerverwaltung für ihre Kunden.
+  Um Ihre Karriere weiter zu beschleunigen, sollten Sie diese Zertifizierung mit der Zertifizierung „Dynamics 365 Supply Chain Management, Manufacturing Functional Consultant Associate“ (Exam MB-320) und der Zertifizierung „Dynamics 365: Finance and Operations Apps Solution Architect Expert“ (Exam MB-700) kombinieren.
+
+
+  Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erlangen, finden Sie nachstehend einige Vorschläge&#58;
+
+  - Bearbeiten Sie die Module zum Supply Chain Management auf [Microsoft Learn](/learn/certifications/d365-functional-consultant-supply-chain-management/?tab=tab-learning-paths), und schließen Sie weitere praktische Übungen ab.
+
+  - Registrieren Sie sich für einen Präsenzschulungskurs, der die Inhalte von MB-300 oder MB-330 behandelt.
+
+  - Werden Sie unter [community.dynamics.com](https://community.dynamics.com/365/supply-chain-management) Teil der Community, oder treten Sie einer Benutzergruppe bei.
+
+  - Verfolgen Sie die Schritte von funktionalen Berater*innen für das Supply Chain Management, und helfen Sie bei der Implementierung von Dynamics 365-Funktionen für das Supply Chain Management.
+
+  - Arbeiten Sie mit Mentor*innen zusammen, besuchen Sie Warehouses, und informieren Sie sich über die Abläufe.
+
+  - Stellen Sie Fragen, und lernen Sie von Expert*innen und Kund*innen.
+subTitle: Kandidat*innen für die Zertifizierung „Dynamics 365 Supply Chain Management Functional Consultant Associate“ analysieren die Geschäftsanforderungen und setzen diese Anforderungen in vollständig realisierte Geschäftsprozesse und Lösungen um, die die bewährten Methoden der Branche implementieren.
 levels:
 - intermediate
 skills:
@@ -30,9 +45,9 @@ skills:
 - Validate and support solutions
 - Implement product information management
 - Implement inventory management
-- Implement and manage Supply Chain processes
+- Implement and manage supply chain processes
 - Implement warehouse management and transportation management
-- Implement Planning Optimization
+- Implement Master planning
 roles:
 - functional-consultant
 type: role-based
@@ -81,5 +96,5 @@ resources:
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Teilen Sie Ihre Zertifizierungsbadges.
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
