--- a/learn-certs-pr/data-analyst-associate/index.yml
+++ b/learn-certs-pr/data-analyst-associate/index.yml
@@ -2,22 +2,30 @@
 title: 'Microsoft Certified: Data Analyst Associate'
 metadata:
   title: 'Microsoft Certified: Data Analyst Associate'
-  description: Data Analysts verhilft Unternehmen, den Wert ihrer Datenbestände mit Hilfe von Microsoft Power BI zu maximieren.
+  description: Data Analysts nutzen Microsoft Power BI, um den Wert der Datenressourcen eines Unternehmens zu maximieren.
+  ms.openlocfilehash: ce0e262e65ca1e00e9c2333daff90e8c4c871d97
+  ms.sourcegitcommit: 367335eb84a6583bb7300f39e7d302c9bbd30bea
+  ms.translationtype: MT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 12/13/2021
+  ms.locfileid: "134694428"
 uid: certification.data-analyst-associate
+certificationRenewalUid: renewal.data-analyst-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 24. September 2021 aktualisiert. Bitte laden Sie das Dokument über die gemessenen Fähigkeiten auf der <a href="/learn/certifications/exams/az-100">DA-100 Prüfungsseite herunter</a> um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
-  
-  Data Analysts verhilft Unternehmen, den Wert ihrer Datenbestände mit Hilfe von Microsoft Power BI zu maximieren. Als Fachexperte sind Datenanalysten dafür verantwortlich, skalierbare Datenmodelle zu entwerfen und zu erstellen, Daten zu bereinigen und zu transformieren und erweiterte Analysefunktionen zu ermöglichen, die durch leicht verständliche Datenvisualisierungen einen aussagekräftigen Geschäftswert bieten.
-subTitle: Data Analysts verhilft Unternehmen, den Wert ihrer Datenbestände mit Hilfe von Microsoft Power BI zu maximieren.
+summary: >-
+  <div><font color='red'><strong>Der Inhalt dieser Zertifizierung wurde am 23. November 2021 aktualisiert. Laden Sie das Dokument zu den bewerteten Qualifikationen von der <a href="/learn/certifications/exams/da-100">Seite für das Examen DA-100</a> herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
+
+
+  Data Analysts nutzen Microsoft Power BI, um den Wert der Datenressourcen eines Unternehmens zu maximieren. Als Fachexperte sind Data Analysts dafür verantwortlich, skalierbare Datenmodelle zu entwerfen und zu erstellen, Daten zu bereinigen und zu transformieren und erweiterte Analysefunktionen zu ermöglichen, die durch leicht verständliche Datenvisualisierungen einen aussagekräftigen Geschäftswert bieten.
+subTitle: Data Analysts nutzen Microsoft Power BI, um den Wert der Datenressourcen eines Unternehmens zu maximieren.
 levels:
 - intermediate
 skills:
-- Bereiten Sie die Daten vor
-- Modellieren Sie die Daten
-- Visualisieren Sie die Daten
-- Analysieren Sie die Daten
-- Bereitstellen und Verwalten von Ergebnissen
+- Prepare the data
+- Model the data
+- Visualize the data
+- Analyze the data
+- Deploy and maintain deliverables
 roles:
 - data-analyst
 type: role-based
@@ -44,7 +52,7 @@ resources:
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4AzbJ
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+  href: https://aka.ms/TrainingCertDeck
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
@@ -57,7 +65,6 @@ resources:
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Teilen Sie Ihre Zertifizierungsabzeichen
-  description: Feiern Sie Ihre Leistung mit Ihrem Netzwerk. Fordern Sie Ihr  Microsoft-Certification an und fügen Sie es LinkedIn, Ihrem Lebenslauf und anderem hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
-
