--- a/learn-certs-pr/exams/az-305.yml
+++ b/learn-certs-pr/exams/az-305.yml
@@ -3,12 +3,12 @@ title: Entwerfen von Microsoft Azure-Infrastrukturlösungen (Beta)
 metadata:
   title: 'Prüfung AZ-305: Entwerfen von Microsoft Azure-Infrastrukturlösungen (Beta)'
   description: 'Prüfung AZ-305: Entwerfen von Microsoft Azure-Infrastrukturlösungen (Beta)'
-  ms.openlocfilehash: f814b9b09c6f6b411ce70dc2142ac8e59826edba
-  ms.sourcegitcommit: 060ab492c0f97401104be741f887744ed952e7b6
+  ms.openlocfilehash: 6bbb41f483d4bf353859766cdaec2a1a79b81496
+  ms.sourcegitcommit: b69a9b2b33f5f8993b5f681e1e6362b5666158e9
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 11/22/2021
-  ms.locfileid: "132907571"
+  ms.lasthandoff: 12/18/2021
+  ms.locfileid: "135412697"
 uid: exam.az-305
 displayName: AZ-305
 summary: >-
@@ -17,16 +17,18 @@ summary: >-
 
   Die Zertifizierung [Microsoft Certified: Azure Solutions Architect Expert](/learn/certifications/azure-solutions-architect/) wird durch Erfüllen der folgenden Anforderungen erlangt:
 
-  - Erwerben der Zertifizierung [Microsoft Certified: Azure Administrator Associate](/learn/certifications/azure-administrator/) und Bestehen der [Prüfung AZ-305](/learn/certifications/exams/az-305) <strong>oder</strong>
+  - Bestehen der Zertifizierung [Microsoft Certified: Azure Solutions Architect Expert](/learn/certifications/azure-solutions-architect/) oder von [Exam AZ-305](/learn/certifications/exams/az-305), **oder**
 
-  - Bestehen der [Prüfung AZ-303](/learn/certifications/exams/az-303) <em>(vor deren Auslaufen am 31. März 2022)</em> und der [Prüfung AZ-305](/learn/certifications/exams/az-305)
+  - Bestehen von [Exam AZ-303](/learn/certifications/exams/az-303) und [Exam AZ-304](/learn/certifications/exams/az-304) *(bevor diese am 31. März 2022 ablaufen)*, **oder**
+
+  - Bestehen der [Prüfung AZ-303](/learn/certifications/exams/az-303) *(vor deren Auslaufen am 31. März 2022)* und der [Prüfung AZ-305](/learn/certifications/exams/az-305)
 
 
-  <div><font color='red'><strong>HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zu den Prüfungsnoten finden Sie <a href="/learn/certifications/beta-exams">hier</a>. Betaprüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. Erfahren Sie mehr <a href="/learn/certifications/beta-exams">über den Wert und die Wichtigkeit von Betaprüfungen</a>.</strong></font></div>
+  <div><strong>HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zu den Prüfungsnoten finden Sie <a href="/learn/certifications/beta-exams">hier</a>. Betaprüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. Erfahren Sie mehr <a href="/learn/certifications/beta-exams">über den Wert und die Wichtigkeit von Betaprüfungen</a>.</strong></div>
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Entwerfen von Identitäts-, Governance- und Überwachungslösungen, Entwerfen von Datenspeicherlösungen, Entwerfen von Geschäftskontinuitätslösungen und Entwerfen von Infrastrukturlösungen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWLFRU
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=AZ-305&examname=Exam%20AZ-305:%20Designing%20Microsoft%20Azure%20Infrastructure%20Solutions&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-305
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-305&examname=Exam%20AZ-305:%20Designing%20Microsoft%20Azure%20Infrastructure%20Solutions&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-305
 locales:
 - en
 levels:
