--- a/learn-certs-pr/exams/az-400.yml
+++ b/learn-certs-pr/exams/az-400.yml
@@ -1,39 +1,61 @@
 ### YamlMime:Examination
 title: Designing and Implementing Microsoft DevOps Solutions
 metadata:
-  title: 'Exam AZ-400: Designing and Implementing Microsoft DevOps Solutions'
-  description: 'Exam AZ-400: Designing and Implementing Microsoft DevOps Solutions'
+  title: 'Examen AZ-400: Designing and Implementing Microsoft DevOps Solutions'
+  description: 'Examen AZ-400: Designing and Implementing Microsoft DevOps Solutions'
+  ms.openlocfilehash: 713a879df5b7e9ca56a27326b6c0f195df472a1a
+  ms.sourcegitcommit: 3a53de64ec81bf478275e0a13a80f3a69bc1e586
+  ms.translationtype: MT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 12/10/2021
+  ms.locfileid: "134680691"
 uid: exam.az-400
 displayName: AZ-400
-summary: |-
-  <div><div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am Mittwoch, 29. September 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument mit den bewerteten Fähigkeiten herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div><div><font color='red'>HINWEIS: Punktzahl für einen erfolgreichen Abschluss: 700. Erfahren Sie mehr über Prüfungsergebnisse <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div></div>
+summary: >-
+  <div>
 
-  Kandidaten für diese Prüfung sollten über Fachkenntnisse im Umgang mit Menschen, Prozessen und Technologien haben, um kontinuierlich geschäftlichen Nutzen zu erzielen.
+  <div><font color='red'><strong>Der Inhalt dieses Examens wurde am 30. November 2021 aktualisiert. Laden Sie das unten aufgeführte Dokument mit den bewerteten Qualifikationen herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div><div><font color='red'>HINWEIS: Erforderliche Mindestpunktzahl: 700. Weitere Informationen zu Prüfungsergebnissen finden Sie <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div>
 
-  Zu den Aufgaben für diese Rolle gehören das Entwerfen und Implementieren von Strategien für Zusammenarbeit, Code, Infrastruktur, Quellcodeverwaltung, Sicherheit, Compliance, kontinuierliche Integration, Testen, Bereitstellung, Überwachung und Feedback.
+  </div>
 
-  Ein Kandidat für diese Prüfung muss sowohl mit der Azure-Verwaltung als auch mit der Entwicklung vertraut sein und Experte in mindestens einem dieser Bereiche sein.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Entwicklung einer Instrumentierungsstrategie; Entwicklung einer Zuverlässigkeitstechnik (SRE)-Strategie; Entwicklung eines Sicherheits- und Compliance-Plans; Quellcodeverwaltung; Erleichterung der Kommunikation und Zusammenarbeit; kontinuierliche Integration definieren und implementieren; und eine kontinuierliche Strategie für das Liefer- und Release-Management definieren und implementieren.'
+
+  Kandidat*innen für diese Prüfung sollten über Fachkenntnisse im Umgang mit Menschen, Prozessen und Technologien verfügen, um kontinuierlich geschäftlichen Nutzen zu erzielen.
+
+
+  Zu den Aufgaben dieser Rolle gehören das Entwerfen und Implementieren von Strategien für Zusammenarbeit, Code, Infrastruktur, Quellcodeverwaltung, Sicherheit, Compliance, kontinuierliche Integration, Testen, Bereitstellen, Überwachen und Feedback.
+
+
+  Kandidat*innen für diese Prüfung müssen mit der Azure-Verwaltung und -Entwicklung vertraut sein und Expert*innen in mindestens einem dieser Bereiche sein.
+subTitle: 'In diesem Examen wird Ihre Fähigkeit abgefragt, die folgenden technischen Aufgaben zu bewältigen: Entwickeln einer Instrumentierungsstrategie, einer Sitezuverlässigkeitstechnik-Strategie (SRE), eines Sicherheits- und Complianceplans, Verwalten von Quellcode, Erleichtern der Kommunikation und Zusammenarbeit, Definieren und Implementieren von Continuous Integration sowie Definieren und Implementieren einer Strategie für Continuous Delivery und die Releaseverwaltung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VP8d
 practiceTestUrl: https://www.mindhub.com/p/MU-AZ-400?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-400&examname=Exam%20AZ-400:%20Designing%20and%20Implementing%20Microsoft%20DevOps%20Solutions&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-400
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-400&examname=Exam%20AZ-400:%20Designing%20and%20Implementing%20Microsoft%20DevOps%20Solutions&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-400
 locales:
 - en
 - ja
 - zh-cn
 - ko
+- de
+- fr
+- es
+- pt-br
+- ar-sa
+- ru
+- zh-tw
+- it
+- id-id
 levels:
 - advanced
 skills:
-- Der Inhalt dieser Prüfung wurde am Mittwoch, 29. September 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
-- Entwickeln Sie eine Instrumentierungsstrategie (5-10%)
-- Entwicklung einer Zuverlässigkeitstechnik (SRE)-Strategie (5-10%)
-- Entwicklung eines Sicherheits- und Compliance-Plans (10-15%)
-- Quellcode verwalten (10-15%)
-- Ermöglichen der Kommunikation und Zusammenarbeit (10-15%)
-- Kontinuierliche Integration definieren und definieren (20-25%)
-- Definieren und implementieren Sie eine kontinuierliche Liefer- und Release-Management-Strategie (10-15%)
+- The content of this exam was updated on November 30, 2021. Please download the exam skills outline below to see what changed.
+- Develop an instrumentation strategy (5-10%)
+- Develop a Site Reliability Engineering (SRE) strategy (5-10%)
+- Develop a security and compliance plan (10-15%)
+- Manage source control (10-15%)
+- Facilitate communication and collaboration (10-15%)
+- Define and implement continuous integration (20-25%)
+- Define and implement a continuous delivery and release management strategy (10-15%)
 roles:
 - devops-engineer
 products:
@@ -43,12 +65,16 @@ products:
 - azure-container-instances
 - azure-automation
 paths:
-- uid: learn.az-400-develop-instrumentation-strategy
-- uid: learn.az-400-develop-sre-strategy
-- uid: learn.az-400-develop-security-compliance-plan
-- uid: learn.az-400-manage-source-control
-- uid: learn.az-400-facilitate-communication-collaboration
-- uid: learn.az-400-define-implement-continuous-integration
+- uid: learn.wwl.az-400-get-started-devops-transformation-journey
+- uid: learn.wwl.az-400-work-git-for-enterprise-devops
+- uid: learn.wwl.az-400-implement-ci-azure-pipelines-github-actions
+- uid: learn.wwl.az-400-design-implement-release-strategy
+- uid: learn.wwl.az-400-implement-secure-continuous-deployment
+- uid: learn.wwl.az-400-manage-infrastructure-as-code-using-azure
+- uid: learn.wwl.az-400-design-implement-dependency-management-strategy
+- uid: learn.wwl.az-400-create-manage-containers-using-docker-kubernetes
+- uid: learn.wwl.az-400-implement-continuous-feedback
+- uid: learn.wwl.az-400-implement-security-validate-code-basescompliance
 courses:
 - uid: course.az-400t00
 relatedCertifications:
@@ -56,7 +82,7 @@ relatedCertifications:
     uid: certification.devops-engineer
 resources:
 - title: Reise zur Zertifizierung
-  description: Informieren Sie sich über die Schritte zur Zertifizierung als DevOps Engineer Expert und über die zur Verfügung stehenden Ressourcen, die Ihnen bei der Vorbereitung helfen können.
+  description: Informieren Sie sich über die Schritte zur Zertifizierung als „DevOps Engineer Expert“ und über die zur Verfügung stehenden Ressourcen, die Ihnen bei der Vorbereitung helfen können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wyqC
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
