--- a/learn-certs-pr/exams/mb-230.yml
+++ b/learn-certs-pr/exams/mb-230.yml
@@ -1,38 +1,54 @@
 ### YamlMime:Examination
-title: Microsoft Dynamics 365 Customer Service
+title: Microsoft Dynamics 365 Customer Service Functional Consultant
 metadata:
-  title: 'Exam MB-230: Microsoft Dynamics 365 Customer Service'
-  description: 'Exam MB-230: Microsoft Dynamics 365 Customer Service'
+  title: 'Prüfung MB-230: Microsoft Dynamics 365 Customer Service Functional Consultant'
+  description: 'Prüfung MB-230: Microsoft Dynamics 365 Customer Service Functional Consultant'
+  ms.openlocfilehash: e922333e8c5872e0d09d57533f3dfcd584066261
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.translationtype: MT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133078431"
 uid: exam.mb-230
 displayName: MB-230
-summary: |-
+summary: >-
   <div>
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wird am Freitag, 15. Oktober 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument mit den bewerteten Fähigkeiten herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
-  <div><font color='red'>HINWEIS: Punktzahl für einen erfolgreichen Abschluss: 700. Erfahren Sie mehr über Prüfungsergebnisse <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div>
+
+  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 15. Oktober 2021 aktualisiert. Laden Sie das unten aufgeführte Dokument mit den bewerteten Qualifikationen herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
+
+  <div><font color='red'>HINWEIS: Erforderliche Mindestpunktzahl: 700. Weitere Informationen zu Prüfungsergebnissen finden Sie <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div>
+
   </div>
-  
-  Ein Dynamics 365 Customer Service Functional Consultant ist für die Implementierung von Omnichannel-Lösungen verantwortlich, die sich auf Service, Qualität, Zuverlässigkeit, Effizienz und Kundenzufriedenheit konzentrieren.
+
+
+  Microsoft Dynamics 365 Customer Service Functional Consultants sind für das Implementieren von Omnichannellösungen verantwortlich, die sich auf Service, Qualität, Zuverlässigkeit, Effizienz und Kundenzufriedenheit konzentrieren.
+
   <br/>
-  
-  Ein Dynamics 365 Kundendienst-Fachberater implementiert und entwirft Visualisierungen und Berichte für das Service-Management, die vom Lösungsarchitekten und in Zusammenarbeit mit ihm bereitgestellt werden. Der Fachberater arbeitet mit dem Administrator für Kundenbindung zusammen, um Power Platform-Komponenten zu implementieren und zu aktualisieren, einschließlich Wissensmanagement, Kundenfeedback und verbundenen Diensten.
-  
-  Ein Dynamics 365 Kundendienst-Fachberater muss über fundierte Kenntnisse im Kundenservice verfügen, einschließlich&#58; Verständnis der Branchenterminologie, Prioritäten, Standards, Methoden, Kundenservice-Vorgänge und bewährte Praktiken. Der Fachberater mit Kundendienstkompetenz muss über fundiertes Wissen verfügen, um die Benutzeranforderungen durch den Dynamics 365-Kundendienst zu erfüllen, einschließlich eines umfassenden Verständnisses von Fällen, Wissensmanagement, Warteschlangen, Berechtigungen, der Ressourcenplanung, der Dienstleistungvereinbarungen(SLAs), Visualisierungen, verbundener Services, Kundendiensterkenntnisse, virtuelle Power-Agenten und Omnichannel für den Kundenservice. Der Fachberater sollte über umfassendes Verständnis der Rolle der Kundendienstanwendung in Bezug auf die Anwendungssuite Dynamics 365 sowie ein grundlegendes Verständnis der Lösungsarchitektur und Qualitätssicherung mitbringen.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Verwalten von Fällen und Wissensmanagement; Verwalten von Warteschlangen, Berechtigungen und Dienstleistungsvereinbarungen; Zeitplanung implementieren; Omnichannel für den Kundenservice implementieren sowie Analysen verwalten.'
+
+
+  Diese Fachberater implementieren und entwerfen Visualisierungen und Berichte für das Servicemanagement, die vom Lösungsarchitekten und in Zusammenarbeit mit diesem bereitgestellt werden. Die Fachberater arbeiten mit dem Kundenbindungsadministrator zusammen, um Microsoft Power Platform-Komponenten, einschließlich Wissensverwaltung, Kundenfeedback und verbundener Dienste, zu implementieren und upzugraden.
+
+
+  Dynamics 365 Customer Service Functional Consultants müssen über ein fundiertes, angewandtes Wissen zum Kundenservice verfügen, einschließlich Verständnis der Branchenterminologie, Prioritäten, Standards, Methoden, Kundenservicevorgänge und bewährte Methoden. Der Functional Consultant mit Kundenservicekompetenz muss außerdem über umfassende praktische Erfahrungen und Kenntnisse darüber verfügen, wie benutzerspezifische Anforderungen durch Dynamics 365 Customer Service erfüllt werden können. Dazu gehört auch ein umfassendes Verständnis von Fällen, Wissensverwaltung, Warteschlangen, Berechtigungen, Ressourcenplanung, Vereinbarung zum Servicelevel (Service Level Agreement, SLA), Visualisierungen, verbundenen Diensten, des Add-Ins Customer Service Insights für Microsoft Dynamics 365 Customer Service sowie von Power Virtual Agents und Omnichannel for Customer Service. Der Functional Consultant sollte ein umfassendes Verständnis der Rolle der Kundendienstanwendung in Bezug auf die Anwendungssuite Dynamics 365 sowie ein grundlegendes Verständnis der Lösungsarchitektur und Qualitätssicherung mitbringen.
+subTitle: 'Bei dieser Prüfung wird Ihre Fähigkeit bewertet, die folgenden technischen Aufgaben auszuführen: Verwalten von Fällen und Wissensverwaltung, Verwalten von Warteschlangen, Berechtigungen und Vereinbarungen zum Servicelevel, Implementieren der Zeitplanung, Implementieren von Omnichannel for Customer Service, Verwalten von Analysen und Erkenntnissen, Implementieren von Customer Service-Arbeitsbereichen, Implementieren von Microsoft Power Platform und Implementieren von Connected Customer Service.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VJVu
 practiceTestUrl: https://www.mindhub.com/mb-230-microsoft-dynamics-365-customer-service-microsoft-official-practice-test/p/MU-MB-230?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-230&examname=Exam%20MB-230:%20Microsoft%20Dynamics%20365%20for%20Customer%20Service&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-230
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MB-230&examname=Exam%20MB-230:%20Microsoft%20Dynamics%20365%20for%20Customer%20Service&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-230
 locales:
 - en
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am  Freitag, 15. Oktober 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändert.
-- Fälle und Wissensmanagement verwalten (20-25%)
-- Warteschlangen, Berechtigungen und Dienstleistungsvereinbarungen (SLAs) verwalten (15-20%)
-- Zeitplanung implementieren (10-15%)
-- Omnichannel für den Kundenservice implementieren (30-35%)
-- Analysen verwalten (10-15%)
+- The content of this exam was updated on October 15, 2021. Please download the exam skills outline below to see what changed.
+- Manage cases and knowledge management (20-25%)
+- Manage queues, entitlements, and service-level agreements (15-20%)
+- Implement scheduling (5-10%)
+- Implement Omnichannel for Customer Service (10-15%)
+- Manage analytics and insights (5-10%)
+- Implement Customer Service workspaces (5-10%)
+- Implement Microsoft Power Platform (5-10%)
+- Implement Connected Customer Service (5–10%)
 roles:
 - functional-consultant
 products:
@@ -53,26 +69,26 @@ relatedCertifications:
     uid: certification.d365-functional-consultant-customer-service
 resources:
 - title: Lernpfad zur Zertifizierung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  description: Empfohlene Schulungsressourcen, mit denen Sie sich auf die erforderlichen Examen vorbereiten und Ihre Zertifizierung erhalten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Cd87
-- title: Informieren Sie sich über die Zertifizierungen
+- title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+- title: Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen für Dynamics 365 und Power Platform.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Prüfungswiederholung
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: Unterstützung bei Zertifizierungsexamen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: Beantragen von Hilfsmitteln
+  description: Hier erfahren Sie mehr über das Beantragen von Hilfsmitteln für Ihr Examen.
   href: ../request-accommodations.md
-- title: Prüfungsrichtlinien und häufig gestellten Fragen
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+- title: Prüfungsrichtlinien und FAQs
+  description: Lesen Sie die Examensrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
