--- a/learn-certs-pr/exams/mb-240.yml
+++ b/learn-certs-pr/exams/mb-240.yml
@@ -1,36 +1,51 @@
 ### YamlMime:Examination
-title: Microsoft Dynamics 365 Field Service
+title: Microsoft Dynamics 365 Field Service Functional Consultant
 metadata:
-  title: 'Exam MB-240: Microsoft Dynamics 365 Field Service'
-  description: 'Exam MB-240: Microsoft Dynamics 365 Field Service'
+  title: 'Exam MB-240: Microsoft Dynamics 365 Field Service Functional Consultant'
+  description: 'Exam MB-240: Microsoft Dynamics 365 Field Service Functional Consultant'
+  ms.openlocfilehash: cf9714bfb9ab17aff99677bb137761a3052d08ee
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.translationtype: MT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133078833"
 uid: exam.mb-240
 displayName: MB-240
-summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 26. April 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
-  
-  Kandidaten für diese Prüfung sind Microsoft Dynamics 365 Customer Engagement mit Fachkenntnissen im Außendienst. Die Teilnehmer sind für die Implementierung von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus des Außendienstes vervollständigen.
-  
-  Kandidaten implementieren die Außendienstprozesse, die in Zusammenarbeit mit internen und externen Teams konzipiert wurden. Diese Zusammenarbeit umfasst die Konfiguration der Standard-Administrationsbereiche der Außendienst-Anwendung, die Bereitstellung der angeschlossenen Außendienst (IoT)-Lösung und der mobilen Anwendung sowie die Implementierung zusätzlicher notwendiger Anpassungen. Kandidaten sind für die Konfiguration und den Einsatz der Außendienstanwendung in Verbindung mit der zentralen Kundendienstanwendung verantwortlich.
-  
-  Kandidaten müssen über Kenntnisse in der Konfiguration und Anpassung von Komponenten zur Außendienstanwendung verfügen, einschließlich der Konfiguration von Services, Ressourcen, Merkmalen, Vorfällen, Bestandsintegration, Servicevereinbarungen, Ressourcenplanung, Arbeitsaufträgen, Serviceaufgaben, Benutzerrollen im Außendienst, Außendiensteinstellungen, der angeschlossenen Außendienst (IoT)-Lösung und der Konfiguration der mobilen Field Service-App. Die Kandidaten müssen mit der auf Microsoft Power Apps basierenden mobilen Anwendung vertraut sein. Die auf Xamarin basierende mobile Anwendung wird in dieser Prüfung nicht behandelt.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Konfigurieren von Außendienstanwendungen; Arbeitsaufträge verwalten; Arbeitsaufträge planen und versenden; Verwaltung der Mobilität vor Ort; Inventar und Einkauf verwalten; und angeschlossenen Außendienst implementieren.'
+summary: >-
+  <div>
+
+  <div><font color='red'><strong>Der Inhalt dieses Examens wurde am 12. November 2021 aktualisiert. Laden Sie das unten aufgeführte Dokument mit den bewerteten Qualifikationen herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
+
+  <div><font color='red'>HINWEIS: Erforderliche Mindestpunktzahl: 700. Weitere Informationen zu Prüfungsergebnissen finden Sie <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div>
+
+  </div>
+
+
+  Kandidat*innen für dieses Examen sind Dynamics 365 Field Service Functional Consultants. Die Kandidat*innen sind für das Implementieren von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus von Field Service abschließen.
+
+
+  Diese Expert*innen implementieren die Field Service-Prozesse, die in Zusammenarbeit mit internen und externen Teams konzipiert wurden. Diese Zusammenarbeit umfasst das Konfigurieren der Standardverwaltungsbereiche der Field Service-Anwendung, das Bereitstellen der Connected Field Service-Lösung (IoT) und der mobilen App sowie das Implementieren zusätzlicher erforderlicher Anpassungen. Kandidat*innen sind für das Konfigurieren und Bereitstellen der Field Service-App in Verbindung mit der zentralen Kundenserviceanwendung verantwortlich.
+
+
+  Kandidat*innen müssen wissen, wie Ressourcen, Merkmale, Vorfallstypen, Bestandsintegrationen, Servicevereinbarungen, Ressourcenplanung, Arbeitsaufträge, Inspektionen, Dienstaufgaben, Field Service-Benutzerrollen, Field Service-Einstellungen, die Connected Field Service-Lösung (IoT) und die mobile Field Service-App (Dynamics 365) konfiguriert werden. Außerdem müssen sie wissen, wie Komponenten der Field Service-App angepasst werden.
+subTitle: 'In diesem Examen wird Ihre Fähigkeit geprüft, die folgenden technischen Aufgaben auszuführen: das Konfigurieren von Field Service-Anwendungen, das Verwalten von Arbeitsaufträgen, das Planen und Senden von Arbeitsaufträgen, das Verwalten der mobilen Field Service-App (Dynamics 365), das Verwalten des Bestands und der Einkäufe sowie das Implementieren von Ressourcen und verknüpften Geräten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Vzxi
 practiceTestUrl: https://www.mindhub.com/mb-240-microsoft-dynamics-365-field-service-microsoft-official-practice-test/p/MU-MB-240?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-240&examname=Exam%20MB-240:%20Microsoft%20Dynamics%20365%20for%20Field%20Service&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-240
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MB-240&examname=Exam%20MB-240:%20Microsoft%20Dynamics%20365%20for%20Field%20Service&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-240
 locales:
 - en
 - ja
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 26. April 2021 aktualisiert.Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändert.
-- Außendienstanwendungen konfigurieren (15-20%)
-- Verwaltung von Arbeitsaufträgen (15-20%)
-- Arbeitsaufträge planen und versenden (25-30%)
-- Verwaltung der Mobilität im Außendienst (10-15%)
-- Inventar und Einkauf verwalten (5-10%)
-- Den angeschlossenen Außendienst implementieren (10-15%)
+- The content of this exam was updated on November 12, 2021. Please download the exam skills outline below to see what changed.
+- Configure field service applications (20-25%)
+- Manage work orders (25-30%)
+- Schedule and dispatch work orders (20-25%)
+- Manage the Field Service (Dynamics 365) mobile app (10-15%)
+- Manage inventory and purchasing (5-10%)
+- Implement assets and connected devices (10-15%)
 roles:
 - functional-consultant
 products:
@@ -47,28 +62,27 @@ relatedCertifications:
 - related:
     uid: certification.d365-functional-consultant-field-service
 resources:
-- title: Lernpfad zur Zertifizirung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+- title: Lernpfad zur Zertifizierung
+  description: Empfohlene Schulungsressourcen, mit denen Sie sich auf die erforderlichen Examen vorbereiten und Ihre Zertifizierung erhalten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C56X
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+- title: Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen für Dynamics 365 und Power Platform.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: Unterstützung bei Zertifizierungsexamen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: Beantragen von Hilfsmitteln
+  description: Hier erfahren Sie mehr über das Beantragen von Hilfsmitteln für Ihr Examen.
   href: ../request-accommodations.md
 - title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+  description: Lesen Sie die Examensrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
-
