--- a/learn-certs-pr/exams/mb-260.yml
+++ b/learn-certs-pr/exams/mb-260.yml
@@ -3,12 +3,12 @@ title: Microsoft Customer Data Platform Specialist (beta)
 metadata:
   title: 'Examen MB-260: Microsoft Customer Data Platform Specialist (beta)'
   description: 'Examen MB-260: Microsoft Customer Data Platform Specialist (beta)'
-  ms.openlocfilehash: 8bb0a9a60827f33b04f5b773e79e84bc6ce3ef2f
-  ms.sourcegitcommit: 9ce6bfd5b440f21921db0832e2a560c814478dcb
-  ms.translationtype: HT
+  ms.openlocfilehash: 233dfdec85596518daafffb84d484a41f09f9f3c
+  ms.sourcegitcommit: d80173e30006986f164a370573cac47d596ddb52
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 11/02/2021
-  ms.locfileid: "132113408"
+  ms.lasthandoff: 12/06/2021
+  ms.locfileid: "133742921"
 uid: exam.mb-260
 displayName: MB-260
 summary: >-
@@ -21,8 +21,8 @@ summary: >-
   Kandidat*innen benötigen auch Erfahrung mit Prozessen im Zusammenhang mit KPIs sowie Datenaufbewahrung, -validierung, -visualisierung, -aufbereitung, -abgleich, -fragmentierung, -segmentierung und -erweiterung. Sie sollten ein allgemeines Verständnis von Azure Machine Learning, Azure Synapse Analytics und Azure Data Factory haben.
 
 
-  <div><br/><br/><font color='red'><strong>Dieses Examen wird im Dezember 2021 verfügbar sein.</strong></font></div>
-subTitle: 'Diese Prüfung wird im Dezember 2021 verfügbar sein. In diesem Examen wird Ihre Fähigkeit abgefragt, die folgenden technischen Aufgaben auszuführen: Entwerfen von Customer Insights-Lösungen; Erfassen von Daten in Customer Insights; Erstellen von Kundenprofilen durch Vereinheitlichen von Daten; Implementieren von KI-Vorhersagen in Customer Insights; Konfigurieren von Measures und Segmenten; Konfigurieren von Drittanbieterverbindungen; und Verwalten von Customer Insights.'
+  <div><br/><br/><font color='red'><strong>Dieses Examen wird am oder um den 4. Januar 2022 verfügbar sein.</strong></font></div>
+subTitle: 'Dieses Examen wird am oder um den 4. Januar 2022 verfügbar sein. In diesem Examen wird Ihre Fähigkeit abgefragt, die folgenden technischen Aufgaben auszuführen: Entwerfen von Customer Insights-Lösungen; Erfassen von Daten in Customer Insights; Erstellen von Kundenprofilen durch Vereinheitlichen von Daten; Implementieren von KI-Vorhersagen in Customer Insights; Konfigurieren von Measures und Segmenten; Konfigurieren von Drittanbieterverbindungen; und Verwalten von Customer Insights.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWMD8f
 locales:
@@ -52,8 +52,6 @@ products:
 - power-platform
 - power-query
 - common-data-service
-exams:
-- uid: exam.mb-260
 relatedCertifications:
 - related:
     uid: certification.customer-data-platform-specialty
@@ -61,21 +59,21 @@ resources:
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+- title: Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen für Dynamics 365 und Power Platform.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: Unterstützung bei Zertifizierungsexamen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: Beantragen von Hilfsmitteln
+  description: Hier erfahren Sie mehr über das Beantragen von Hilfsmitteln für Ihr Examen.
   href: ../request-accommodations.md
 - title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+  description: Lesen Sie die Examensrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
