--- a/learn-certs-pr/exams/mb-600.yml
+++ b/learn-certs-pr/exams/mb-600.yml
@@ -1,14 +1,14 @@
 ### YamlMime:Examination
-title: Microsoft Dynamics 365 + Power Platform Solution Architect
+title: Microsoft Dynamics 365 + Power Platform Solution Architect
 metadata:
   title: 'Examen MB-600: Microsoft Dynamics 365 + Power Platform Solution Architect'
   description: 'Examen MB-600: Microsoft Dynamics 365 + Power Platform Solution Architect'
-  ms.openlocfilehash: 7557cd2511d0d6803880cda8cb4c518a147b49ae
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.openlocfilehash: 4a59c5b03f92dc96b8b46746cb3ae11098aba144
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132105803"
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133079040"
 uid: exam.mb-600
 displayName: MB-600
 summary: >-
@@ -19,13 +19,13 @@ summary: >-
   </div>
 
 
-  Lösungsarchitekten für Microsoft Dynamics 365 + Power Platform führen erfolgreiche Implementierungen durch und konzentrieren sich auf Lösungen, die allgemeine geschäftliche und technische Anforderungen von Unternehmen erfüllen.
+  Lösungsarchitekt*innen für Microsoft Dynamics 365 + Power Platform führen erfolgreiche Implementierungen durch und beschäftigen sich mit Lösungen, die allgemeine geschäftliche und technische Anforderungen von Organisationen erfüllen.
 
 
-  Ein Solution Architect verfügt sowohl über das technische als auch das Fachwissen über die modellgesteuerten Power Platform-Anwendungen in Dynamics 365. Diese umfassen Dynamics 365 for Customer Service, Dynamics 365 for Field Service, Dynamics 365 for Marketing sowie Dynamics 365 for Sales, die zugehörige Microsoft Cloud-Lösungen und Drittanbieter-Technologien. Der Solution Architect setzt seine Kenntnisse und Erfahrungen während des gesamten Projekt-Lebenszyklus ein. Der Solution Architect führt proaktive und präventive Arbeiten durch, die den Wert der Investition des Kunden steigern und die Gesundheit des Unternehmens fördern. Diese Position erfordert die Fähigkeit, Möglichkeiten zur Lösung von Geschäftsproblemen zu identifizieren.
+  Ein*e Lösungsarchitekt*in verfügt sowohl über das Praxis- als auch das Fachwissen zu modellgesteuerten Power Platform-Apps in Dynamics 365. Diese umfassen Dynamics 365 for Customer Service, Dynamics 365 for Field Service, Dynamics 365 for Marketing sowie Dynamics 365 for Sales, die zugehörigen Microsoft-Cloudlösungen und Drittanbieter-Technologien. Ein Solution Architect setzt seine Kenntnisse und Erfahrungen während des gesamten Kundenprojekts ein. Ein Solution Architect agiert proaktiv und präventiv, um den Wert der Kundeninvestition zu steigern und die Integrität des Unternehmens zu fördern. Diese Rolle erfordert die Fähigkeit, Möglichkeiten zur Lösung von Geschäftsproblemen zu identifizieren.
 
 
-  Solution Architects haben Erfahrung in den fachlichen und technischen Disziplinen der Power Platform und modellgesteuerten Anwendungen in Dynamics 365. Solution Architects sollen in der Lage sein, Designentscheidungen in den Bereichen Entwicklung, Konfiguration, Integration, Infrastruktur, Sicherheit, Verfügbarkeit, Storage und Änderungsmanagement zu erleichtern. In dieser Rolle stellen Lösungsarchitekten die Balance zwischen den fachlichen und nicht-fachlichen geschäftlichen Anforderungen eines Projekts her.
+  Lösungsarchitekt*innen verfügen über Erfahrung in den funktionalen und technischen Disziplinen der Power Platform-Dienste und der modellgesteuerten Apps in Dynamics 365. Solution Architects sollen in der Lage sein, Entwurfsentscheidungen in den Bereichen Entwicklung, Konfiguration, Integration, Infrastruktur, Sicherheit, Verfügbarkeit, Speicher und Change Management zu unterstützen. In dieser Rolle werden die geschäftlichen Anforderungen eines Projekts mit den funktionalen und nicht funktionalen Anforderungen in Einklang gebracht.
 subTitle: 'In diesem Examen wird Ihre Fähigkeit abgefragt, die folgenden technischen Aufgaben zu bewältigen: Durchführen von Lösungsbereitstellung und Anforderungsanalyse, Konzipieren von Lösungen sowie Entwicklung und Implementieren der Lösung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE440oW
@@ -52,26 +52,26 @@ relatedCertifications:
     uid: certification.power-apps-and-d365-solution-architect-expert
 resources:
 - title: Lernpfad zur Zertifizierung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  description: Empfohlene Trainingsressourcen, mit denen Sie sich auf die erforderlichen Examen vorbereiten und Ihre Zertifizierung erhalten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Ca9W
-- title: Schulungs- und Zertifizierungsleitfaden
+- title: Trainings- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
 - title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+  description: Hier finden Sie eine Übersicht mit den Basiszertifizierungen, den rollenbasierten Zertifizierungen und den Specialty-Zertifizierungen für Dynamics 365 und Power Platform.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: Unterstützung bei Zertifizierungsexamen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: Beantragen von Hilfsmitteln
+  description: Hier erfahren Sie mehr über die Beantragung von Hilfsmitteln für Ihr Examen.
   href: ../request-accommodations.md
 - title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+  description: Lesen Sie die Examensrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
