--- a/learn-certs-pr/exams/ms-100.yml
+++ b/learn-certs-pr/exams/ms-100.yml
@@ -1,32 +1,40 @@
 ### YamlMime:Examination
-title: Microsoft 365 Identity and Services
+title: Microsoft 365 Identity and Services
 metadata:
-  title: 'Exam MS-100: Microsoft 365 Identity and Services'
-  description: 'Exam MS-100: Microsoft 365 Identity and Services'
+  title: 'Examen MS-100: Microsoft 365 Identity and Services'
+  description: 'Examen MS-100: Microsoft 365 Identity and Services'
+  ms.openlocfilehash: 0e5fe1af181ff15294bbddd7b2ab3f41f94f99c2
+  ms.sourcegitcommit: a2b584eb3752159a44885ce2df4ef8c7263255e4
+  ms.translationtype: MT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/30/2021
+  ms.locfileid: "133301845"
 uid: exam.ms-100
 displayName: MS-100
-summary: |-
-  <div><div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am Mittwoch, 29. September 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument mit den bewerteten Fähigkeiten herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div><div><font color='red'>HINWEIS: Punktzahl für einen erfolgreichen Abschluss: 700. Erfahren Sie mehr über Prüfungsergebnisse <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div></div>
-  
-  Kandidaten für diese Prüfung sind Microsoft 365 Enterprise Administratoren, die an Bewertung, Planung, Migration, Bereitstellung und Verwaltung von Microsoft 365 Services mitwirken. Sie führen Microsoft 365-Mandantenverwaltungsaufgaben für ein Unternehmen aus, einschließlich seiner Identitäten, Sicherheit, Compliance, Power Platform und unterstützenden Technologien.
-  
-  Die Kandidaten verfügen über fundierte Kenntnisse der Microsoft 365-Workloads und sollten als Administrator für mindestens eine Exchange-, SharePoint-, Teams- oder Windows 10-Bereitstellung tätig gewesen sein. Die Bewerber verfügen außerdem über Kenntnisse in den Bereichen Netzwerke, Serververwaltung und IT-Grundlagen wie DNS, Active Directory und PowerShell.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, folgende technische Aufgaben zu erfüllen: Entwurf und Implementieren von Microsoft 365-Diensten, Verwaltung von Benutzeridentität und -rollen, Verwaltung von Zugriff und Authentifizierung, und Planung von Office 365-Workloads und -Anwendungen.'
+summary: >-
+  <div><div><font color='red'><strong>Der Inhalt dieses Examens wurde am 30. November 2021 aktualisiert. Laden Sie das unten aufgeführte Dokument mit den bewerteten Qualifikationen herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div><div><font color='red'>HINWEIS: Erforderliche Mindestpunktzahl: 700. Weitere Informationen zu Prüfungsergebnissen finden Sie <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div></div>
+
+
+  Kandidat*innen für dieses Examen sind Microsoft 365 Enterprise-Administrator*innen, die an der Bewertung, Planung, Migration, Bereitstellung und Verwaltung von Microsoft 365-Diensten mitwirken. Sie führen Verwaltungsaufgaben im Bereich der Microsoft 365-Mandantenverwaltung für Unternehmen durch, darunter für. Identitäten, Sicherheit, Compliance, Power Platform und unterstützenden Technologien.
+
+
+  Kandidat*innen verfügen über fundierte Kenntnisse über Microsoft 365-Workloads und sollten als Administrator*in für mindestens eine Exchange-, SharePoint-, Teams- oder Windows 10-Bereitstellung tätig gewesen sein. Kandidat*innen sollten auch Erfahrung mit Netzwerken, Serververwaltung und IT-Grundlagen wie DNS, Active Directory und PowerShell besitzen.
+subTitle: 'In diesem Examen wird Ihre Fähigkeit geprüft, die folgenden technischen Aufgaben auszuführen: Entwerfen und Implementieren von Microsoft 365-Diensten, Verwalten von Benutzeridentitäten und -rollen, Verwalten von Zugriff und Authentifizierung und Planen von Office 365-Workloads und -Anwendungen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VJVE
 practiceTestUrl: https://www.mindhub.com/p/MU-MS-100?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MS-100&examname=Exam%20MS-100:%20Microsoft%20365%20Identity%20and%20Services&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-100
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MS-100&examname=Exam%20MS-100:%20Microsoft%20365%20Identity%20and%20Services&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-100
 locales:
 - en
 - ja
 levels:
 - advanced
 skills:
-- Der Inhalt dieser Prüfung wurde am Mittwoch, 29. September 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
-- Entwerfen und Implementieren von Microsoft 365-Services (25-30%)
-- Benutzeridentität und Rollen verwalten (25-30%)
-- Zugriff und Authentifizierung verwalten (15-20%)
-- Office 365-Workloads und -Anwendungen planen (25-30%)
+- The content of this exam was updated on November 30, 2021. Please download the exam skills outline below to see what changed.
+- Design and implement Microsoft 365 services (25-30%)
+- Manage user identity and roles (25-30%)
+- Manage access and authentication (15-20%)
+- Plan Office 365 workloads and applications (25-30%)
 roles:
 - administrator
 products:
@@ -48,24 +56,24 @@ relatedCertifications:
 - related:
     uid: certification.m365-enterprise-administrator
 resources:
-- title: Informieren Sie sich über die Zertifizierungen
+- title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
-- title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
+- title: Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen.
   href: https://aka.ms/traincertposter
-- title: Prüfungswiederholung
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: Unterstützung bei Zertifizierungsexamen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: Beantragen von Hilfsmitteln
+  description: Hier erfahren Sie mehr über das Beantragen von Hilfsmitteln für Ihr Examen.
   href: ../request-accommodations.md
-- title: Prüfungsrichtlinien und häufig gestellten Fragen
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+- title: Prüfungsrichtlinien und FAQs
+  description: Lesen Sie die Examensrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
