--- a/learn-certs-pr/exams/ms-720.yml
+++ b/learn-certs-pr/exams/ms-720.yml
@@ -1,17 +1,20 @@
 ### YamlMime:Examination
-title: Microsoft Teams Voice Engineer (Beta)
+title: Microsoft Teams Voice Engineer
 metadata:
-  title: 'Prüfung MS-720: Microsoft Teams Voice Engineer (Beta)'
-  description: 'Prüfung MS-720: Microsoft Teams Voice Engineer (Beta)'
-  ms.openlocfilehash: 3455cb9764498974dc6125b4db0710849e973eea
-  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
-  ms.translationtype: HT
+  title: 'Exam MS-720: Microsoft Teams Voice Engineer'
+  description: 'Exam MS-720: Microsoft Teams Voice Engineer'
+  ms.openlocfilehash: 3dccbd448bf8d33877ed44d7ccb8a342bc942944
+  ms.sourcegitcommit: b69a9b2b33f5f8993b5f681e1e6362b5666158e9
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 11/24/2021
-  ms.locfileid: "133078644"
+  ms.lasthandoff: 12/18/2021
+  ms.locfileid: "135412687"
 uid: exam.ms-720
 displayName: MS-720
 summary: >-
+  <div><strong>HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.<br/><br/></strong></div>
+
+
   Kandidaten für diese Prüfung sind Microsoft Teams Voice Engineers, die integrierte Kommunikationslösungen in einer Organisation planen, entwerfen, konfigurieren und warten sowie Probleme behandeln. Sie müssen in der Lage sein, Geschäftsanforderungen in technische Architekturen und Entwürfe für Kommunikationslösungen umzusetzen.
 
 
@@ -19,15 +22,12 @@ summary: >-
 
 
   Die Kandidaten arbeiten mit Telefonieanbietern und Drittanbietern zusammen, um erweiterte Sprachfunktionen in Microsoft Teams zu ermöglichen. Sie arbeiten zudem mit Administratoren für andere Workloads zusammen, einschließlich Netzwerk, Identität, Lizenzierung, Sicherheit und Compliance.
-
-
-  <div><font color='red'><br/>HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>. Betaprüfungen werden nicht sofort bewertet, weil wir Daten zur Qualität der Fragen und der Prüfung sammeln. <a href="/learn/certifications/beta-exams">Erfahren Sie mehr über den Wert und die Bedeutung von Betaprüfungen.</a></font></div>
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Planen und Konfigurieren von Microsoft Teams-Telefon, Optimieren der Netzwerkleistung, Planen und Konfigurieren von Direct Routing, Konfigurieren und Verwalten von Microsoft Teams-Telefon für Sprachbenutzer, Planen und Konfigurieren von Microsoft Teams-Clients und -Geräten sowie Überwachen von Microsoft Teams-Telefon und Behandeln von Problemen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWLFS2
 providers:
 - providerType: pearson-vue
-  examUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=MS-720&examname=Exam%20MS-720:%20Microsoft%20Teams%20Voice%20Engineer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-720
+  examUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MS-720&examname=Exam%20MS-720:%20Microsoft%20Teams%20Voice%20Engineer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-720
 locales:
 - en
 levels:
