--- a/learn-certs-pr/identity-and-access-administrator/index.yml
+++ b/learn-certs-pr/identity-and-access-administrator/index.yml
@@ -2,23 +2,32 @@
 title: 'Microsoft Certified: Identity and Access Administrator Associate'
 metadata:
   title: 'Microsoft Certified: Identity and Access Administrator Associate'
-  description: Der Microsoft Identitäts- und Zugriffs-Administrator entwirft, implementiert und betreibt die Identitäts- und Zugriffsverwaltungssysteme eines Unternehmens mit Hilfe von Azure AD. Er verwaltet Aufgaben wie z. B. die Bereitstellung einer sicheren Authentifizierung und den autorisierten Zugriff auf Unternehmensanwendungen.
+  description: Benutzer*innen mit der Zertifizierung „Microsoft Identity and Access Administrator“ entwerfen, implementieren und verwalten die Identitäts- und Zugriffsverwaltungssysteme einer Organisation mithilfe von Azure AD. Er*Sie verwaltet Aufgaben wie das Bereitstellen sicherer Authentifizierungs- und Autorisierungszugriffe auf Unternehmensanwendungen.
+  ms.openlocfilehash: f8054db5328fb417bb7f65ea6ed99ae6e74d51e4
+  ms.sourcegitcommit: 367335eb84a6583bb7300f39e7d302c9bbd30bea
+  ms.translationtype: MT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 12/13/2021
+  ms.locfileid: "134694549"
 uid: certification.identity-and-access-administrator
+certificationRenewalUid: renewal.identity-and-access-administrator
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 24. September 2021 aktualisiert. Bitte laden Sie das Dokument über die gemessenen Fähigkeiten auf der <a href="/learn/certifications/exams/SC-300">sc-300 Prüfungsseite</a> herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
-  
-  Der Microsoft Identity and Access Administrator entwirft, implementiert und greift zu auf Management Systeme mit Azure Active Directory (Azure AD). Sie verwalten Aufgaben wie z. B. die Bereitstellung einer sicheren Authentifizierung und des autorisierten Zugriffs auf Unternehmensanwendungen. Der Administrator bietet allen Benutzern nahtlose Benutzererfahrungen und Self-Service-Verwaltungsfunktionen. Adaptiver Zugang und Governance sind Kernelemente der Rolle. Diese Rolle ist auch für die Fehlerbehebung, Überwachung und Berichterstellung für die Identitäts- und Zugriffsumgebung verantwortlich.
-  
-  Der Identitäts- und Zugriffsadministrator kann eine einzelne Person oder ein Mitglied eines größeren Teams sein. Diese Rolle arbeitet mit vielen anderen Rollen im Unternehmen zusammen, um strategische Identitätsprojekte zur Modernisierung von Identitätslösungen, zur Implementierung hybrider Identitätslösungen und zur Implementierung von Identitäts-Governance voranzutreiben.
-subTitle: Der Microsoft Identitäts- und Zugriffs-Administrator entwirft, implementiert und betreibt die Identitäts- und Zugriffsverwaltungssysteme eines Unternehmens mit Hilfe von Azure AD. Er verwaltet Aufgaben wie z. B. die Bereitstellung einer sicheren Authentifizierung und den autorisierten Zugriff auf Unternehmensanwendungen.
+summary: >-
+  <div><font color='red'><strong>Der Inhalt dieser Zertifizierung wurde am 24. September 2021 aktualisiert. Laden Sie das Dokument zu den bewerteten Qualifikationen von der <a href="/learn/certifications/exams/sc-300">Seite für das Examen SC-300</a> herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
+
+
+  Der*Die Microsoft Identity and Access Administrator entwirft, implementiert und betreibt die Systeme zur Identitäts- und Zugriffsverwaltung einer Organisation mithilfe von Azure Active Directory (Azure AD). Er*Sie verwaltet Aufgaben wie das Bereitstellen sicherer Authentifizierungs- und Autorisierungszugriffe auf Unternehmensanwendungen. Der*Die Administrator*in bietet nahtlose Benutzerumgebungen und Self-Service-Verwaltungsfunktionen für alle Benutzer*innen. Der adaptive Zugriff und die Governance sind Kernelemente der Rolle. Diese Rolle ist auch für die Problembehandlung, das Überwachen und die Berichterstellung für die Identitäts- und Zugriffsumgebung verantwortlich.
+
+
+  Der*Die Identity and Access Administrator kann eine einzelne Person oder ein Mitglied eines größeren Teams sein. Diese Rolle arbeitet mit vielen anderen Rollen in der Organisation zusammen, um strategische Identitätsprojekte zum Modernisieren von Identitätslösungen zu fördern sowie Hybrid-Identitätslösungen und Identitätsgovernance zu implementieren.
+subTitle: Benutzer*innen mit der Zertifizierung „Microsoft Identity and Access Administrator“ entwerfen, implementieren und verwalten die Identitäts- und Zugriffsverwaltungssysteme einer Organisation mithilfe von Azure AD. Er*Sie verwaltet Aufgaben wie das Bereitstellen sicherer Authentifizierungs- und Autorisierungszugriffe auf Unternehmensanwendungen.
 levels:
 - intermediate
 skills:
-- Implementieren einer Identitätsmanagementlösung
-- Implementieren einer Authentifizierungs- und Zugriffsverwaltungslösung
-- Implementieren einer Zugriffsverwaltung für Apps
-- Planung und Umsetzung einer Identitäts-Governance-Strategie
+- Implement an identity management solution
+- Implement an authentication and access management solution
+- Implement access management for apps
+- Plan and implement an identity governance strategy
 roles:
 - administrator
 - identity-access-admin
@@ -42,10 +51,10 @@ exams:
 resources:
 - title: Zertifizierungsposter
   description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+  href: https://aka.ms/traincertposter
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+  href: https://aka.ms/TrainingCertDeck
 - title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
@@ -55,6 +64,6 @@ resources:
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
-- title: Teilen Sie Ihre Zertifizierungsabzeichen
-  description: Feiern Sie Ihre Leistung mit Ihrem Netzwerk. Fordern Sie Ihr  Microsoft-Certification an und fügen Sie es LinkedIn, Ihrem Lebenslauf und anderem hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
