--- a/learn-certs-pr/index.yml
+++ b/learn-certs-pr/index.yml
@@ -2,12 +2,12 @@
 metadata:
   ms.topic: hub-page
   ms.prod: learning-azure
-  ms.openlocfilehash: 1749938a52394fdaf35f7b8fc01e46c2178e5b10
-  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
-  ms.translationtype: HT
+  ms.openlocfilehash: 0d3b795deb72df72a5170685cca3ef6da0d8c358
+  ms.sourcegitcommit: c14c3a1e24239ac3e56e978ed347f6d7d24e48d3
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 11/24/2021
-  ms.locfileid: "133079227"
+  ms.lasthandoff: 12/20/2021
+  ms.locfileid: "135417193"
 title: Microsoft-Zertifizierungen
 summary: Erwerben Sie Zertifizierungen, die zeigen, dass Sie stets auf dem aktuellen Stand sind, was technische Berufe und Anforderungen betrifft. Wählen Sie eine Rolle aus, und entdecken Sie geeignete Zertifizierungspfade.
 roles:
@@ -70,11 +70,11 @@ certificationsSection:
       text: Weitere Zertifizierungen einsehen
       url: /learn/certifications/browse?resource_type=certification
 upworkSection:
-  title: Möchten Sie ein zusätzliches Einkommen verdienen?
-  summary: Wir arbeiten mit Upwork zusammen, um Azure-zertifizierte Freiberufler mit Kunden zu verbinden.
+  title: Kostenlose Erneuern Ihrer Microsoft-Zertifizierung
+  summary: Wissen Sie, dass rollenbasierte und spezielle Microsoft-Zertifizierungen ablaufen, es sei denn, sie werden erneuert? Lernen Sie die neuesten Updates der Technologie für Ihre Auftragsrolle kennen, und erneuern Sie Ihre Zertifizierung kostenlos, indem Sie eine Onlinebewertung auf Microsoft Learn bestehen.
   signupLink:
-    text: Melden Sie sich bei Upwork an
-    url: https://forms.office.com/Pages/ResponsePage.aspx?id=v4j5cvGGr0GRqy180BHbRw3HkB8qWX5Iq22_B4ihseZUN1haSVVPNUpINTRFRVRaQ1BRSzNCRllQNS4u
+    text: Erfahren Sie mehr
+    url: /learn/certifications/renew-your-microsoft-certification
 trainingSection:
   title: Wie man sich auf die Zertifizierung vorbereitet
   summary: Microsoft ist sich bewusst, dass jeder Mensch unterschiedliche Lernpräferenzen hat, deshalb bieten wir Zertifizierungen und Schulungsmöglichkeiten während Ihres gesamten Zertifizierungsvorhabens an.
