--- a/learn-certs-pr/m365-enterprise-administrator/renew/index.yml
+++ b/learn-certs-pr/m365-enterprise-administrator/renew/index.yml
@@ -1,29 +1,33 @@
 ### YamlMime:CertificationRenewal
-title: 'Erneuerung für Microsoft 365 Certified: Enterprise Administrator Expert'
+title: 'Erneuerung von Microsoft 365 Certified: Enterprise Administrator Expert'
 metadata:
-  title: 'Erneuerung für Microsoft 365 Certified: Enterprise Administrator Expert'
-  description: 'Wenn Sie über diese Zertifizierung verfügen und sie innerhalb von sechs Monaten abläuft, sind Sie berechtigt, diese zu erneuern.'
+  title: 'Erneuerung von Microsoft 365 Certified: Enterprise Administrator Expert'
+  description: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern.
+  ms.openlocfilehash: e0d55d2d4f22960dced3ef98715a2a1786a6b508
+  ms.sourcegitcommit: 8eea77e8e5c6afd5914ba7ef2f0058440816aee7
+  ms.translationtype: MT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/23/2021
+  ms.locfileid: "132963937"
 uid: renewal.m365-enterprise-administrator
 certificationUid: certification.m365-enterprise-administrator
 assessmentId: f28a7832-30d9-4fe7-afea-e88ec7ab4e5a
 durationInMinutes: 45
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
-summary: |-
-  Wenn Sie über diese Zertifizierung verfügen und sie innerhalb von sechs Monaten abläuft, sind Sie berechtigt, diese zu erneuern. Zeigen Sie, dass Sie mit den neuesten Microsoft 365 -Updates auf dem letzten Stand sind, indem Sie die Prüfung zur Erneuerung bestehen. Sie können sich auf die Erneuerung auch mit der kuratierten Sammlung von Lernmodulen vorbereiten.
+summary: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern. Zeigen Sie, dass Sie mit den neuesten Microsoft 365-Aktualisierungen auf dem Laufenden sind, indem Sie das Erneuerungsexamen bestehen. Sie können sich auch mit der zusammengestellten Sammlung von Lernmodulen auf das Erneuerungsexamen vorbereiten.
 skills:
-- Windows 10 durch gemeinsame Verwaltung mit System Center Configuration Manager verwalten
-- Geräteverwaltung mit Microsoft Endpoint Manager vereinfachen
-- E-Mails mit Hilfe von Konnektoren an Postfächer außerhalb von Microsoft 365 übermitteln
-- Schützen Sie Ihre Umgebung mit Microsoft Defender for Identity
-- Schützen Sie sich vor Bedrohungen mit Microsoft Defender for Endpoint
-- Migrieren von Benutzerdateien und Einstellungen in Microsoft 365
-- Bereitstellung von Microsoft 365-Apps und Geschäftsanwendungen
-- Ihre Daten mit Sensitivitätsetiketten schützen
-- Das Insider-Risiko in Microsoft 365 verwalten
+- Examine Windows 10 deployment scenarios
+- Simplify device management with Microsoft Endpoint Manager
+- Getting Started with Microsoft Identity
+- Deliver mail to mailboxes outside Microsoft 365 by using connectors
+- Examine Microsoft Defender for Office 365
+- Deliver Microsoft 365 Apps and business apps
+- Protect your data with sensitivity labels
+- Manage insider risk in Microsoft 365
 examsPassed:
 - ms-100, ms-101
-studyGuideDescription: 'Verwenden Sie diese Sammlung von Lernmodulen, um sich auf diese Microsoft 365-Zertifizierung vorzubereiten: Enterprise Administrator Expert Erneuerungsbewertung.'
+studyGuideDescription: 'Nutzen Sie diese Sammlung von Lernmodulen, um sich auf das Erneuerungsexamen „Microsoft 365 Certified: Enterprise Administrator Expert“ vorzubereiten.'
 resources:
-- title: Über die Erneuerung von Zertifizierungen
-  summary: Verstehen Sie den Prozess und die Anforderungen, um Ihre Zertifizierungen online zu erneuern
+- title: Informationen zur Zertifizierungserneuerung
+  summary: Informationen zum Prozess und zu den Anforderungen der Onlineerneuerung Ihrer Zertifizierungen
   url: https://docs.microsoft.com/learn/certifications/renew-your-microsoft-certification
