--- a/learn-certs-pr/m365-messaging-administrator/renew/index.yml
+++ b/learn-certs-pr/m365-messaging-administrator/renew/index.yml
@@ -3,30 +3,31 @@ title: 'Erneuerung von Microsoft 365 Certified: Messaging Administrator Associat
 metadata:
   title: 'Erneuerung von Microsoft 365 Certified: Messaging Administrator Associate'
   description: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern.
-  ms.openlocfilehash: a908548afa5ae16f34262a5af2622bfeec9ccdd3
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.openlocfilehash: b15c2bb20b968641eaa9e80699e5fa8ccd2fb358
+  ms.sourcegitcommit: aff11b575edcec99afa93eb5c014d5d58cb81e0b
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132105539"
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133028357"
 uid: renewal.m365-messaging-administrator
 certificationUid: certification.m365-messaging-administrator
 assessmentId: d87d7bd1-2890-481f-9ec4-9ba03d75719a
 durationInMinutes: 45
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern. Zeigen Sie, dass Sie mit den neuesten Exchange- und Microsoft 365-Aktualisierungen auf dem Laufenden sind, indem Sie das Erneuerungsexamen bestehen. Sie können sich auch mit der kuratierten Sammlung von Lernmodulen auf die Erneuerung vorbereiten.
+summary: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern. Zeigen Sie, dass Sie mit den neuesten Exchange- und Microsoft 365-Aktualisierungen auf dem Laufenden sind, indem Sie das Erneuerungsexamen bestehen. Sie können sich auch mit den zusammengestellten Lernmodulen auf die Erneuerung vorbereiten.
 skills:
 - Plan and manage organizational settings with Exchange Online
 - Plan and manage client access with Exchange
 - Manage role-based-permissions in Microsoft 365 Messaging
 - Deliver mail to mailboxes outside Microsoft 365 by using connectors
-- Manage message hygiene using Exchange Online and Microsoft 365 Advanced Threat Protection
+- Manage message hygiene using Exchange Online and Microsoft 365 Defender for Office 365
 - Manage compliance in Microsoft 365 and Exchange Online
+- Govern information in Microsoft 365
 - Troubleshoot mail flow with Exchange
 examsPassed:
 - ms-203
-studyGuideDescription: 'Nutzen Sie diese Sammlung von Lernmodulen, um sich auf das Erneuerungsexamen „Microsoft 365 Certified: Messaging Administrator Associate“ vorzubereiten.'
+studyGuideDescription: Informationen zur Zertifizierungserneuerung
 resources:
-- title: Informationen zur Zertifizierungserneuerung
-  summary: Informationen zum Prozess und zu den Anforderungen der Onlineerneuerung Ihrer Zertifizierungen
+- title: Informationen zum Prozess und zu den Anforderungen der Onlineerneuerung Ihrer Zertifizierungen
+  summary: Understand the process and requirements to renew your certifications online
   url: https://docs.microsoft.com/learn/certifications/renew-your-microsoft-certification
