--- a/learn-certs-pr/modern-desktop/renew/index.yml
+++ b/learn-certs-pr/modern-desktop/renew/index.yml
@@ -3,25 +3,24 @@ title: 'Erneuerung von Microsoft 365 Certified: Modern Desktop Administrator Ass
 metadata:
   title: 'Erneuerung von Microsoft 365 Certified: Modern Desktop Administrator Associate'
   description: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern.
-  ms.openlocfilehash: aa4d0876058a806fcfda7e5a94b9c530d9846452
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.openlocfilehash: ed47647d011063f4ab0520eb75e75f22c8bad425
+  ms.sourcegitcommit: 8eea77e8e5c6afd5914ba7ef2f0058440816aee7
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132105435"
+  ms.lasthandoff: 11/23/2021
+  ms.locfileid: "132963960"
 uid: renewal.m365-modern-desktop
 certificationUid: certification.modern-desktop
 assessmentId: 8602eec7-4017-456f-a878-62fe16630114
 durationInMinutes: 45
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern. Zeigen Sie, dass Sie mit den neuesten Microsoft 365-Aktualisierungen auf dem Laufenden sind, indem Sie das Erneuerungsexamen bestehen. Sie können sich auch mit der kuratierten Sammlung von Lernmodulen auf die Erneuerung vorbereiten.
+summary: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern. Zeigen Sie, dass Sie mit den neuesten Microsoft 365-Aktualisierungen auf dem Laufenden sind, indem Sie das Erneuerungsexamen bestehen. Sie können sich auch mit der zusammengestellten Sammlung von Lernmodulen auf das Erneuerungsexamen vorbereiten.
 skills:
 - Automate Windows deployments by using Windows Autopilot
 - Simplify device management with Microsoft Endpoint Manager
 - Get more done and stay secure with Windows 10
 - Manage Windows updates in the cloud
 - Understand device management using Microsoft Endpoint Manager
-- Manage Windows 10 through co-management by using System Center Configuration Manager
 - Understand Conditional Access policies using Microsoft Endpoint Manager
 - Deploy, upgrade, and migrate to Windows 10
 - Manage applications by using Microsoft Intune
