--- a/learn-certs-pr/power-platform-solution-architect-expert/index.yml
+++ b/learn-certs-pr/power-platform-solution-architect-expert/index.yml
@@ -2,14 +2,15 @@
 title: 'Microsoft Certified: Power Platform Solution Architect Expert'
 metadata:
   title: 'Microsoft Certified: Power Platform Solution Architect Expert'
-  description: Power Platform Solution Architect-Experten arbeiten mit Projektbeteiligten zusammen und konzentrieren sich auf Lösungen, die sich auf die allgemeinen geschäftlichen und technischen Anforderungen ihrer Organisation auswirken. Kandidaten verfügen über funktionale und technische Kenntnisse über Power Platform, Dynamics 365-Apps für Kundenbindung, zugehörige Microsoft-Cloudlösungen und Technologien von Drittanbietern.
-  ms.openlocfilehash: 9af26f94a68041c7e09b364a7e1c166fbfefff70
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  description: Benutzer*innen mit der Zertifizierung „Power Platform Solution Architect Expert“ arbeiten mit Projektbeteiligten zusammen und konzentrieren sich auf Lösungen, die sich auf die allgemeinen geschäftlichen und technischen Anforderungen ihrer Organisation auswirken.
+  ms.openlocfilehash: f68253b8ec9bc87084bf6715761791f3c17a1f16
+  ms.sourcegitcommit: 367335eb84a6583bb7300f39e7d302c9bbd30bea
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132111800"
+  ms.lasthandoff: 12/13/2021
+  ms.locfileid: "134694362"
 uid: certification.power-platform-solution-architect-expert
+certificationRenewalUid: renewal.power-platform-solution-architect-expert
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: >-
   Wenn Sie Ihr Fachwissen als Microsoft Power Platform- oder Microsoft Dynamics 365-Lösungsarchitekt nachweisen möchten oder ein Entwickler oder leitender Berater sind, der bereit ist, den nächsten Schritt zum Lösungsarchitekten zu unternehmen, kann diese Expertenzertifizierung Ihnen helfen, Ihre Karriere voranzubringen.
@@ -25,7 +26,7 @@ summary: >-
   - Melden Sie sich zu einem Präsenzschulungskurs an.
 
   - Machen Sie sich mit den Lernpfaden vertraut, die auf [Microsoft Learn](/learn/paths/become-solution-architect/) verfügbar sind.
-subTitle: Power Platform Solution Architect-Experten arbeiten mit Projektbeteiligten zusammen und konzentrieren sich auf Lösungen, die sich auf die allgemeinen geschäftlichen und technischen Anforderungen ihrer Organisation auswirken. Kandidaten verfügen über funktionale und technische Kenntnisse über Power Platform, Dynamics 365-Apps für Kundenbindung, zugehörige Microsoft-Cloudlösungen und Technologien von Drittanbietern.
+subTitle: Benutzer*innen mit der Zertifizierung „Power Platform Solution Architect Expert“ arbeiten mit Projektbeteiligten zusammen und konzentrieren sich auf Lösungen, die sich auf die allgemeinen geschäftlichen und technischen Anforderungen ihrer Organisation auswirken.
 levels:
 - advanced
 skills:
@@ -88,6 +89,6 @@ resources:
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
-- title: Freigeben Ihrer Zertifizierungsbadges
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn in LinkedIn oder in Ihrem Lebenslauf und anderem mehr hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
