--- a/learn-certs-pr/azure-ai-engineer/index.yml
+++ b/learn-certs-pr/azure-ai-engineer/index.yml
@@ -2,31 +2,42 @@
 title: 'Microsoft Certified: Azure AI Engineer Associate'
 metadata:
   title: 'Microsoft Certified: Azure AI Engineer Associate'
-  description: 'Azure AI Engineers erstellen, verwalten und stellen AI-Lösungen bereit, die Azure Cognitive Services, Azure Cognitive Search, und Microsoft Bot Framework nutzen.'
+  description: Azure AI Engineers erstellen, verwalten und stellen KI-Lösungen bereit, die Azure Cognitive Services und Azure Applied AI Services nutzen.
+  ms.openlocfilehash: e136658d14177265832e1597648e68dae3d55a59
+  ms.sourcegitcommit: d80173e30006986f164a370573cac47d596ddb52
+  ms.translationtype: MT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 12/06/2021
+  ms.locfileid: "133742844"
 uid: certification.azure-ai-engineer
 certificationRenewalUid: renewal.azure-ai-engineer
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 24. September 2021 aktualisiert. Bitte laden Sie das Dokument über die gemessenen Fähigkeiten auf der <a href="/learn/certifications/exams/az-102">AI-102 Prüfungsseite herunter</a> um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
-  
-  Kandidaten für die Azure AI Engineer Associate-Zertifizierung sollten über Fachkenntnisse beim Erstellen, Verwalten und Bereitstellen von AI-Lösungen verfügen, die Azure Cognitive Services, Azure Cognitive Search und Microsoft Bot Framework nutzen.
-  
-  Zu ihren Aufgaben gehört die Teilnahme an allen Phasen der Entwicklung von AI-Lösungen, von der Definition und dem Design der Anforderungen bis hin zur Entwicklung, Bereitstellung, Wartung, Leistungsoptimierung und Überwachung.
-  
-  Azure AI-Ingenieure arbeiten mit Lösungsarchitekten zusammen, um ihre Vision zu umzusetzen, und mit Datenwissenschaftlern, Dateningenieuren, IoT-Spezialisten und  AI-Entwicklern, um vollständige End-to-End-AI-Lösungen zu erstellen.
-  
-  Kandidaten für diese Zertifizierung sollten C# oder Python beherrschen und in der Lage sein, REST-basierte APIs und SDKs zu nutzen, um Computervision, Verarbeitung natürlicher Sprache, Knowledge Mining und dialogorientierte AI-Lösungen auf Azure aufzubauen.
-  
-  Sie sollten auch die Komponenten des Azure-KI-Portfolios und die verfügbaren Datenspeicheroptionen verstehen. Außerdem müssen die Kandidaten das Prinzip der verantwortungsvollen KI verstehen und anwenden können.
-subTitle: Azure AI Engineers erstellen, verwalten und stellen AI-Lösungen bereit, die Azure Cognitive Services, Azure Cognitive Search, und Microsoft Bot Framework nutzen.
+summary: >-
+  <div><font color='red'><strong>Der Inhalt dieser Zertifizierung wurde am 30. November 2021 aktualisiert. Laden Sie das Dokument zu den bewerteten Qualifikationen von der <a href="/learn/certifications/exams/ai-102">Seite für das Examen AI-102</a> herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
+
+
+  Kandidat*innen für die Zertifizierung „Azure AI Engineer Associate“ erstellen, verwalten und stellen KI-Lösungen bereit, die Azure Cognitive Services und Azure Applied AI Services nutzen.
+
+
+  Zu ihren Aufgaben gehört es, an allen Phasen der Entwicklung von KI-Lösungen mitzuwirken – von der Anforderungsdefinition und dem Entwurf über die Entwicklung, den Einsatz und die Wartung bis hin zur Leistungsoptimierung und Überwachung.
+
+
+  Sie arbeiten mit Lösungsarchitekten zusammen, um ihre Vision umzusetzen, sowie mit wissenschaftlichen/technischen Fachkräften für Daten, IoT-Spezialisten und KI-Entwicklern, um komplette End-to-End-KI-Lösungen zu erstellen.
+
+
+  Kandidat*innen für diese Zertifizierung sollten C# oder Python beherrschen und in der Lage sein, REST-basierte APIs und SDKs zu nutzen, um maschinelles Sehen, Verarbeitung natürlicher Sprache, Wissensbeschaffung und gesprächsorientierte KI-Lösungen auf Azure zu erstellen.
+
+
+  Sie sollten außerdem die Komponenten des Azure KI-Portfolios und die verfügbaren Datenspeicheroptionen verstehen. Außerdem müssen die Kandidaten die Prinzipien der verantwortungsvollen KI verstehen und anwenden können.
+subTitle: Azure AI Engineers erstellen, verwalten und stellen KI-Lösungen bereit, die Azure Cognitive Services und Azure Applied AI Services nutzen.
 levels:
 - intermediate
 skills:
-- Planen und Verwalten einer Azure Cognitive Services-Lösung
-- Implementieren von Computer Vision-Lösungen
-- Implementieren von Lösungen für die Verarbeitung natürlicher Sprache
-- Implementieren von Knowledge Mining-Lösungen
-- Implementieren von AI-Konversationslösungen
+- Plan and manage an Azure Cognitive Services solution
+- Implement Computer Vision solutions
+- Implement natural language processing solutions
+- Implement knowledge mining solutions
+- Implement conversational AI solutions
 roles:
 - ai-engineer
 type: role-based
@@ -52,7 +63,7 @@ products:
 courses:
 - uid: course.ai-102t00
 paths:
-- uid: learn.wwl.prepare-for-ai-engineering 
+- uid: learn.wwl.prepare-for-ai-engineering
 - uid: learn.wwl.provision-manage-azure-cognitive-services
 - uid: learn.wwl.process-translate-text-azure-cognitive-services
 - uid: learn.wwl.process-translate-speech-azure-cognitive-speech-services
@@ -66,20 +77,20 @@ pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEH
 exams:
 - uid: exam.ai-102
 resources:
-- title: Reise zur Zertifizierung
-  description: Informieren Sie sich über die Schritte zur Zertifizierung als Azure AI Engineer Associate und über die verfügbaren Ressourcen, die Ihnen bei der Vorbereitung helfen können.
+- title: Der Weg zur Zertifizierung
+  description: Informieren Sie sich über die Schritte zur Zertifizierung als „Azure AI Engineer Associate“ und über die verfügbaren Ressourcen, die Ihnen bei der Vorbereitung helfen können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWy1S2
-- title: Azure-Zertifizierungsplakat
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Azure an.
+- title: Azure-Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen für Azure.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wyqh
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+  href: https://aka.ms/TrainingCertDeck
+- title: Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen.
+  href: https://aka.ms/traincertposter
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
@@ -87,6 +98,6 @@ resources:
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Teilen Sie Ihre Zertifizierungsabzeichen
-  description: Feiern Sie Ihre Leistung mit Ihrem Netzwerk. Fordern Sie Ihr  Microsoft-Certification an und fügen Sie es LinkedIn, Ihrem Lebenslauf und anderem hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
