--- a/learn-certs-pr/azure-ai-engineer/renew/index.yml
+++ b/learn-certs-pr/azure-ai-engineer/renew/index.yml
@@ -3,24 +3,30 @@ title: 'Erneuerung von Microsoft Certified: Azure Data Engineer Associate'
 metadata:
   title: 'Erneuerung von Microsoft Certified: Azure Data Engineer Associate'
   description: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern.
-  ms.openlocfilehash: 63ba4f7ba614d2709b0ca1495242b21a98f5441e
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.openlocfilehash: 206cbb46169d2d1bc6f6658edf6a552284124609
+  ms.sourcegitcommit: 8eea77e8e5c6afd5914ba7ef2f0058440816aee7
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132111017"
+  ms.lasthandoff: 11/23/2021
+  ms.locfileid: "132963979"
 uid: renewal.azure-ai-engineer
 certificationUid: certification.azure-ai-engineer
 assessmentId: b7cbd4cb-022d-4be3-94f1-95b2206f91c0
 durationInMinutes: 45
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern. Zeigen Sie, dass Sie sich über die neuesten Azure KI-Updates auf dem Laufenden gehalten haben, indem Sie das Erneuerungsexamen bestehen. Sie können sich auch mit der kuratierten Sammlung von Lernmodulen auf die Erneuerung vorbereiten.
+summary: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern. Zeigen Sie, dass Sie sich über die neuesten Azure KI-Updates auf dem Laufenden gehalten haben, indem Sie das Erneuerungsexamen bestehen. Sie können sich auch mit der zusammengestellten Sammlung von Lernmodulen auf das Erneuerungsexamen vorbereiten.
 skills:
-- Process and Translate Speech with Azure Cognitive Speech Services
-- Process and classify images with the Azure cognitive vision services
-- Process natural language with Azure Cognitive Language Services
-- Create conversational AI solutions
-- Implement knowledge mining with Azure Cognitive Search
+- Create speech-enabled apps with the Speech service
+- Translate speech with the speech service
+- Analyze video
+- Create a Language Understanding app
+- Publish and use a Language Understanding app
+- Extract insights from text with the Text Analytics service
+- Create a Bot with the Bot Framework SDK
+- Create a Bot with the Bot Framework Composer
+- Create an Azure Cognitive Search solution
+- Create a custom skill for Azure Cognitive Search
+- Create a knowledge store with Azure Cognitive Search
 examsPassed:
 - AI-100 or AI-102
 studyGuideDescription: 'Verwenden Sie diese Lernmodule, um sich auf das Erneuerungsexamen „Microsoft Certified: Azure AI Engineer Associate“ vorzubereiten.'
