--- a/learn-certs-pr/azure-data-engineer/index.yml
+++ b/learn-certs-pr/azure-data-engineer/index.yml
@@ -3,12 +3,12 @@ title: 'Microsoft Certified: Azure Data Engineer Associate'
 metadata:
   title: 'Microsoft Certified: Azure Data Engineer Associate'
   description: Azure Data Engineers integrieren, transformieren und konsolidieren Daten aus verschiedenen strukturierten und unstrukturierten Datensystemen in Strukturen, die für die Erstellung von Analyselösungen geeignet sind.
-  ms.openlocfilehash: 6c5abf2ecb3efc01b05936bbea8895bd81b20eaf
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.openlocfilehash: 00e4f08310ba976118ca22b620cac90e8d09640d
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132111008"
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133078600"
 uid: certification.azure-data-engineer
 certificationRenewalUid: renewal.azure-data-engineer
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
@@ -19,7 +19,7 @@ summary: >-
   Zu den Zuständigkeiten dieser Rolle gehört es, Projektbeteiligten zu helfen, die Daten durch Exploration sowie Konzeption und Pflege sicherer und konformer Datenverarbeitungspipelines mithilfe verschiedener Tools und Techniken zu verstehen. Diese Fachkräfte für Daten nutzen verschiedene Azure-Datendienste und Sprachen, um bereinigte und erweiterte Datasets für die Analyse zu speichern und zu erstellen.
 
 
-  Azure Data Engineers stellen außerdem sicher, dass Datenpipelines und Datenspeicher unter Berücksichtigung einer Reihe von Geschäftsanforderungen und -einschränkungen leistungsstark, effizient, organisiert und zuverlässig sind. Diese Fachkräfte kümmern sich zeitnah um unerwartete Probleme und minimieren Datenverluste. Azure Data Engineers entwerfen, implementieren, überwachen und optimieren außerdem Datenplattformen, damit die Anforderungen der Datenpipeline erfüllt werden.
+  Azure Data Engineers stellen außerdem sicher, dass Datenpipelines und Datenspeicher unter Berücksichtigung einer bestimmten Reihe von Geschäftsanforderungen und -einschränkungen leistungsstark, effizient, organisiert und zuverlässig sind. Diese Fachkräfte kümmern sich zeitnah um unerwartete Probleme und minimieren Datenverluste. Azure Data Engineers entwerfen, implementieren, überwachen und optimieren außerdem Datenplattformen, damit die Anforderungen der Datenpipeline erfüllt werden.
 
 
   Kandidaten für diese Zertifizierung müssen über fundierte Kenntnisse über Datenverarbeitungssprachen wie SQL, Python oder Scala verfügen und Muster der Parallelverarbeitung und der Datenarchitektur verstehen.
@@ -58,20 +58,20 @@ pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwU
 exams:
 - uid: exam.dp-203
 resources:
-- title: Reise zur Zertifizierung
-  description: Informieren Sie sich über die Schritte zur Zertifizierung als Azure Data Engineer Associate und über die verfügbaren Ressourcen, die Ihnen bei der Vorbereitung helfen können.
+- title: Der Weg zur Zertifizierung
+  description: Informieren Sie sich über die Schritte zur Zertifizierung als „Azure Data Engineer Associate“ und über die verfügbaren Ressourcen, die Ihnen bei der Vorbereitung helfen können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWxODZ
-- title: Azure-Zertifizierungsplakat
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Azure an.
+- title: Azure-Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen für Azure.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wyqh
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
-- title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
+- title: Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen.
   href: https://aka.ms/traincertposter
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
@@ -79,6 +79,6 @@ resources:
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Freigeben Ihrer Zertifizierungsbadges
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn in LinkedIn oder in Ihrem Lebenslauf und anderem mehr hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
