--- a/learn-certs-pr/azure-database-administrator-associate/index.yml
+++ b/learn-certs-pr/azure-database-administrator-associate/index.yml
@@ -2,27 +2,39 @@
 title: 'Microsoft Certified: Azure Database Administrator Associate'
 metadata:
   title: 'Microsoft Certified: Azure Database Administrator Associate'
-  description: 'Der Azure-Database Administrator implementiert und verwaltet die betrieblichen Aspekte von Cloud-nativen und hybriden Datenplattformlösungen, die auf Microsoft Azure Data Services und Microsoft SQL Server basieren.'
+  description: Benutzer*innen mit der Zertifizierung „Azure Database Administrator Associate“ implementieren und verwalten die betrieblichen Aspekte von cloudnativen und hybriden Datenplattformlösungen, die auf Data Services in Microsoft Azure und Microsoft SQL Server basieren.
+  ms.openlocfilehash: 57a9c1c27a900aac16d61f1f29c75a1fd4927b90
+  ms.sourcegitcommit: 367335eb84a6583bb7300f39e7d302c9bbd30bea
+  ms.translationtype: MT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 12/13/2021
+  ms.locfileid: "134694406"
 uid: certification.azure-database-administrator-associate
+certificationRenewalUid: renewal.azure-database-administrator-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 24. September 2021 aktualisiert. Bitte laden Sie das Dokument über die gemessenen Fähigkeiten auf der <a href="/learn/certifications/exams/az-300">DP-300 Prüfungsseite herunter</a> um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
-  
-  Der Azure-Database-Administrator implementiert und verwaltet die betrieblichen Aspekte von Cloud-nativen und hybriden Datenplattformlösungen, die auf Microsoft Azure Data Services und Microsoft SQL Server basieren. Der Azure-Datenbankadministrator verwendet eine Vielzahl von Methoden und Tools, um alltägliche Vorgänge auszuführen, einschließlich der Anwendung von Kenntnissen über die Verwendung von T-SQL für Verwaltungsverwaltungszwecke.
+summary: >-
+  <div><font color='red'><strong>Der Inhalt dieser Zertifizierung wurde am 24. November 2021 aktualisiert. Laden Sie das Dokument zu den bewerteten Qualifikationen von der <a href="/learn/certifications/exams/dp-300">Seite für Exam DP-300</a> herunter, um herauszufinden, was sich geändert hat.</strong></font><br/><br/></div>
+
+
+  Benutzer*innen mit der Zertifizierung „Azure Database Administrator Associate“ implementieren und verwalten die betrieblichen Aspekte von cloudnativen und hybriden Datenplattformlösungen, die mit Microsoft SQL Server und Data Services in Microsoft Azure erstellt werden. Der Azure-Datenbankadministrator verwendet eine Vielzahl von Methoden und Tools, um alltägliche Vorgänge auszuführen, einschließlich der Anwendung von Kenntnissen über die Verwendung von T-SQL für Verwaltungszwecke.
+
 
   <div></br>
-  Kandidaten für diese Rolle sollten alle in Prüfung DP-900 behandelten Konzepte verstehen <a href='/learn/certifications/exams/dp-900'>: Microsoft Azure Fundamentals</a>.</div>
-subTitle: "Der Azure-Database Administrator implementiert und verwaltet die betrieblichen Aspekte von Cloud-nativen und hybriden Datenplattformlösungen, die auf Microsoft Azure Data Services und Microsoft SQL Server basieren."
+
+  Kandidat*innen für diese Rolle sollten alle Konzepte verstehen, die in <a href='/learn/certifications/exams/dp-900'>Examen DP-900: Microsoft Azure Data Fundamentals</a> behandelt werden.
+
+  </div>
+subTitle: Benutzer*innen mit der Zertifizierung „Azure Database Administrator Associate“ implementieren und verwalten die betrieblichen Aspekte von cloudnativen und hybriden Datenplattformlösungen, die auf Data Services in Microsoft Azure und Microsoft SQL Server basieren.
 levels:
 - intermediate
 skills:
-- Planen und Implementieren von Datenplattformressourcen
-- Implementieren Sie eine sichere Umgebung
-- Überwachung und Optimierung der Betriebsressourcen
-- Optimieren Sie die Abfrageleistung
-- Automatisierung von Aufgaben durchführen
-- Planen und Implementieren einer HADR-Umgebung (High Availability and Disaster Recovery)
-- Die Verwaltung mit T-SQL durchführen
+- Plan and implement data platform resources
+- Implement a secure environment
+- Monitor and optimize operational resources
+- Optimize query performance
+- Perform automation of tasks
+- Plan and implement a High Availability and Disaster Recovery (HADR) environment
+- Perform administration by using T-SQL
 roles:
 - database-administrator
 type: role-based
@@ -55,13 +67,13 @@ resources:
 - title: Reise zur Zertifizierung
   description: Informieren Sie sich über die nötigen Schritte für eine Zertifizierung als Azure Database Administrator Associate und über die zur Verfügung stehenden Ressourcen, die Ihnen bei der Vorbereitung helfen können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4AGXA
-- title: Informieren Sie sich über die Zertifizierungen
+- title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+  href: https://aka.ms/TrainingCertDeck
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Prüfungswiederholung
+  href: https://aka.ms/traincertposter
+- title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
 - title: Unterstützung von Zertifizierungen
@@ -70,7 +82,6 @@ resources:
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Teilen Sie Ihre Zertifizierungsabzeichen
-  description: Feiern Sie Ihre Leistung mit Ihrem Netzwerk. Fordern Sie Ihr  Microsoft-Certification an und fügen Sie es LinkedIn, Ihrem Lebenslauf und anderem hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
-
