--- a/learn-certs-pr/azure-developer/index.yml
+++ b/learn-certs-pr/azure-developer/index.yml
@@ -2,28 +2,28 @@
 title: 'Microsoft Certified: Azure Developer Associate'
 metadata:
   title: 'Microsoft Certified: Azure Developer Associate'
-  description: Azure-Entwickler entwerfen, erstellen, testen und warten Cloud-Anwendungen und -Services.
-  ms.openlocfilehash: 092f30e3979d3432184f4500f1b8f99e3b53a75b
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  description: Benutzer*innen mit der Zertifizierung „Azure Developer Associate“ entwerfen, erstellen, testen und verwalten Cloud-Anwendungen und -dienste.
+  ms.openlocfilehash: ff4041c0a7c462ab7a6ba56d5fb1425e07d17d5e
+  ms.sourcegitcommit: 3a53de64ec81bf478275e0a13a80f3a69bc1e586
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132110969"
+  ms.lasthandoff: 12/10/2021
+  ms.locfileid: "134680627"
 uid: certification.azure-developer
 certificationRenewalUid: renewal.azure-developer
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: >-
-  Kandidat*innen für die Azure Developer Associate-Zertifizierung sollten über Fachkenntnisse im Entwerfen, Kompilieren, Testen und Verwalten von Cloudanwendungen und -diensten in Microsoft Azure verfügen.
+  Kandidat*innen für die Zertifizierung als Azure Developer Associate sollten über Fachkenntnisse im Entwerfen, Kompilieren, Testen und Verwalten von Cloudanwendungen und -diensten in Microsoft Azure verfügen.
 
 
   Zu den Aufgaben dieser Rolle gehört die Teilnahme an allen Phasen der Cloudentwicklung, von Anforderungen, Definition und Entwurf über Entwicklung, Bereitstellung und Wartung bis hin zu Leistungsoptimierung und Überwachung.
 
 
-  Azure-Entwickler*innen arbeiten mit Cloudlösungsarchitekt*innen, Cloud-Datenbankadministrator*innen (DBAs), Cloud-Administrator*innen und Kunden zusammen, um Lösungen zu implementieren.
+  Azure-Entwickler*innen arbeiten mit Cloudlösungsarchitekt*innen, Cloud-Datenbankadministrator*innen (DBAs), Cloudadministrator*innen und Kund*innen zusammen, um Lösungen zu implementieren.
 
 
-  Ein Kandidat für Diese Zertifizierung sollte über 1-2 Jahre Berufserfahrung und Erfahrung mit Microsoft Azure verfügen. Darüber hinaus sollten Kandidat*innen für diese Rolle über die Fähigkeit verfügen, in einer von Azure unterstützten Sprache zu programmieren. Außerdem benötigen sie Kenntnisse zu Azure-SDKs, Azure PowerShell, der Azure CLI, Datenspeicheroptionen, Datenverbindungen, APIs, App-Authentifizierung und -Autorisierung, Computer- und Containerbereitstellung, Debugging, Leistungsoptimierung und Überwachung.
-subTitle: Azure-Entwickler entwerfen, erstellen, testen und warten Cloud-Anwendungen und -Services.
+  Kandidat*innen für diese Zertifizierung sollten ein bis zwei Jahre Berufserfahrung im Entwickeln und im Umgang mit Microsoft Azure haben. Darüber hinaus sollten Kandidat*innen für diese Rolle über die Fähigkeit verfügen, in einer von Azure unterstützten Sprache zu programmieren. Außerdem benötigen sie Kenntnisse zu Azure-SDKs, Azure PowerShell, der Azure CLI, Datenspeicheroptionen, Datenverbindungen, APIs, App-Authentifizierung und -Autorisierung, Computer- und Containerbereitstellung, Debugging, Leistungsoptimierung und Überwachung.
+subTitle: Benutzer*innen mit der Zertifizierung „Azure Developer Associate“ entwerfen, erstellen, testen und verwalten Cloud-Anwendungen und -dienste.
 levels:
 - intermediate
 skills:
@@ -50,13 +50,18 @@ courses:
 - uid: course.az-204t00
 - uid: course.az-020t00
 paths:
-- uid: learn.create-serverless-applications
-- uid: learn.connect-your-services-together
-- uid: learn.store-data-in-azure
-- uid: learn.deploy-a-website-with-azure-virtual-machines
-- uid: learn.manage-resources-in-azure
-- uid: learn.deploy-a-website-with-azure-app-service
-- uid: learn.secure-your-cloud-data
+- uid: learn.wwl.create-azure-app-service-web-apps
+- uid: learn.wwl.implement-azure-functions
+- uid: learn.wwl.develop-solutions-that-use-blob-storage
+- uid: learn.wwl.az-204-develop-solutions-that-use-azure-cosmos-db
+- uid: learn.wwl.az-204-implement-iaas-solutions
+- uid: learn.wwl.az-204-implement-authentication-authorization
+- uid: learn.wwl.az-204-implement-secure-cloud-solutions
+- uid: learn.wwl.az-204-implement-api-management
+- uid: learn.wwl.az-204-develop-event-based-solutions
+- uid: learn.wwl.az-204-develop-message-based-solutions
+- uid: learn.wwl.az-204-instrument-solutions-to-support-monitoring-logging
+- uid: learn.wwl.az-204-integrate-caching-content-delivery-within-solutions
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VJUJ
 exams:
 - uid: exam.az-204
@@ -65,7 +70,7 @@ resources:
   description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Azure an.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wyqh
 - title: Reise zur Zertifizierung
-  description: Informieren Sie sich über die nötigen Schritte für eine Zertifizierung als Azure Developer Associate und über die zur Verfügung stehenden Ressourcen, die Ihnen bei der Vorbereitung helfen können.
+  description: Informieren Sie sich über die nötigen Schritte für eine Zertifizierung als „Azure Developer Associate“ und über die zur Verfügung stehenden Ressourcen, die Ihnen bei der Vorbereitung helfen können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4woK5
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
@@ -83,5 +88,5 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Teilen Sie Ihre Zertifizierungsbadges.
-  description: Feiern Sie Ihren Erfolg in Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise LinkedIn oder Ihrem Lebenslauf hinzu.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
