--- a/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert/index.yml
+++ b/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert/index.yml
@@ -3,13 +3,14 @@ title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Solution
 metadata:
   title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Solution Architect Expert'
   description: Lösungsarchitekten für Finanz- und Betriebs-Apps in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die für Unternehmen empfohlene Methoden und Softwarefeatures verstehen. Sie leiten Teammitglieder bei der Implementierung von Dynamics-Lösungen an, mit denen die vordefinierten Implementierungsziele erreicht werden können.
-  ms.openlocfilehash: 35701e9a3949a3142fe3794ca9663fe3766d2492
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.openlocfilehash: d97ee1ec6c12a2e6a7c4edf563489c13fe4332a0
+  ms.sourcegitcommit: a329153d3e1781d44f73a61c052cca9e343ccac7
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132106907"
+  ms.lasthandoff: 11/11/2021
+  ms.locfileid: "132353064"
 uid: certification.d365-finance-and-operations-apps-solution-architect-expert
+certificationRenewalUid: renewal.d365-finance-and-operations-apps-solution-architect-expert
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: "Sind Sie ein Lösungsarchitekt, funktionaler oder technischer Berater, IT-Experte oder Information Worker, der mit Microsoft Dynamics 365-Apps und Microsoft Power Platform vertraut ist? Verfügen Sie über ein tiefes Verständnis von Dynamics 365-Apps für Finanzen und Betrieb? Sind Sie ein vertrauenswürdiger Berater, der die empfohlenen Geschäftspraktiken und Softwarefeatures versteht? Wenn dies der Fall ist, kann der Erwerb dieser Expertenzertifizierung Türen öffnen und Ihre Karriere weiter fördern.\n\nAls Kandidat für diese Zertifizierung sind Sie ein Dynamics 365-Experte, der Projektbeteiligte berät und Geschäftsanforderungen in sichere, skalierbare und zuverlässige Lösungen übersetzt. Sie entwerfen zusammenhängende Lösungen für Ihre Kunden, da Sie wissen, wie Sie mit den wesentlichen Architekturkomponenten von Dynamics 365-Apps für Finanzen und Betrieb arbeiten. Sie verfügen über umfassende Kenntnisse auf Wissensgebieten in mindestens einer Branche. Außerdem wissen Sie, wie sich Entscheidungen in den einzelnen Bereichen auf die Gesamtlösung auswirken. Ferner sind Sie mit Plattformen, Tools und Funktionsbereichen wie Finanzen, Supply Chain Management und Fertigung vertraut.\n\nDie Zertifizierung „Dynamics 365: Finance and Operations Apps Solution Architect Expert“ ist für Sie gut geeignet, wenn:\n- Sie über umfangreiche Erfahrung als funktionaler oder technischer Berater für Dynamics 365-Apps für Finanzen und Betrieb verfügen. \n- Sie Lösungsarchitekt werden möchten oder diese Laufbahn vor Kurzem eingeschlagen haben \n- Sie für die erfolgreiche Konzeption, Implementierung, Bereitstellung und Einführung einer übergreifenden Technologielösung in Ihrem Unternehmen verantwortlich sind\n- Sie über Erfahrung in der Beratung von Unternehmen und Mitgliedern von Implementierungsteams verfügen und so geschäftsspezifische Anforderungen in klar definierte und kostengünstige Lösungen überführen können\n\nWenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erlangen, finden Sie nachstehend einige Vorschläge:\n- Begleiten Sie einen Lösungsarchitekten oder arbeiten Sie als solcher an einigen Projekten. \n- Melden Sie sich freiwillig für Entwurf und Implementierung einer Anwendungslösung für Finanzen und Betrieb. \n- Nehmen Sie mit anderen Lösungsarchitekten zusammen an Workshops zum Thema Lösungsarchitektur teil."
 subTitle: Als Kandidat für diese Zertifizierung sind Sie ein Dynamics 365-Experte, der Projektbeteiligte berät und Geschäftsanforderungen in sichere, skalierbare und zuverlässige Lösungen übersetzt. Sie entwerfen zusammenhängende Lösungen für Ihre Kunden, da Sie wissen, wie Sie mit den wesentlichen Architekturkomponenten von Dynamics 365-Apps für Finanzen und Betrieb arbeiten.
@@ -49,19 +50,19 @@ prerequisites:
   isOptional: false
 resources:
 - title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+  description: Hier finden Sie eine Übersicht mit den Basiszertifizierungen, den rollenbasierten Zertifizierungen und den Specialty-Zertifizierungen für Dynamics 365 und Power Platform.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Reise zur Zertifizierung
-  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
+- title: Der Weg zur Zertifizierung
+  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, mit denen Sie sich vorbereiten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcRK
-- title: Schulungs- und Zertifizierungsleitfaden
+- title: Trainings- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
 - title: Lernpfad zur Zertifizierung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  description: Empfohlene Trainingsressourcen, mit denen Sie sich auf die erforderlichen Examen vorbereiten und Ihre Zertifizierung erhalten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C7Gm
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
@@ -69,6 +70,6 @@ resources:
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
-- title: Freigeben Ihrer Zertifizierungsbadges
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn in LinkedIn oder in Ihrem Lebenslauf und anderem mehr hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
