--- a/learn-certs-pr/d365-functional-consultant-commerce/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-commerce/index.yml
@@ -2,13 +2,13 @@
 title: 'Microsoft Certified: Functional Consultant Associate für Dynamics 365 Commerce'
 metadata:
   title: 'Microsoft Certified: Functional Consultant Associate für Dynamics 365 Commerce'
-  description: Functional Consultants für Dynamics 365 Commerce richten die Anwendungsfunktionen in Dynamics 365 Commerce ein, nutzen sie und bieten Support für die Anwendung.
-  ms.openlocfilehash: a89084828d3510c2d15d829f922d19a406b4b5e8
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  description: Dynamics 365 Commerce Functional Consultants richten die Anwendungsfunktionalität in Dynamics 365 Commerce ein, nutzen sie und bieten Support für die Anwendung.
+  ms.openlocfilehash: c9ae440d63638c88f0afaedecadff21f0d521106
+  ms.sourcegitcommit: d80173e30006986f164a370573cac47d596ddb52
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132106906"
+  ms.lasthandoff: 12/06/2021
+  ms.locfileid: "133742833"
 uid: certification.d365-functional-consultant-commerce
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: >-
@@ -25,8 +25,8 @@ summary: >-
 
   - Nutzen Sie eigenverantwortliche Lernpfade auf Microsoft Learn.
 
-  - Registrieren Sie sich für einen Präsenzschulungskurs.
-subTitle: Functional Consultants für Dynamics 365 Commerce richten die Anwendungsfunktionen in Dynamics 365 Commerce ein, nutzen sie und bieten Support für die Anwendung.
+  - Melden Sie sich zu einem Präsenzschulungskurs an.
+subTitle: Dynamics 365 Commerce Functional Consultants richten die Anwendungsfunktionalität in Dynamics 365 Commerce ein, nutzen sie und bieten Support für die Anwendung.
 levels:
 - intermediate
 skills:
@@ -52,6 +52,8 @@ pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWCZKp
 exams:
 - uid: exam.mb-300
 - uid: exam.mb-340
+courses:
+- uid: course.mb-340t00
 paths:
 - uid: learn-dynamics.get-started-with-dynamics-365-for-finance-and-operations
 - uid: learn-dynamics.use-lcs-to-design-and-plan-an-implementation-of-f-and-o
@@ -66,20 +68,20 @@ paths:
 - uid: learn-dynamics.configure-work-call-centers-commerce
 - uid: learn-dynamics.configure-work-e-commerce
 resources:
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+- title: Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen für Dynamics 365 und Power Platform.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Reise zur Zertifizierung
-  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
+- title: Der Weg zur Zertifizierung
+  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, mit denen Sie sich vorbereiten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWJJ8C
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
 - title: Lernpfad zur Zertifizierung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  description: Empfohlene Schulungsressourcen, mit denen Sie sich auf die erforderlichen Examen vorbereiten und Ihre Zertifizierung erhalten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWH8MJ
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
@@ -88,5 +90,5 @@ resources:
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Teilen Sie Ihre Zertifizierungsbadges.
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
