--- a/learn-certs-pr/d365-functional-consultant-financials/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-financials/index.yml
@@ -1,39 +1,55 @@
 ### YamlMime:Certification
-title: 'Microsoft Certified: Dynamics 365 Finance Functional Consultant Associate'
+title: 'Microsoft Certified: Dynamics 365 Finance Functional Consultant Associate'
 metadata:
-  title: 'Microsoft Certified: Dynamics 365 Finance Functional Consultant Associate'
-  description: 'Dynamics 365 Finance Functional Consultants vereinheitlichen globale Finanzwerte und Operationen und automatisieren Aufgaben und Arbeitsabläufe, optimieren die Kundenbestellung, den Verkauf, die Rechnungsstellung und das Berichtswesen.'
+  title: 'Microsoft Certified: Dynamics 365 Finance Functional Consultant Associate'
+  description: Dynamics 365 Finance Functional Consultants vereinheitlichen globale Finanzen und Vorgänge, automatisieren Aufgaben und Workflows und optimieren die Bestellung durch Kund*innen, den Verkauf, die Rechnungsstellung und die Berichterstellung.
+  ms.openlocfilehash: efc7218e70699c4f56125d77b1b1baf3c84f8062
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.translationtype: MT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133078875"
 uid: certification.d365-functional-consultant-financials
 certificationRenewalUid: renewal.d365-functional-consultant-financials
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: |-
-  <div><font color='red'><strong>Diese Zertifizierungsseite enthält alle in den Prüfungen für dieses Zertifikat getesteten Kompetenzen. Nicht enthalten sind kürzlich oder zukünftig vorgenommene Änderungen dieser Fertigkeiten. Weitere Informationen über kürzliche oder zukünftige Änderungen finden Sie in auf der Seite mit den Details zur Prüfung.</strong></font><br/><br/></div>
+summary: >-
+  <div><font color='red'><strong>Auf dieser Zertifizierungsseite werden die Qualifikationen aufgeführt, die beim Examen zu dieser Zertifizierung geprüft werden. Auf dieser Seite wird nicht über bevorstehende oder kürzlich vorgenommene Änderungen an diesen Qualifikationen informiert. Weitere Informationen zu bevorstehenden oder kürzlich vorgenommenen Änderungen finden Sie auf den zugehörigen Seite mit den Examensdetails.</strong></font><br/><br/></div>
 
-  Verwenden Sie diese Zertifizierung, um Ihre Fähigkeiten unter Beweis zu stellen und Ihre Karriere voranzutreiben, wenn Sie Erfahrung als Fachberater haben, der Geschäftsanforderungen analysiert und diese in erfolgreiche Geschäftsprozesse und Lösungen auf Grundlage von bewährten Praktiken der Branche umsetzt. Sie müssen Erfahrung in der Implementierung und Konfiguration von Dynamics 365 Finance haben, um die Geschäftsanforderungen zu erfüllen.
 
-  Diese Zertifizierung eignet sich gut für Personen in Finanzabteilungen, die in den Bereichen Debitorenbuchhaltung, Kreditorenbuchhaltung, Hauptbuch, Anlagevermögen, Budgetierung, Kostenrechnung und Kostenmanagement oder Ausgaben tätig sind.Sie müssen über ein grundlegendes Verständnis von Rechnungslegungsgrundsätze und Finanzoperationen verfügen.
+  Erwerben Sie diese Zertifizierung, um Ihre Qualifikationen unter Beweis zu stellen und Ihre Karriere voranzubringen, wenn Sie Erfahrung als Functional Consultant haben, der*die Geschäftsanforderungen analysiert und diese in erfolgreiche Geschäftsprozesse und Lösungen auf Grundlage der Best Practices der Branche umsetzt. Sie benötigen Erfahrung im Implementieren und Konfigurieren von Dynamics 365 Finance, um die Geschäftsanforderungen zu erfüllen.
 
-  Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erhalten, finden Sie hier einige Vorschläge&#58;
-  - Arbeiten Sie mit einem Fachberater zusammen, der Dynamics 365 Finance verwendet.
-  - Arbeiten Sie als Fachberater an einem oder mehreren Projekten mit.
-  - Arbeit sie an einem Finanzberatungsprojekt mit.
-  - Treten Sie der Community von Experten und Kollegen unter [community.dynamics.com](https://community.dynamics.com/) bei.
-  - Nutzen Sie verfügbare Lernpfade in Microsoft Learn.
-  - Melden Sie sich für einen von einem Dozenten geleiteten Schulungskurs an.
+
+  Diese Zertifizierung eignet sich für Mitarbeiter*innen in Finanzabteilungen, die mit Debitoren, Kreditorenkonten, Hauptbüchern, Anlagen, in der Budgetierung, der Kostenrechnung sowie der Kostenverwaltung oder der Kostenplanung arbeiten. Sie müssen über ein grundlegendes Verständnis der Prinzipien der Geschäftsbuchhaltung und von Finanzoperationen verfügen.
+
+
+  Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erlangen, finden Sie nachstehend einige Vorschläge:
+
+  - Arbeiten Sie als ein*e Functional Consultant, der*die Dynamics 365 Finance verwendet.
+
+  - Arbeiten Sie als ein*e Functional Consultant bei einem oder mehreren Projekten mit.
+
+  - Arbeiten Sie an einem Finanzberatungsprojekt.
+
+  - Treten Sie der Community von Expert*innen und Peers unter [community.dynamics.com](https://community.dynamics.com/) bei.
+
+  - Arbeiten Sie die auf Microsoft Learn verfügbaren Lernpfade durch.
+
+  - Melden Sie sich zu einem Präsenzschulungskurs an.
+
   - Führen Sie weitere praktische Übungen durch.
-subTitle: 'Dynamics 365 Finance Functional Consultants vereinheitlichen globale Finanzwerte und Operationen und automatisieren Aufgaben und Arbeitsabläufe, optimieren die Kundenbestellung, den Verkauf, die Rechnungsstellung und das Berichtswesen.'
+subTitle: Dynamics 365 Finance Functional Consultants vereinheitlichen globale Finanzen und Vorgänge, automatisieren Aufgaben und Workflows und optimieren die Bestellung durch Kund*innen, den Verkauf, die Rechnungsstellung und die Berichterstellung.
 levels:
 - intermediate
 skills:
-- Beschreiben Sie Finanz- und Betriebsanwendungen und erweitern Sie Anwendungen mithilfe von Microsoft Power Platform-Technologien.  
-- Konfigurieren administrativer Funktionen und Workflows  
-- Verwalten von Finanz- und Betriebsdaten  
-- Validierung und Unterstützung von Lösungen
-- Einrichten und Konfigurieren der Finanzverwaltung 
-- Implementierung von Debitorenbuchhaltung, Kreditwesen, Inkasso und Umsatzrealisierung 
-- Implementierung und Verwaltung von Verbindlichkeiten und Ausgaben 
-- Verwaltung der Budgetierung 
-- Verwalten von Anlagevermögen
+- Describe finance and operations apps, and extend apps by using Microsoft Power Platform technologies
+- Configure administrative features and workflows
+- Manage Finance and Operations data
+- Validate and support the solution
+- Set up and configure financial management
+- Implement accounts receivable, credit, collections, and revenue recognition
+- Implement and manage accounts payable and expenses
+- Manage budgeting
+- Manage fixed assets
 roles:
 - functional-consultant
 type: role-based
@@ -62,20 +78,20 @@ exams:
 - uid: exam.mb-300
 - uid: exam.mb-310
 resources:
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+- title: Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen für Dynamics 365 und Power Platform.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Reise zur Zertifizierung
-  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
+- title: Der Weg zur Zertifizierung
+  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, mit denen Sie sich vorbereiten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcRF
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
-- title: Lernpfad zur Zertifizirung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+- title: Lernpfad zur Zertifizierung
+  description: Empfohlene Schulungsressourcen, mit denen Sie sich auf die erforderlichen Examen vorbereiten und Ihre Zertifizierung erhalten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C56Y
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
@@ -83,6 +99,6 @@ resources:
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
-- title: Teilen Sie Ihre Zertifizierungsabzeichen
-  description: Feiern Sie Ihre Leistung mit Ihrem Netzwerk. Fordern Sie Ihr  Microsoft-Certification an und fügen Sie es LinkedIn, Ihrem Lebenslauf und anderem hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
