--- a/learn-certs-pr/d365-functional-consultant-manufacturing/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-manufacturing/index.yml
@@ -2,13 +2,13 @@
 title: 'Microsoft Certified: Dynamics 365 Supply Chain Management, Manufacturing Functional Consultant Associate'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Supply Chain Management, Manufacturing Functional Consultant Associate'
-  description: Dynamics 365 Supply Chain Management, Manufacturing Functional Consultants integrieren digitale und physische Systeme, verbessern die Transparenz, die Effizienz und Flexibilität der Fertigung und senken die Kosten für ihre Kunden.'
-  ms.openlocfilehash: 61dbf9909672cc222c0847149673c38446285b37
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  description: Dynamics 365 Supply Chain Management, Manufacturing Functional Consultants integrieren digitale und physische Systeme, verbessern die Transparenz sowie die Effizienz und Flexibilität der Fertigung und senken die Kosten für ihre Kund*innen.
+  ms.openlocfilehash: c9496ed170afe4a20111dc296e7f6541a43d7da8
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132106826"
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133079524"
 uid: certification.d365-functional-consultant-manufacturing
 certificationRenewalUid: renewal.d365-functional-consultant-manufacturing
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
@@ -30,7 +30,7 @@ summary: >-
   - Lernen Sie von einem*einer Mentor*in, besichtigen Sie eine Fertigungsstraße, und sehen Sie sich an, wie Dinge hergestellt werden.
 
   - Stellen Sie Fragen, und lernen Sie von Expert*innen und Kund*innen.
-subTitle: Dynamics 365 Supply Chain Management, Manufacturing Functional Consultants integrieren digitale und physische Systeme, verbessern die Transparenz, die Effizienz und Flexibilität der Fertigung und senken die Kosten für ihre Kunden.'
+subTitle: Dynamics 365 Supply Chain Management, Manufacturing Functional Consultants integrieren digitale und physische Systeme, verbessern die Transparenz sowie die Effizienz und Flexibilität der Fertigung und senken die Kosten für ihre Kund*innen.
 levels:
 - intermediate
 skills:
@@ -68,19 +68,19 @@ exams:
 - uid: exam.mb-320
 resources:
 - title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+  description: Hier finden Sie eine Übersicht mit den Basiszertifizierungen, den rollenbasierten Zertifizierungen und den Specialty-Zertifizierungen für Dynamics 365 und Power Platform.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Reise zur Zertifizierung
-  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
+- title: Der Weg zur Zertifizierung
+  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, mit denen Sie sich vorbereiten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcRH
-- title: Schulungs- und Zertifizierungsleitfaden
+- title: Trainings- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
 - title: Lernpfad zur Zertifizierung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  description: Empfohlene Trainingsressourcen, mit denen Sie sich auf die erforderlichen Examen vorbereiten und Ihre Zertifizierung erhalten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CkBE
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
@@ -88,6 +88,6 @@ resources:
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
-- title: Teilen Ihrer Zertifizierungsbadges
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn in LinkedIn oder in Ihrem Lebenslauf hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
