--- a/learn-certs-pr/exams/az-303.yml
+++ b/learn-certs-pr/exams/az-303.yml
@@ -3,24 +3,24 @@ title: Microsoft Azure Architect Technologies
 metadata:
   title: 'Prüfung AZ-303: Microsoft Azure Architect Technologies'
   description: 'Prüfung AZ-303: Microsoft Azure Architect Technologies'
-  ms.openlocfilehash: 7e4a7b4a39fb36cf8d00bf02aef8880904316a48
-  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.openlocfilehash: 24674afaaea2155abf40bdc81c52ddb7aaa92321
+  ms.sourcegitcommit: 3a53de64ec81bf478275e0a13a80f3a69bc1e586
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 11/24/2021
-  ms.locfileid: "133079436"
+  ms.lasthandoff: 12/10/2021
+  ms.locfileid: "134680804"
 uid: exam.az-303
 displayName: AZ-303
 summary: >-
-  <div><div><font color='red'>DIESES EXAMEN WIRD AM 31. MÄRZ 2022 UM 23:59 UHR CENTRAL STANDARD TIME EINGESTELLT. Eine Ersatzprüfung, <a href="/learn/certifications/exams/az-305">Prüfung AZ-305</a>, ist verfügbar. Die Zertifizierung <a href="/learn/certifications/azure-solutions-architect/">Microsoft Certified: Azure Solutions Architect Expert</a> wird durch Erfüllen der folgenden Anforderungen erlangt:<ul>
+  <div><div><strong>WICHTIG</strong>: DIESES EXAMEN WIRD AM 31. MÄRZ 2022 UM 23:59 UHR CENTRAL STANDARD TIME EINGESTELLT. Eine Ersatzprüfung, <a href="/learn/certifications/exams/az-305">Prüfung AZ-305</a>, ist verfügbar. Die Zertifizierung <a href="/learn/certifications/azure-solutions-architect/">Microsoft Certified: Azure Solutions Architect Expert</a> wird durch Erfüllen der folgenden Anforderungen erlangt:<ul>
 
   <li>Bestandene Prüfung AZ-303 und <a href="/learn/certifications/exams/az-305">Prüfung AZ-305</a> <strong>oder</strong></li>
 
   <li>Bestandene Prüfung AZ-303 und <a href="/learn/certifications/exams/az-304">Prüfung AZ-304</a> <em>(bevor sie am 31. März 2022 eingestellt werden)</em></li>
 
-  </ul>In <a href="https://aka.ms/AzureSlnsArchBlog">diesem Blogbeitrag</a> finden Sie weitere Informationen zu Zertifizierungsmöglichkeiten.</font><br/><br/></div>
+  </ul>In <a href="https://aka.ms/AzureSlnsArchBlog">diesem Blogbeitrag</a> finden Sie weitere Informationen zu Zertifizierungsmöglichkeiten.<br/><br/></div>
 
-  <div><font color='red'><strong>Der Inhalt dieses Examens wurde am 23. November 2021 aktualisiert. Laden Sie das unten aufgeführte Dokument mit den bewerteten Qualifikationen herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div><div><font color='red'>HINWEIS: Erforderliche Mindestpunktzahl: 700. Weitere Informationen zu Prüfungsergebnissen finden Sie <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div></div>
+  <div><strong>Der Inhalt dieses Examens wurde am 23. November 2021 aktualisiert. Laden Sie das unten aufgeführte Dokument mit den bewerteten Qualifikationen herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div><div>HINWEIS: Erforderliche Punktzahl: 700. Weitere Informationen zur Prüfungsauswertung finden Sie <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.<br/><br/></div></div>
 
 
   Kandidaten für dieses examens sollten über Fachkenntnisse beim Entwerfen und Implementieren von Lösungen verfügen, die unter Microsoft Azure ausgeführt werden, einschließlich Aspekten wie Computer, Netzwerk, Speicher und Sicherheit. Kandidat*innen sollten über fortgeschrittene Fähigkeiten im Verwalten von Azure verfügen. Kandidat*innen sollten die Entwicklung mit Azure und DevOps-Prozesse verstehen.
@@ -37,7 +37,7 @@ subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufga
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4psD6
 practiceTestUrl: https://www.mindhub.com/p/MU-AZ-303?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=AZ-303&examname=Exam%20AZ-303:%20Microsoft%20Azure%20Architect%20Technologies&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-303
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-303&examname=Exam%20AZ-303:%20Microsoft%20Azure%20Architect%20Technologies&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-303
 locales:
 - en
 - ja
