--- a/learn-certs-pr/exams/dp-203.yml
+++ b/learn-certs-pr/exams/dp-203.yml
@@ -1,35 +1,53 @@
 ### YamlMime:Examination
-title: Data Engineering on Microsoft Azure
+title: Datentechnik auf Microsoft Azure
 metadata:
-  title: 'Exam DP-203: Data Engineering on Microsoft Azure'
-  description: 'Exam DP-203: Data Engineering on Microsoft Azure'
+  title: 'Examen DP-203: Datentechnik auf Microsoft Azure'
+  description: 'Examen DP-203: Datentechnik auf Microsoft Azure'
+  ms.openlocfilehash: 49bd3e450bc6e3b043fa56d6e18f8c2a50d1d006
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.translationtype: MT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133078655"
 uid: exam.dp-203
 displayName: DP-203
-summary: |-
-  Kandidaten für diese Prüfung sollten über Fachwissen zur Integration, Umwandlung und Konsolidierung von Daten aus verschiedenen strukturierten und unstrukturierten Datensystemen in eine Struktur verfügen, die für den Aufbau von Analyselösungen geeignet ist.
-  
-  Azure Data Engineers helfen Stakeholdern, die Daten durch Exploration zu verstehen, und sie bauen und pflegen sichere und konforme Datenverarbeitungspipelines unter Verwendung verschiedener Tools und Techniken. Diese Fachleute nutzen verschiedene Azure-Datendienste und Sprachen, um bereinigte und verbesserte Datensätze für die Analyse zu speichern und zu erstellen.
-  
-  Azure Data Engineers helfen auch dabei, sicherzustellen, dass Datenpipelines und Datenspeicher leistungsstark, effizient, organisiert und zuverlässig sind, und zwar unter Berücksichtigung einer Reihe von Geschäftsanforderungen und -einschränkungen. Sie kümmern sich schnell um unvorhergesehene Probleme und minimieren Datenverluste. Außerdem entwerfen, implementieren, überwachen und optimieren sie Datenplattformen, um die Anforderungen der Datenpipelines zu erfüllen.
-  
-  Ein Kandidat für diese Prüfung muss über gute Kenntnisse von Datenverarbeitungssprachen wie SQL, Python oder Scala verfügen und parallele Verarbeitung und Datenarchitekturmuster verstehen.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Entwerfen und Implementieren von Datenspeicherung; Datenverarbeitung entwerfen und entwickeln; Entwurf und Implementieren von Datensicherheitsmaßnahmen und Überwachung und Optimierung der Datenspeicherung und -verarbeitung.'
+summary: >-
+  Die Kandidat*innen für dieses Examen sollten über Fachwissen zum Integrieren, Transformieren und Konsolidieren von Daten aus verschiedenen strukturierten und unstrukturierten Datensystemen in eine Struktur verfügen, die für den Aufbau von Analyselösungen geeignet ist.
+
+
+  Azure Data Engineers helfen Projektbeteiligten, die Daten durch Untersuchen zu verstehen. Außerdem erstellen und warten sie sichere und konforme Datenverarbeitungspipelines unter Verwendung verschiedener Tools und Techniken. Diese Expert*innen nutzen verschiedene Azure-Datendienste und Programmiersprachen, um bereinigte und verbesserte Datensätze für die Analyse zu speichern und zu erstellen.
+
+
+  Azure Data Engineers stellen außerdem sicher, dass Datenpipelines und Datenspeicher unter Berücksichtigung einer Reihe von Geschäftsanforderungen und -einschränkungen leistungsstark, effizient, organisiert und zuverlässig sind. Sie kümmern sich schnell um unvorhergesehene Probleme und minimieren Datenverluste. Außerdem entwerfen, implementieren, überwachen und optimieren sie Datenplattformen, um die Anforderungen der Datenpipelines zu erfüllen.
+
+
+  Ein*e Kandidat*in für dieses Examen muss fundierte Kenntnisse zu Datenverarbeitungssprachen wie SQL, Python oder Scala verfügen und die Parallelverarbeitung und Datenarchitekturmuster verstehen.
+subTitle: 'In diesem Examen wird Ihre Fähigkeit geprüft, die folgenden technischen Aufgaben zu erledigen: Das Entwerfen und Implementieren des Datenspeichers; das Entwerfen und Entwickeln der Datenverarbeitung; das Entwerfen und Implementieren der Datensicherheit und das Überwachen und Optimieren des Datenspeichers sowie der Datenverarbeitung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4MbYT
 practiceTestUrl: https://in.mindhub.com/dp-203-data-engineering-on-microsoft-azure-microsoft-official-practice-test/p/MU-DP-203?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=DP-203&examname=Exam%20DP-203:%20Data%20Engineering%20on%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-203
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=DP-203&examname=Exam%20DP-203:%20Data%20Engineering%20on%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-203
 locales:
 - en
 - zh-cn
 - ja
 - ko
+- de
+- fr
+- es
+- pt-br
+- ar-sa
+- ru
+- zh-tw
+- it
+- id-id
 levels:
 - intermediate
 skills:
-- Entwerfen und Implementieren der Datenspeicherung (40-45%)
-- Entwerfen und Entwickeln der Datenverarbeitung (25-30%)
-- Entwerfen und Implementieren von Datensicherheit (10-15%)
-- Überwachung und Optimierung der Datenspeicherung und Datenverarbeitung (10-15%)
+- Design and implement data storage (40-45%)
+- Design and develop data processing (25-30%)
+- Design and implement data security (10-15%)
+- Monitor and optimize data storage and data processing (10-15%)
 roles:
 - data-engineer
 products:
@@ -57,26 +75,26 @@ relatedCertifications:
     uid: certification.azure-data-engineer
 resources:
 - title: Der Weg zur Zertifizierung
-  description: Informieren Sie sich über die Schritte zur Zertifizierung als Azure Data Engineer Associate und über verfügbare Ressourcen, die Ihnen bei der Vorbereitung helfen können.
+  description: Informieren Sie sich über die Schritte zur Zertifizierung als „Azure Data Engineer Associate“ und über die verfügbaren Ressourcen, die Ihnen bei der Vorbereitung helfen können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWxODZ
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
-- title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
+- title: Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen.
   href: https://aka.ms/traincertposter
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: Unterstützung bei Zertifizierungsexamen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: Beantragen von Hilfsmitteln
+  description: Hier erfahren Sie mehr über das Beantragen von Hilfsmitteln für Ihr Examen.
   href: ../request-accommodations.md
 - title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+  description: Lesen Sie die Examensrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
