--- a/learn-certs-pr/exams/mb-310.yml
+++ b/learn-certs-pr/exams/mb-310.yml
@@ -1,34 +1,48 @@
 ### YamlMime:Examination
-title: Microsoft Dynamics 365 Finance
+title: Microsoft Dynamics 365 Finance
 metadata:
   title: 'MB-310: Microsoft Dynamics 365 Finance'
   description: 'MB-310: Microsoft Dynamics 365 Finance'
+  ms.openlocfilehash: 1561485291f738aa3a7a988807f1ba0e095b2a35
+  ms.sourcegitcommit: 1c90e9a6d3070bf12127b97c72638372489444aa
+  ms.translationtype: MT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/23/2021
+  ms.locfileid: "132953238"
 uid: exam.mb-310
 displayName: MB-310
-summary: |-
+summary: >-
   <div>
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 27. August 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument mit den geprüften Fähigkeiten herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
-  <div><font color='red'>HINWEIS: Punktzahl für einen erfolgreichen Abschluss: 700. Weitere Informationen zu den Prüfungsergebnissen finden Sie  <strong><a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a></strong>.</font><br/><br/></div>  </div>
-  
-  Kandidaten für diese Prüfung analysieren Geschäftsanforderungen und setzen diese Anforderungen in vollständig realisierte Geschäftsprozesse und Lösungen um, die die von der Industrie empfohlenen Praktiken umsetzen.  Sie verfügen über ein grundlegendes Verständnis der Rechnungslegungsgrundsätze und ein vertieftes Verständnis der Finanzvorgänge in Bezug auf die Kernbereiche Finanzen, Fertigung, Einzelhandel und Lieferkettenmanagement.
+
+  <div><font color='red'><strong>Der Inhalt dieses Examens wurde am 27. August 2021 aktualisiert. Laden Sie das unten aufgeführte Dokument mit den gemessenen Qualifikationen herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
+
+  <div><font color='red'>HINWEIS: Erforderliche Mindestpunktzahl: 700. Weitere Informationen zu Examensergebnissen finden Sie <strong><a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a></strong>.</font><br/><br/></div>
+
+  </div>
+
+
+  Kandidat*innen für dieses Examen analysieren Geschäftsanforderungen und setzen diese Anforderungen in vollständig realisierte Geschäftsprozesse und Lösungen um, die empfohlene Praktiken der Branche implementieren.  Sie verfügen über ein grundlegendes Verständnis der Buchhaltung und ein vertieftes Verständnis der Finanzvorgänge in Bezug auf Kernfinanzen, Fertigung, Einzelhandel und Vorgänge im Supply Chain Management.
+
   <br/>
-  
-  Kandidaten für diese Prüfung spezialisieren sich in der Regel auf einen oder mehrere Funktionssätze von Dynamics 365 Finance, einschließlich Kernfinanzwesen, Hauptbuch, Steuern, Kostenrechnung, Anlagevermögen, Budgetierung, Umsatzrealisierung, Konsolidierung, Kredit und Inkasso, Bargeld- und Bankmanagement, Ausgabenmanagement sowie Projektmanagement und Buchhaltung. Sie verstehen die Zusammenhänge zwischen dem Finanzwesen und der Produktion, dem Einzelhandel und dem Lieferkettenmanagement.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu bewältigen: Einrichten und Konfigurieren des Finanzmanagements; Implementieren und Verwalten von Kreditoren und Ausgaben; Implementieren von Debitoren, Krediten, Inkasso und Umsatzrealisierung; Verwalten der Budgetierung; Verwalten von Anlagevermögen.'
+
+
+  Kandidat*innen für dieses Examen spezialisieren sich in der Regel auf einen oder mehrere Funktionsgruppen von Dynamics 365 Finance, darunter Kernfinanzwesen, Hauptbuch, Steuern, Kostenrechnung, Anlagevermögen, Budgetierung, Umsatzrealisierung, Konsolidierung, Kredit und Inkasso, Bargeld- und Bankmanagement, Ausgabenmanagement sowie Projektmanagement und Buchhaltung. Sie verstehen die Zusammenhänge zwischen dem Finanzwesen und der Produktion, dem Einzelhandel und dem Supply Chain Management.
+subTitle: 'In diesem Examen wird Ihre Fähigkeit geprüft, die folgenden technischen Aufgaben zu bewältigen: Einrichten und Konfigurieren der Finanzverwaltung, Implementieren und Verwalten von Kreditoren und Ausgaben, Implementieren von Debitoren, Krediten, Inkasso und Umsatzrealisierung, Verwalten der Budgetierung sowie Verwalten von Anlagevermögen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEHU
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-310&examname=Exam%20MB-310:%20Microsoft%20Dynamics%20365%20for%20Finance%20and%20Operations,%20Financials&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-310
+practiceTestUrl: https://www.mindhub.com/p/MU-MB-310?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MB-310&examname=Exam%20MB-310:%20Microsoft%20Dynamics%20365%20for%20Finance%20and%20Operations,%20Financials&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-310
 locales:
 - en
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am 27. August 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
-- Einrichten und Konfigurieren der Finanzverwaltung (40-45%)
-- Implementierung von Debitorenbuchhaltung, Kreditwesen, Inkasso und Umsatzrealisierung (15-20%)
-- Implementierung und Verwaltung von Kreditorenbuchhaltung und Ausgaben (10-15%)
-- Verwalten der Budgetierung (10-15%)
-- Verwalten von Anlagevermögen (10-15%)
+- The content of this exam was updated on August 27, 2021. Please download the exam skills outline below to see what changed.
+- Set up and configure financial management (40-45%)
+- Implement accounts receivable, credit, collections, and revenue recognition (15-20%)
+- Implement and manage accounts payable and expenses (10-15%)
+- Manage budgeting (10-15%)
+- Manage fixed assets (10-15%)
 roles:
 - functional-consultant
 products:
@@ -51,28 +65,27 @@ relatedCertifications:
 - related:
     uid: certification.d365-functional-consultant-financials
 resources:
-- title: Lernpfad zur Zertifizirung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+- title: Lernpfad zur Zertifizierung
+  description: Empfohlene Schulungsressourcen, mit denen Sie sich auf die erforderlichen Examen vorbereiten und Ihre Zertifizierung erhalten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C56Y
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+  href: https://aka.ms/TrainingCertDeck
+- title: Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen für Dynamics 365 und Power Platform.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: Unterstützung bei Zertifizierungsexamen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: Beantragen von Hilfsmitteln
+  description: Hier erfahren Sie mehr über das Beantragen von Hilfsmitteln für Ihr Examen.
   href: ../request-accommodations.md
 - title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+  description: Lesen Sie die Examensrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
-
