--- a/learn-certs-pr/exams/mb-700.yml
+++ b/learn-certs-pr/exams/mb-700.yml
@@ -1,32 +1,43 @@
 ### YamlMime:Examination
 title: 'Microsoft Dynamics 365: Finance and Operations Apps Solution Architect'
 metadata:
-  title: 'Exam MB-700: Microsoft Dynamics 365: Finance and Operations Apps Solution Architect'
-  description: 'Exam MB-700: Microsoft Dynamics 365: Finance and Operations Apps Solution Architect'
+  title: 'Examen MB-700: Microsoft Dynamics 365: Finance and Operations Apps Solution Architect'
+  description: 'Examen MB-700: Microsoft Dynamics 365: Finance and Operations Apps Solution Architect'
+  ms.openlocfilehash: 2dd20813d2536719b8936a54a5288bb97d0adbc1
+  ms.sourcegitcommit: 2c1db6d125fa1f6992ec5e35173a89a353dd8543
+  ms.translationtype: MT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/11/2021
+  ms.locfileid: "132270599"
 uid: exam.mb-700
 displayName: MB-700
-summary: |-
+summary: >-
   <div>
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 17. März 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
+
+  <div><font color='red'><strong>Der Inhalt dieses Examens wurde am 17. März 2021 aktualisiert. Laden Sie das unten aufgeführte Dokument mit den gemessenen Qualifikationen herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
+
   </div>
 
-  Kandidaten für diese Prüfung sind Microsoft Dynamics 365-Experten, die Stakeholder beraten und Geschäftsanforderungen in sichere, skalierbare und zuverlässige Lösungen umsetzen.
 
-  Kandidaten sollten Kenntnisse über alle Dynamics 365-Apps sowie Power-Platform haben.Sie müssen ein ausgeprägtes Verständnis für Finanz- und Betriebsanwendungen haben.Darüber hinaus verfügen sie über umfassende Fachkenntnisse in einer oder mehreren Schlüsselindustrien.Diese Rolle erfordert Verständnis darüber, wie sich Entscheidungen in jedem einzelnen Bereich auf die Gesamtlösung auswirken.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Architektenlösungen; Lösungsstrategien definieren; Implementierungen verwalten und Tests verwalten.'
+  Kandidat*innen für dieses Examen sind Microsoft Dynamics 365-Expert*innen, die Projektbeteiligte beraten und Geschäftsanforderungen in sicheren, skalierbaren und zuverlässigen Lösungen umsetzen.
+
+
+  Kandidat*innen sollten Kenntnisse zu allen Dynamics 365-Apps und zu Power Platform mitbringen. Sie müssen über ein tiefgreifendes Verständnis der Finance and Operations-Apps verfügen. Darüber hinaus verfügen sie über umfassende Domänenkenntnisse in mindestens einer Branche. Für diese Rolle müssen Sie verstehen, wie sich Entscheidungen in den einzelnen Bereichen auf die Gesamtlösung auswirken.
+subTitle: 'In diesem Examen wird Ihre Fähigkeit abgefragt, die folgenden technischen Aufgaben auszuführen: Entwerfen von Lösungen, Definieren von Lösungsstrategien, Verwalten von Implementierungen und Verwalten von Tests.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43Vdh
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-700&examname=Exam%20MB-700:%20Microsoft%20Dynamics%20365%3A%20Finance%20and%20Operations%20Apps%20Solution%20Architect&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-700
+practiceTestUrl: https://www.mindhub.com/p/MU-MB-700?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MB-700&examname=Exam%20MB-700:%20Microsoft%20Dynamics%20365%3A%20Finance%20and%20Operations%20Apps%20Solution%20Architect&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-700
 locales:
 - en
 levels:
 - advanced
 skills:
-- Der Inhalt dieser Prüfung wurde am 17. März 2021 aktualisiert.Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
-- Architektenlösungen (25-30%)
-- Lösungsstrategien definieren (25-30%)
-- Implementierungen verwalten (25-30%)
-- Tests verwalten (10-15%)
+- The content of this exam was updated on March 17, 2021. Please download the exam skills outline below to see what changed.
+- Architect solutions (25-30%)
+- Define solution strategies (25-30%)
+- Manage implementations (25-30%)
+- Manage testing (10-15%)
 roles:
 - functional-consultant
 - solution-architect
@@ -46,27 +57,26 @@ relatedCertifications:
     uid: certification.d365-finance-and-operations-apps-solution-architect-expert
 resources:
 - title: Lernpfad zur Zertifizierung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  description: Empfohlene Schulungsressourcen, mit denen Sie sich auf die erforderlichen Examen vorbereiten und Ihre Zertifizierung erhalten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C7Gm
-- title: Informieren Sie sich über die Zertifizierungen
+- title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+- title: Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen für Dynamics 365 und Power Platform.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Prüfungswiederholung
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: Unterstützung bei Zertifizierungsexamen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: Beantragen von Hilfsmitteln
+  description: Hier erfahren Sie mehr über das Beantragen von Hilfsmitteln für Ihr Examen.
   href: ../request-accommodations.md
-- title: Prüfungsrichtlinien und häufig gestellten Fragen
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+- title: Prüfungsrichtlinien und FAQs
+  description: Lesen Sie die Examensrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
-
