--- a/learn-certs-pr/exams/ms-203.yml
+++ b/learn-certs-pr/exams/ms-203.yml
@@ -1,37 +1,45 @@
 ### YamlMime:Examination
-title: Microsoft 365 Messaging
+title: Microsoft 365 Messaging
 metadata:
-  title: 'Exam MS-203: Microsoft 365 Messaging'
-  description: 'Exam MS-203: Microsoft 365 Messaging'
+  title: 'Examen MS-203: Microsoft 365 Messaging'
+  description: 'Examen MS-203: Microsoft 365 Messaging'
+  ms.openlocfilehash: 77847da0a7a18e61b19ad9d35df613de28f6d714
+  ms.sourcegitcommit: a2b584eb3752159a44885ce2df4ef8c7263255e4
+  ms.translationtype: MT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 11/30/2021
+  ms.locfileid: "133301680"
 uid: exam.ms-203
 displayName: MS-203
-summary: |-
-  <div>
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 23. März 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
-  </div>
+summary: >-
+  <div><div><font color='red'><strong>Der Inhalt dieses Examens wurde am 30. November 2021 aktualisiert. Laden Sie das unten aufgeführte Dokument mit den bewerteten Qualifikationen herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div><div><font color='red'>HINWEIS: Erforderliche Mindestpunktzahl: 700. Weitere Informationen zu Prüfungsergebnissen finden Sie <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div></div>
 
-  Kandidaten für dieses examens sind Messaging-Administratoren, die Empfänger, Berechtigungen, E-Mail-Schutz, E-Mail-Fluss und öffentliche Ordner in Hybrid- und Cloud-Unternehmensumgebungen bereitstellen, konfigurieren, verwalten, Fehler beheben und überwachen.
 
-  Messaging-Administratoren sind für die Verwaltung von Hygiene, Messaging-Infrastruktur, Hybridkonfiguration, Migration, Transport, Postfächern und Clientzugriff verantwortlich.
+  Kandidat*innen für dieses Examen sind Messaging Administrators, die Empfänger*innen, Compliance, Bedrohungsschutz und E-Mail-Flows in Hybrid- und Cloudumgebungen von Unternehmen bereitstellen, konfigurieren, verwalten und überwachen. Außerdem behandeln sie auftretende Probleme.
 
-  Messaging-Administratoren arbeiten mit dem Sicherheitsadministrator sowie dem Microsoft 365 Enterprise-Administrator zusammen, um eine sichere Hybrid-Topologie oder eine Topologie nur für Cloud zu implementieren, die die Geschäftsanforderungen eines Unternehmens erfüllt.
 
-  Der Messaging-Administrator sollte über gute Kenntnisse in den Bereichen Authentifizierung, Lizenzierung und Integration mit Microsoft 365-Anwendungen verfügen.
-subTitle: 'In dieser Prüfung wird Ihre Fähigkeit bewertet, die folgenden technischen Aufgaben zu erfüllen: Verwalten von Organisationseinstellungen und Ressourcen; Planen und Verwalten der Mail-Architektur; Planen und Implementieren einer hybriden Konfiguration und Migration und Sichern der Messaging-Umgebung. '
+  Messaging Administrators sind für das Verwalten der E-Mail-Pflege, der Berechtigungen, der Messaging-Infrastruktur, der Hybridkonfiguration, der Migration, des Transports, der Postfächer und des Clientzugriffs verantwortlich.
+
+
+  Messaging Administrators arbeiten mit anderen Workload-Administrator*innen sowie dem oder der Microsoft 365 Enterprise-Administrator*in zusammen, um eine sichere hybride oder ausschließlich cloudbasierte Topologie zu implementieren, die die Geschäftsanforderungen eines Unternehmens erfüllt.
+
+
+  Messaging Administrators sollten über Berufserfahrung in Bezug auf Authentifizierungstypen, Lizenzierung und Integration mit Microsoft 365-Anwendungen verfügen.
+subTitle: 'In diesem Examen wird Ihre Fähigkeit erhoben, die folgenden technischen Aufgaben zu erfüllen: Verwalten von Organisationseinstellungen und -ressourcen, Planen und Verwalten der E-Mail-Architektur, Planen und Implementieren einer hybriden Konfiguration und Migration sowie Schützen der Messagingumgebung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4xqnc
 practiceTestUrl: https://www.mindhub.com/ms-203-microsoft-365-messaging-microsoft-official-practice-test/p/MU-MS-203?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MS-203&examname=Exam%20MS-203:%20Microsoft%20365%20Messaging&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-203
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MS-203&examname=Exam%20MS-203:%20Microsoft%20365%20Messaging&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-203
 locales:
 - en
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am 23. März 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.
-- Verwalten organisatorischer Einstellungen und Ressourcen (30-35%)
-- Planen und verwalten der Mail-Architektur (20-25%)
-- Planen und Implementieren einer Hybrid- Konfiguration und Migration (20-25%)
-- Sichern der Messaging-Umgebung (20-25%)
+- The content of this exam was updated on November 30, 2021. Please download the exam skills outline below to see what changed.
+- Manage organizational settings and resources (30-35%)
+- Plan and manage the mail transport architecture (20-25%)
+- Plan and implement a hybrid configuration and migration (15-20%)
+- Secure the messaging environment (25-30%)
 roles:
 - administrator
 products:
@@ -49,22 +57,21 @@ resources:
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
-- title: Zertifizierungsposter
-  description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
+- title: Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen.
   href: https://aka.ms/traincertposter
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: Unterstützung bei Zertifizierungsexamen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: Beantragen von Hilfsmitteln
+  description: Hier erfahren Sie mehr über das Beantragen von Hilfsmitteln für Ihr Examen.
   href: ../request-accommodations.md
 - title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+  description: Lesen Sie die Examensrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
-
