--- a/learn-certs-pr/exams/pl-600.yml
+++ b/learn-certs-pr/exams/pl-600.yml
@@ -3,26 +3,32 @@ title: Microsoft Power Platform Solution Architect
 metadata:
   title: 'Examen PL-600: Microsoft Power Platform Solution Architect'
   description: 'Examen PL-600: Microsoft Power Platform Solution Architect'
-  ms.openlocfilehash: 75896c3cf88efdb735a2fa10cb258faabf5bd615
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.openlocfilehash: 6fc587c007fa12cbb495d19f4ea6a8a846e4d238
+  ms.sourcegitcommit: 788d52f7255adbc93138b211a28be9c4fa35989b
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132105651"
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133101899"
 uid: exam.pl-600
 displayName: PL-600
 summary: >-
+  <div><font color="red">Das Produktteam hat kürzlich die Umbenennung von Common Data Service in Microsoft Dataverse abgeschlossen. Die Sicherheitsrolle „Common Data Service-Benutzer“ heißt nun „Basic-Benutzer“. Der Common Data Service-Connector ist jetzt der Microsoft Dataverse-Connector.</font><br/><br/>
+
+  </div>
+
+
   Microsoft Power Platform Solution Architects führen erfolgreiche Implementierungen durch und konzentrieren sich darauf, wie Lösungen allgemeine geschäftliche und technische Anforderungen von Unternehmen erfüllen.
 
 
-  Ein*e Solution Architect verfügt über fachliche und technische Kenntnisse zu Power Platform, Dynamics 365 Customer Engagement-Apps, zugehörigen Microsoft-Cloudlösungen und Technologien von Drittanbietern. Ein Solution Architect setzt seine Kenntnisse und Erfahrungen während des gesamten Kundenprojekts ein. Ein Solution Architect agiert proaktiv und präventiv, um den Wert der Kundeninvestition zu steigern und die Integrität des Unternehmens zu fördern. Diese Position erfordert die Fähigkeit, Möglichkeiten zur Lösung von Geschäftsproblemen zu identifizieren.
+  Ein*e Solution Architect verfügt über fachliche und technische Kenntnisse zu Power Platform, Dynamics 365 Customer Engagement-Apps, zugehörigen Microsoft-Cloudlösungen und Technologien von Drittanbietern. Ein Solution Architect setzt seine Kenntnisse und Erfahrungen während des gesamten Kundenprojekts ein. Ein Solution Architect agiert proaktiv und präventiv, um den Wert der Kundeninvestition zu steigern und die Integrität des Unternehmens zu fördern. Diese Rolle erfordert die Fähigkeit, Möglichkeiten zur Lösung von Geschäftsproblemen zu identifizieren.
 
 
-  Solution Architects haben Erfahrung in den fachlichen und technischen Disziplinen von Power Platform. Solution Architects sollen in der Lage sein, Entwurfsentscheidungen in den Bereichen Entwicklung, Konfiguration, Integration, Infrastruktur, Sicherheit, Verfügbarkeit, Speicher und Change Management zu unterstützen. In dieser Rolle stellen Lösungsarchitekten die Balance zwischen den fachlichen und nicht-fachlichen geschäftlichen Anforderungen eines Projekts her.
+  Solution Architects haben Erfahrung in den fachlichen und technischen Disziplinen von Power Platform. Solution Architects sollen in der Lage sein, Entwurfsentscheidungen in den Bereichen Entwicklung, Konfiguration, Integration, Infrastruktur, Sicherheit, Verfügbarkeit, Speicher und Change Management zu unterstützen. In dieser Rolle werden die geschäftlichen Anforderungen eines Projekts mit den funktionalen und nicht funktionalen Anforderungen in Einklang gebracht.
 subTitle: 'In diesem Examen wird Ihre Fähigkeit abgefragt, die folgenden technischen Aufgaben zu bewältigen: Durchführen von Lösungsbereitstellung und Anforderungsanalyse, Konzipieren von Lösungen sowie Entwicklung und Implementieren der Lösung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4M56D
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=PL-600&examname=Exam%20PL-600:%20Microsoft%20Power%20Platform%20Solution%20Architect&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-600
+practiceTestUrl: https://www.mindhub.com/p/MU-PL-600?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=PL-600&examname=Exam%20PL-600:%20Microsoft%20Power%20Platform%20Solution%20Architect&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-600
 locales:
 - en
 levels:
@@ -61,26 +67,26 @@ relatedCertifications:
     uid: certification.power-platform-solution-architect-expert
 resources:
 - title: Lernpfad zur Zertifizierung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  description: Empfohlene Trainingsressourcen, mit denen Sie sich auf die erforderlichen Examen vorbereiten und Ihre Zertifizierung erhalten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWEGLH
-- title: Schulungs- und Zertifizierungsleitfaden
+- title: Trainings- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
 - title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+  description: Hier finden Sie eine Übersicht mit den Basiszertifizierungen, den rollenbasierten Zertifizierungen und den Specialty-Zertifizierungen für Dynamics 365 und Power Platform.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: Unterstützung bei Zertifizierungsexamen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: Beantragen von Hilfsmitteln
+  description: Hier erfahren Sie mehr über die Beantragung von Hilfsmitteln für Ihr Examen.
   href: ../request-accommodations.md
 - title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+  description: Lesen Sie die Examensrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
