--- a/learn-certs-pr/m365-security-administrator/renew/index.yml
+++ b/learn-certs-pr/m365-security-administrator/renew/index.yml
@@ -3,27 +3,24 @@ title: 'Erneuerung von Microsoft 365 Certified: Security Administrator Associate
 metadata:
   title: 'Erneuerung von Microsoft 365 Certified: Security Administrator Associate'
   description: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern.
-  ms.openlocfilehash: 926f6b238a694e7500940519c09d928bb815057e
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  ms.openlocfilehash: 851b334aba1a7265a9d3986fb853a1aa0ac87fb1
+  ms.sourcegitcommit: 8eea77e8e5c6afd5914ba7ef2f0058440816aee7
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132105523"
+  ms.lasthandoff: 11/23/2021
+  ms.locfileid: "132963949"
 uid: renewal.m365-security-administrator
 certificationUid: certification.m365-security-administrator
 assessmentId: a5e8873e-f61e-4c5b-8f88-845a09bbd070
 durationInMinutes: 45
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern. Zeigen Sie, dass Sie mit den neuesten Microsoft 365-Aktualisierungen auf dem Laufenden sind, indem Sie das Erneuerungsexamen bestehen. Sie können sich auch mit der kuratierten Sammlung von Lernmodulen auf die Erneuerung vorbereiten.
+summary: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern. Zeigen Sie, dass Sie mit den neuesten Microsoft 365-Aktualisierungen auf dem Laufenden sind, indem Sie das Erneuerungsexamen bestehen. Sie können sich auch mit der zusammengestellten Sammlung von Lernmodulen auf das Erneuerungsexamen vorbereiten.
 skills:
-- Safeguard your environment with Azure Advanced Threat Protection
-- Transition from Azure Information Protection to Microsoft Information Protection
-- Describe the compliance management capabilities of Microsoft 365
-- Strengthen authentication (conditional access) with Azure Active Directory
-- Embrace Zero Trust with Azure Active Directory
-- Protect your data with sensitivity labels
-- Protect against threats with Microsoft Defender Advanced Threat Protection
-- Prepare communication compliance in Microsoft 365
+- Plan, implement, and administer Conditional Access
+- Manage Azure AD Identity Protection
+- Query, visualize, and monitor data in Azure Sentinel
+- Implement Microsoft Cloud Application Security
+- Manage insider risk in Microsoft 365
 examsPassed:
 - ms-500
 studyGuideDescription: 'Nutzen Sie diese Sammlung von Lernmodulen, um sich auf das Erneuerungsexamen „Microsoft 365 Certified: Security Administrator Associate“ vorzubereiten.'
