--- a/learn-certs-pr/power-apps-and-d365-solution-architect-expert/index.yml
+++ b/learn-certs-pr/power-apps-and-d365-solution-architect-expert/index.yml
@@ -2,20 +2,20 @@
 title: 'Microsoft Certified: Dynamics 365 + Power Platform Solution Architect Expert'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 + Power Platform Solution Architect Expert'
-  description: Lösungsarchitekten für Microsoft Dynamics 365 + Power Platform führen erfolgreiche Implementierungen durch und konzentrieren sich auf Lösungen, die allgemeine geschäftliche und technische Anforderungen von Unternehmen erfüllen.
-  ms.openlocfilehash: 240d3609731f823cc6fa0573a6478d6ca0e2205c
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  description: Lösungsarchitekt*innen für Microsoft Dynamics 365 und Power Platform führen erfolgreiche Implementierungen durch und beschäftigen sich damit, wie Lösungen die allgemeinen geschäftlichen und technischen Anforderungen von Organisationen erfüllen.
+  ms.openlocfilehash: 32c62beab08adc85e6a43146b7e975848d09946d
+  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132111908"
+  ms.lasthandoff: 11/24/2021
+  ms.locfileid: "133079084"
 uid: certification.power-apps-and-d365-solution-architect-expert
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: >-
   <div><font color="red"><strong>Diese Zertifizierung wurde eingestellt. Informationen zu den derzeit verfügbaren Optionen finden Sie auf der Seite zum <a href="/learn/certifications/browse/">Durchsuchen von Zertifizierungen und Examen</a>. Alle Zertifizierungen, die Sie vor deren Ablaufdatum erhalten, werden weiterhin in Ihrem Transkript im <a href="https://aka.ms/certdashboard">Zertifizierungsdashboard</a> angezeigt.</strong></font><br/><br/></div>
 
 
-  Lösungsarchitekten für Microsoft Dynamics 365 + Power Platform führen erfolgreiche Implementierungen durch und konzentrieren sich auf Lösungen, die allgemeine geschäftliche und technische Anforderungen von Unternehmen erfüllen.
+  Lösungsarchitekt*innen für Microsoft Dynamics 365 und Power Platform führen erfolgreiche Implementierungen durch und beschäftigen sich damit, wie Lösungen die allgemeinen geschäftlichen und technischen Anforderungen von Organisationen erfüllen.
 
 
   <div><br/><strong>HINWEIS: Die folgenden beiden Zertifizierungen gelten als Voraussetzung für diese Zertifizierung. Diese Voraussetzung ist aufgrund von Platzmangel unten nicht aufgeführt.</strong><ul>
@@ -25,7 +25,7 @@ summary: >-
   <li><a href="/learn/certifications/power-platform-developer-associate">Microsoft Certified: Power Platform Developer Associate</a></li>
 
   </ul></div>
-subTitle: Lösungsarchitekten für Microsoft Dynamics 365 + Power Platform führen erfolgreiche Implementierungen durch und konzentrieren sich auf Lösungen, die allgemeine geschäftliche und technische Anforderungen von Unternehmen erfüllen.
+subTitle: Lösungsarchitekt*innen für Microsoft Dynamics 365 und Power Platform führen erfolgreiche Implementierungen durch und beschäftigen sich damit, wie Lösungen die allgemeinen geschäftlichen und technischen Anforderungen von Organisationen erfüllen.
 levels:
 - advanced
 skills:
@@ -55,20 +55,20 @@ prerequisites:
 - uid: certification.d365-functional-consultant-field-service
   isOptional: false
 resources:
-- title: Zertifizierungsposter
-  description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
+- title: Zertifizierungsübersicht
+  description: Hier finden Sie eine Übersicht über die Basiszertifizierungen, die rollenbasierten Zertifizierungen und die Specialty-Zertifizierungen für Dynamics 365 und Power Platform.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
-- title: Reise zur Zertifizierung
-  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
+- title: Der Weg zur Zertifizierung
+  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, mit denen Sie sich vorbereiten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C7FB
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://aka.ms/TrainingCertDeck
 - title: Lernpfad zur Zertifizierung
-  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  description: Empfohlene Schulungsressourcen, mit denen Sie sich auf die erforderlichen Examen vorbereiten und Ihre Zertifizierung erhalten können.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Ca9W
-- title: Exam Replay
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Examenswiederholung
+  description: Hier finden Sie zwei großartige Angebote, mit denen Sie Ihre Erfolgschancen erhöhen können.
   href: ../deals.md
 - title: Zertifizierungsdashboard
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
@@ -77,5 +77,5 @@ resources:
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
 - title: Teilen Sie Ihre Zertifizierungsbadges.
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
