--- a/learn-certs-pr/power-platform-developer-associate/index.yml
+++ b/learn-certs-pr/power-platform-developer-associate/index.yml
@@ -2,14 +2,15 @@
 title: 'Microsoft Certified: Power Platform Developer Associate'
 metadata:
   title: 'Microsoft Certified: Power Platform Developer Associate'
-  description: Kandidaten für die Microsoft Power Platform Developer Associate-Zertifizierung entwerfen, entwickeln, sichern und entstören Power Platform-Lösungen.
-  ms.openlocfilehash: 50567f544a3415967facb31b5b5daf9d5815ef09
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  description: Hier erfahren Sie, wie Kandidat*innen für die Zertifizierung „Microsoft Power Platform Developer Associate“ Power Platform-Lösungen entwerfen, entwickeln, schützen und Probleme im Zusammenhang mit der Lösung beheben.
+  ms.openlocfilehash: 72356810f9a14009c30d569dc47ce5c02af0390c
+  ms.sourcegitcommit: 367335eb84a6583bb7300f39e7d302c9bbd30bea
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132111902"
+  ms.lasthandoff: 12/13/2021
+  ms.locfileid: "134694560"
 uid: certification.power-platform-developer-associate
+certificationRenewalUid: renewal.power-platform-developer-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: >-
   Wenn Sie eine Leidenschaft für das Entwerfen, Entwickeln, Sichern und Erweitern von Microsoft Power Platform-Lösungen haben, könnte diese Zertifizierung das Richtige für Sie sein. Um diese Zertifizierung zu erwerben, müssen Sie dazu in der Lage sein, Lösungskomponenten zu erstellen, einschließlich von Anwendungserweiterungen, benutzerdefinierten Benutzeroberflächen, Systemintegrationen, Datenkonvertierungen, benutzerdefinierten Prozessautomatisierungen und benutzerdefinierten Visualisierungen. Sie benötigen fundierte Fachkenntnisse zu Microsoft Power Platform-Diensten und ein grundlegendes Verständnis von DevOps-Methoden für Microsoft Power Platform. Darüber hinaus sollten Sie über Entwicklungserfahrung mit JavaScript, JSON, TypeScript, C#, HTML, .NET, Azure Microsoft 365, RESTful-Webdiensten, ASP.NET und Power BI verfügen.
@@ -26,14 +27,14 @@ summary: >-
   - Das Entwickeln von Integrationen
 
 
-  Weitere Informationen finden Sie in unserem Blogbeitrag: [Es gibt eine neue Zertifizierung: Microsoft Power Platform Developer Associate](https://techcommunity.microsoft.com/t5/microsoft-learn-blog/new-certification-microsoft-power-platform-developer-associate/ba-p/1469335). Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erlangen, könnten Sie:
+  Weitere Informationen finden Sie in unserem Blogbeitrag: [Es gibt eine neue Zertifizierung: Microsoft Power Platform Developer Associate](https://techcommunity.microsoft.com/t5/microsoft-learn-blog/new-certification-microsoft-power-platform-developer-associate/ba-p/1469335). Wenn Sie mehr Erfahrung benötigen, bevor Sie diese Zertifizierung angehen, ziehen Sie Folgendes in Betracht&#58;
 
   - Freiwillig bei einem Microsoft Power Platform-Entwicklungsprojekt mitarbeiten, um praktische Erfahrungen zu sammeln
 
-  - Lernpfade auf Microsoft Learn durcharbeiten
+  - Durchlaufen Sie verfügbare Lernpfade auf Microsoft Learn.
 
-  - Sich zu einem Präsenzschulungskurs anmelden
-subTitle: Kandidaten für die Microsoft Power Platform Developer Associate-Zertifizierung entwerfen, entwickeln, sichern und entstören Power Platform-Lösungen.
+  - Melden Sie sich zu einem Präsenzschulungskurs an.
+subTitle: Hier erfahren Sie, wie Kandidat*innen für die Zertifizierung „Microsoft Power Platform Developer Associate“ Power Platform-Lösungen entwerfen, entwickeln, schützen und Probleme im Zusammenhang mit der Lösung beheben.
 levels:
 - intermediate
 skills:
@@ -85,6 +86,6 @@ resources:
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
-- title: Teilen Ihrer Zertifizierungsbadges
-  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn in LinkedIn oder in Ihrem Lebenslauf hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
